locales: batch replacement/removal of changed/removed strings. added #tags for easier compare tools
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6720 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -10,15 +10,18 @@ foxtrick.AddLeaveConfButton.desc=Adds a 'Leave forum' button to each forum folde
 foxtrick.StarsCounter.desc=Adds the total number of stars to the match lineup page
 foxtrick.RepositionedPlayers.desc=Highlights repositioned players at lineup page
 foxtrick.MoveLinks.desc=Moves the manager's league and flag links to the message header. Note: the 'Show avatar' function in Hattrick must be switched on for this to work!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. freekicks)
+#Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark inserting in the bookmark comment the correspondent code in square bracket: e.g. [cyan] will show the cyan icon. Possible values: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
-foxtrick.YouthSkillNotes.desc=Allows editing youth players' skills and have them displayed just as it is for senior team members
+
 foxtrick.FlipSidesInMatchOrders.desc=Allows quick flipping of pitch sides on match orders page
 foxtrick.FormationBoxInMatchOrders.desc=Displays a box with current formation on match orders page
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
@@ -28,13 +31,13 @@ foxtrick.HTDateFormat.desc=Adds the global HT week and season to the most import
 foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums. In the text boxes you can define an own style (HTML style attribute).
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail)
 foxtrick.ShowMessageButton.desc=Adds a 'Send Message' button to the manager page
 foxtrick.CopyPostID.desc=Copy PostId to clipboard instead of just showing on forum page
 foxtrick.AlltidFlags.desc=Adds Alltid flags and links of both posters on forum page
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's league page, if (hidden) manager avatar is on
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's league page
-foxtrick.LinksCustom.desc=Shows options to add custom links. Instructions: Checking this option adds 'add links' to existing foxtrick link boxes resp. 'remove' to existing own links. Click remove to remove an own link and add to get a dialog box to add a new link and icon. Icon should have 16x16 pixels. Unchecking this module here again hides those options. The custom links, however, are still being displayed.
 foxtrick.LinksLeague.desc=Adds some external links to the league page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
 foxtrick.LinksCountry.desc=Adds some external links to the country page
@@ -76,6 +79,7 @@ foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior team
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Show on all pages
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Displays some helpful information in the player details
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=Fixes the problem of white links on mouseover in Forums
 foxtrick.FixcssProblems.Forum_Post_Header.desc=Fixes the problem of missing date and time on forum post headers
@@ -89,7 +93,9 @@ foxtrick.SkinPlugin.desc=Adds your own CSS skin to hattrick
 foxtrick.CurrencyConverter.desc=Converting a HT currency
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
 foxtrick.TickerColoring.desc=Colorization of the different events displayed in the ticker.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adds a Link to supporter statistics to the main icons
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page
 
 #MatchReportTweaks
@@ -171,9 +177,9 @@ transfercompare_medianprice=Median price
 transfercompare_avgprice=Average price
 
 #YouthSkillNotes
-Notes_about_skills=Notes about skills
-Edit_notes=Edit notes
-Save_notes=Save notes
+
+
+
 
 #Skilltypes
 Playmaking=Playmaking
@@ -195,6 +201,7 @@ foxtrick.menu.removeallfilters=Remove all
 foxtrick.matchlineup.totalstars=Total number of stars:
 foxtrick.shortcuts.matchlineup=Shortcut to the match lineup page
 foxtrick.shortcuts.leaveconference=Leave forum shortcut
+#matchdetail
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
@@ -266,7 +273,7 @@ foxtrick.tweaks.forummessagetemplates=Forum message templates
 foxtrick.tweaks.flagsinplayerbackground=Country flag in player face background
 foxtrick.tweaks.teamlogobelow=Fix for large team logo display
 foxtrick.tweaks.mapofvisitedcountries=Map of visited countries (flag collection page)
-foxtrick.tweaks.sendmessage=Send message
+
 foxtrick.tweaks.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
 foxtrick.linkscustom.addpersonallink=Add personal link
@@ -335,7 +342,6 @@ last_5_ips=Last 5 logins
 Guestbook=Guestbook
 TransferHistory=Transfer history
 LastLineup=Last Lineup
-
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add TeamPopupLinks to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add TeamPopupLinks to user links
 foxtrick.TeamPopupLinks.Team.desc=Link to the Team (for manager links only)
@@ -346,7 +352,6 @@ foxtrick.TeamPopupLinks.Guestbook.desc=Link to the guestbook
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link to the trasfer history
 foxtrick.TeamPopupLinks.LastLineup.desc=Link to the last lineup
 foxtrick.TeamPopupLinks.Coach.desc=Link to the Coach
-
 foxtrick.SkillColoring.desc=Better visualization of skills
 foxtrick.SkillColoring.skill_color.desc=Colorizes skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorizes skills only and not personalities, fan mood etc.
@@ -369,22 +374,23 @@ foxtrick.FlagCollectionToMap.SAmerica=South America
 foxtrick.FlagCollectionToMap.World=World
 
 # Captions and labels
-foxtrick.prefs.MainTab=Main options
-foxtrick.prefs.ShortcutsTab=Shortcuts and Addons
-foxtrick.prefs.PresentationTab=Presentation and Tweaks
-foxtrick.prefs.MatchesTab=Matches
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AboutTab=About
+#tabs
+tab.main=Main options
+tab.shortcutsAndTweaks=Shortcuts and Addons
+tab.presentation=Presentation and Tweaks
+tab.matches=Matches
+tab.forum=Forum
+tab.links=Links
+tab.about=About
 foxtrick.prefs.captionHTLanguage=Language settings
-foxtrick.prefs.captionHTCurrency=Currency settings
 foxtrick.prefs.captionHTDateformat=Dateformat settings
 foxtrick.prefs.captionHTCountry=Country settings
 foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.captionCurrencySymbolTo=Current currency convert to
-foxtrick.prefs.captionCurrencyConverter=Currency converter
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Enable (requires restart)
 foxtrick.prefs.captionAlertSettings=Alert settings
 foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
