--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -6,22 +6,24 @@
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Gør det muligt at ændre indlæg i konferencen til skabeloner der kan bruges senere
 foxtrick.ForumTemplates.DefaultShow.desc=Shows or hides your templates by default
-foxtrick.ForumTemplates.CustomWidth.desc=Use custom width for display of template titles (default 125(px))
 foxtrick.ForumPreview.desc=Allows showing a post preview (Also works for mails)
 foxtrick.AddLeaveConfButton.desc=Tilføjer en  'Forlad konference' knap til hvert konference emne
 foxtrick.StarsCounter.desc=Tilføjer det totale antal af stjerne til kampopstillingssiden
 foxtrick.RepositionedPlayers.desc=Highlights repositioned players at lineup page
 foxtrick.MoveLinks.desc=Flytter managerens liga og flag links, til 'emne bjælken'. Husk: 'Show avatar' funktionen i Hattrick  skal være sat til, for at det virker!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=old style
 foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseperated.desc=old style (separated ind. freekicks)
+#Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
 foxtrick.BookmarkAdjust.desc=Skift ikonet af forbundet til et bogmærke indsættelse i bogmærket kommentere de korrespondent kode i skarpe beslag: es [cyan] vil vise cyan ikon. Mulige værdier: aqua, B, sort, blå, brun, cyan, darkpurple, grøn, idé, lyseblå, lightgreen, orange, pink, lilla, rød, hvid, gulfoxtrick.FoxtrickAlert.desc= Giver dig en 'knurre' anmeldelse om Hattrick nyheder
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment
 foxtrick.FoxtrickAlert.NewMail.desc=Displays a pop-up notification for new mails to you
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
-foxtrick.YouthSkillNotes.desc=Allows editing youth players' skills and have them displayed just as it is for senior team members
+
 foxtrick.FlipSidesInMatchOrders.desc=Allows quick flipping of pitch sides on match orders page
 foxtrick.FormationBoxInMatchOrders.desc=Displays a box with current formation on match orders page
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
@@ -30,11 +32,11 @@ foxtrick.TransferDeadline.desc=Adds an extra line to each searchresult on the tr
 foxtrick.HTDateFormat.desc=Adds the global HT week and season to the most important dates on HT pages
 foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links when you hover over a teamid link
-foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums. In the text boxes you can define an own style (HTML style attribute).
 foxtrick.StaffMarker.own.desc=Personal markers
 foxtrick.StaffMarker.editor.desc=Editors
 foxtrick.StaffMarker.foxtrick-dev.desc=Foxtrick developers and translators
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mails)
 foxtrick.ShowMessageButton.desc=Adds a 'Send Message' button to the manager page
 foxtrick.CopyPostID.desc=PostId alterations.
@@ -43,7 +45,6 @@ foxtrick.ShowForumPrefButton.desc=Shows shortcut to forum preferences on all for
 foxtrick.AlltidFlags.desc=Adds Alltid flags and links of both posters on forum page
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's league page, if (hidden) manager avatar is on
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's league page
-foxtrick.LinksCustom.desc=Shows options to add custom links. Instructions: Checking this option adds 'add links' to existing foxtrick link boxes resp. 'remove' to existing own links. Click remove to remove an own link and add to get a dialog box to add a new link and icon. Icon should have 16x16 pixels. Unchecking this module here again hides those options. The custom links, however, are still being displayed.
 foxtrick.LinksLeague.desc=Adds some external links to the league page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
 foxtrick.LinksCountry.desc=Adds some external links to the country page
@@ -97,6 +98,7 @@ foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior team
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Show on all pages
 foxtrick.FixcssProblems.desc=Fixes some Problems of wrong HT css styles
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Displays some helpful information in the player details
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=Fixes the problem of white links on mouseover in Forums
 foxtrick.FixcssProblems.Forum_Post_Header.desc=Fixes the problem of missing date and time on forum post headers
@@ -113,14 +115,16 @@ foxtrick.SkinPlugin.desc=Adds your own CSS skin to hattrick
 foxtrick.CurrencyConverter.desc=Converting a HT currency
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
 foxtrick.TickerColoring.desc=Colorization of the different events displayed in the ticker.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adds linkicons to main icons
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling
 foxtrick.CopyRatings.desc=Adds a Button to 'Actions' on match report site, so you can copy the ratings to clipboard (HT-table style for forums)
 foxtrick.ContextMenuCopy.desc=Add an option to the context menue to copy ids (teamid,userid...)
 foxtrick.NewMail.desc=Highlight received new mails
 foxtrick.NTConfirmAddRemove.desc=Adds a confirmation box for adding/removing players to/from national squads
-foxtrick.CopyTrainingReport.desc=Adds a Copy Training Report (to be used in Hattrick Youth Club) button to the youth training report page
+foxtrick.CopyYouth.TrainingReport.desc=Adds a Copy Training Report (to be used in Hattrick Youth Club) button to the youth training report page
 foxtrick.PlayerBirthday.desc=Shows last and incoming birthdays in players overview
 foxtrick.AddHtLiveToOngoing.desc=Add HtLive button to ongoing matches
 
@@ -220,9 +224,9 @@ transfercompare_medianprice=Median pris
 transfercompare_avgprice=Gennemsnits pris
 
 #YouthSkillNotes
-Notes_about_skills=Noter om skills
-Edit_notes=Ændre noter
-Save_notes=Gem noter
+
+
+
 
 #Skilltypes
 Playmaking=Spilfordeling
@@ -244,6 +248,7 @@ foxtrick.menu.removeallfilters=Fjern alle
 foxtrick.matchlineup.totalstars=Total antal af stjerner:
 foxtrick.shortcuts.matchlineup=Genvej til kampordre siden
 foxtrick.shortcuts.leaveconference=Forlad konference genvej
+#matchdetail
 foxtrick.matchdetail.midfield=Midtbane
 foxtrick.matchdetail.attack=Angreb
 foxtrick.matchdetail.defence=Forsvar
@@ -316,7 +321,7 @@ foxtrick.tweaks.flagsinplayerbackground=Flag i baggrunden af spillerbilledet
 foxtrick.tweaks.teamlogobelow=Ændring for stort skærmbillede
 foxtrick.playerliststats.stamina=Kondition
 foxtrick.tweaks.mapofvisitedcountries=Kort med besøgte lande (flagsamler side)
-foxtrick.tweaks.sendmessage=Send message
+
 foxtrick.tweaks.selectplayer=Select player
 foxtrick.linkscustom.selecticon=Select icon
 foxtrick.linkscustom.addpersonallink=Add personal link
@@ -331,7 +336,7 @@ foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/) . For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). The tags you only need for rarer dynamic links. With tags the links are dynamically changed using the information of the side you are on. For example http:\/\/alltid.org\/league\/[leagueid] would allways lead you to the alltid side of the league you are just viewing in hattrick. The tags which are available on each site are listed in the select box. You only can use those which are listed on the site where you are adding your custom link. The text which is produced is just a sample template. You can write the tag yourself (with the []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and goto import preferences. Only the preferences present in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
 foxtrick.matches.income=Income:
-foxtrick.newmailtoyou=new mail(s) to you
+
 foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
 foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
@@ -408,38 +413,22 @@ TransferHistory=Transfer history
 LastLineup=Last Lineup
 more=more...
 less=less...
-
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Open teampopups in new tabs
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add TeamPopupLinks to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add TeamPopupLinks to user links
 foxtrick.TeamPopupLinks.Manager.desc=Link to the Manager (for team links only)
-foxtrick.TeamPopupLinksMore.Manager.desc=Link to the Manager (for team links only)
 foxtrick.TeamPopupLinks.Team.desc=Link to the Team (for manager links only)
-foxtrick.TeamPopupLinksMore.Team.desc=Link to the Team (for manager links only
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link to the Team at Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Link to the Team at Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link to the last matches
-foxtrick.TeamPopupLinksMore.Matches.desc=Link to the last matches
 foxtrick.TeamPopupLinks.Players.desc=Link to the players page
-foxtrick.TeamPopupLinksMore.Players.desc=Link to the players page
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link to the last 5 logins
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Link to the last 5 logins
 foxtrick.TeamPopupLinks.Guestbook.desc=Link to the guestbook
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Link to the guestbook
 foxtrick.TeamPopupLinks.SendMessage.desc=Link to Send Message
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Link to Send Message
 foxtrick.TeamPopupLinks.Challenge.desc=Link to Challenge
-foxtrick.TeamPopupLinksMore.Challenge.desc=Link to Challenge
 foxtrick.TeamPopupLinks.Achievements.desc=Link to Achievements
-foxtrick.TeamPopupLinksMore.Achievements.desc=Link to Achievements
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link to the transfer history
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Link to the transfer history
 foxtrick.TeamPopupLinks.LastLineup.desc=Link to the last lineup
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Link to the last lineup
 foxtrick.TeamPopupLinks.Coach.desc=Link to the Coach
-foxtrick.TeamPopupLinksMore.Coach.desc=Link to the Coach
 foxtrick.TeamPopupLinks.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropiate ids.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropiate ids.
 
 foxtrick.SkillColoring.desc=Better visualization of skills
 foxtrick.SkillColoring.skill_color.desc=Colorizes skills
@@ -463,25 +452,26 @@ foxtrick.FlagCollectionToMap.SAmerica=Syd Amerika
 foxtrick.FlagCollectionToMap.World=Verden
 
 # Captions and labels
-foxtrick.prefs.MainTab=Main options
-foxtrick.prefs.ShortcutsTab=Shortcuts and Addons
-foxtrick.prefs.PresentationTab=Presentation and Tweaks
-foxtrick.prefs.MatchesTab=Matches
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AboutTab=About
+#tabs
+tab.main=Main options
+tab.shortcutsAndTweaks=Shortcuts and Addons
+tab.presentation=Presentation and Tweaks
+tab.matches=Matches
+tab.forum=Forum
+tab.links=Links
+tab.about=About
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Please check language and currency settings. Some foxtrick features will not work if those settings are not set appropriately.
 foxtrick.prefs.captionHTLanguage=Language settings
 foxtrick.prefs.captionHTLanguageAutoSet=Check to automatically change language whenever you change your language in Hts preferences
-foxtrick.prefs.captionHTCurrency=Currency settings
 foxtrick.prefs.captionHTDateformat=Dateformat settings
 foxtrick.prefs.captionHTCountry=Country settings
 foxtrick.prefs.captionShowOnStatusBar=Display status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
-foxtrick.prefs.captionCurrencySymbolTo=Current currency convert to
-foxtrick.prefs.captionCurrencyConverter=Currency converter
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Enable (requires restart)
 foxtrick.prefs.captionAlertSettings=Alert settings
 foxtrick.FoxtrickAlert.AlertSlider.desc=Show alert slider
