--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -20,10 +20,12 @@ foxtrick.ForumPreview.desc=Erlaubt eine Vorschau des aktuellen Postings anzuzeig
 foxtrick.AddLeaveConfButton.desc=Hinzufügen des 'Forum verlassen'-Buttons zu jedem Forum
 foxtrick.StarsCounter.desc=Gesamtzahl der Sterne in der Aufstellung anzeigen
 foxtrick.MoveLinks.desc=Liga und Länderflagge im Postingkopf anzeigen
+#AttVsDef
 foxtrick.AttVsDef.desc=Grafischen Teamvergleich im Spielbericht anzeigen
 foxtrick.AttVsDef.oldstyle.desc=Alter Stil
 foxtrick.AttVsDef.newstyle.desc=Neuer Stil
 foxtrick.AttVsDef.oldstyleifkseperated.desc=Alter Style (ind. Freistösse separat)
+#Ratings
 foxtrick.Ratings.desc=Anzeige diverser Ratings im Spielbericht
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (Details)
@@ -47,6 +49,7 @@ foxtrick.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum.
 foxtrick.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 foxtrick.StaffMarker.own.desc=Eigene Aliase
 foxtrick.StaffMarker.flag.desc=Flaggen in den Auswahlboxen anzeigen
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Anzeige einer Linkleiste für das Jugendinternat
 foxtrick.ForumYouthIcons.q.desc=Icon für Zitiern hinzufügen falls nicht vorhaden
 foxtrick.ForumYouthIcons.user_id.desc=Icon für UserID hinzufügen
@@ -62,6 +65,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
 foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPostID.AddCopyIcon.desc=Hinzufügen eines Icons für das Kopieren der ersten PostID
@@ -154,6 +158,7 @@ foxtrick.CustomMedals.desc=Ersetzt die neuen Trophäen mit den Altbekannten
 foxtrick.SeniorTeamShortCuts.desc=Ein Link zum Trainer und letzter Aufstellung wird dem Menü des A-Teams hinzu gefügt
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Nur bei fremden Teams anzeigen
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Auch beim eigenem Team anzeigen
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Anzeige weiterer Informationen bei den Spielerdetails
 foxtrick.ExtendedPlayerDetails.SWD.desc=Anzeige der Verweildauer im Kader: Saisons Wochen Tage
 foxtrick.ExtendedPlayerDetails.SW.desc=Anzeige der Verweildauer im Kader: Saisons Wochen
@@ -194,6 +199,7 @@ foxtrick.SkinPlugin.Skin2.desc=Aktivate Skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Umrechnung der HT-Währung
 foxtrick.MovePlayerStatement.desc=Verschiebt die Spielerkommentare zum Spielgesichter. Sind die Spielergesichter nicht aktiviert, werden die Kommentare nicht angezeigt.
 foxtrick.TickerColoring.desc=Einfärben verschiedener Events im Kopf-Ticker
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Fügt weitere Linkicons zur Linkliste hinzu
 foxtrick.ExtraShortcuts.AddLeft.desc=Wenn aktiv, dann links, ansonsten rechts hinzufügen
 foxtrick.ExtraShortcuts.AddSpace.desc=Vergrössern der Linkleiste
@@ -207,6 +213,7 @@ foxtrick.ExtraShortcuts.HtRadio.desc=Linkicon für Hattrick Radio (Belgium/Nethe
 
 
 foxtrick.ExtraShortcuts.Downtime.desc=Linkicon für Radio downtime (DACHL) (Winamp)
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Kopiert die MatchID in die Zwischenablage beim Klick auf ein Liga/Pokal/Friendly-Icon im Spielplan bzw. im Archiv. Für Supporter funktioniert das auch beim direkten Vergleich zweier Mannschaften (Tabs 'Letzte Spiele' und 'Frühere Duelle').
 foxtrick.HeaderFix.desc=Fixiert beim Scrollen den Kopfbereich und das linke Menü (betrifft auch andere HT-Seiten)
 foxtrick.HeaderFix.FixLeft.desc=Beim Scrollen ebenfalls das linke Menü fixieren
@@ -235,6 +242,7 @@ foxtrick.LeagueNewsFilter.all.desc=Alle News anzeigen
 foxtrick.LeagueNewsFilter.friendlies.desc=Nur internationale Friendlies anzeigen
 foxtrick.LeagueNewsFilter.transfers.desc=Nur Transfers anzeigen
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Nur Aufstellungen anzeigen
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Manager die online sind als erstes auf der Regionen-Seite anzeigen. Achtung! Falls mehr als 100 Manager online sind, so kann die Anzeige sehr verlangsamt werden!
 foxtrick.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
 foxtrick.TeamPopupLinks.UserLinks.desc=TeamPopupLinks den Managerlinks zufügen
@@ -265,17 +273,19 @@ foxtrick.SkillColoring.skill_select.desc = Skills auch in der Transfersuche als 
 foxtrick.SkillColoring.no_skill_links.desc=Entfernt den Linkstyle von Skills
 foxtrick.BackgroundFixed.desc=Statisches Hintergrundbild
 foxtrick.MatchIncome.desc=Zeigt Zuschauereinnahmen unter der Zuschauerverteilung an
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Verstecken unbekannter Skills in der Übersicht der Jugendspieler
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberge unbekannte Skills auf der Jugend-Übersichtsseite
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberge das Wort 'maximal' um mehr Platz zu erhalten wenn die Gesichter angezeigt werden
 foxtrick.SkillTable.desc=Anzeige bekannter Skills als Tabelle
 foxtrick.SkillTable.OtherTeams.desc=Die Skilltable auch für fremde Teams anzeigen
 
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Hervorheben des Siegers bei Pokalspielen
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Sieger in der Pokalübersicht hervorheben, falls es mit einem niedrigerem Pokalranking (Heimteam) antrat
 foxtrick.SkillTranslation.desc=Hinzufügen der englischen Übersetzung von Skills auf der Hilfe-Seite sowie Glosar
 foxtrick.ReadHtPrefs.desc=Automatische Übernahme der HT-Spracheinstellung beim Ändern der Sprache in Hattrick
-foxtrick.OnPagePrefs.desc=Anzeige der Einstellungen für jede Seite in einer kleinen Box.
+#CountryList
 foxtrick.CountryList.desc=Ersetzen der englischen Ländernamen in Selectboxen durch die Originalnamen.
 foxtrick.CountryList.SelectBoxes.desc=Ersetzen der englischen Ländernamen durch ihren eigenen in Select Boxen
 foxtrick.CountryList.TeamPage.desc=Anzeige eines Textlinks zum Land vor den Region- und Ligalinks auf der Ligaseite
@@ -595,6 +605,7 @@ Current_league.abbr=Liga
 Hotlist=Beobachten
 Hotlist.abbr=Beob.
 
+#matchdetail
 foxtrick.matchdetail.midfield=Mittelfeld
 foxtrick.matchdetail.attack=Angriff
 foxtrick.matchdetail.defence=Verteidigung
@@ -646,7 +657,7 @@ notify.newForumMessage=Es gibt %s neue Forenantworte(n) an dich.
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick Schnelleinstellungen
+
 foxtrick.modules_allpages=globale Module
 HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt: %s.
 
@@ -921,7 +932,8 @@ status.disabled=abgeschaltet
 
 prefs.screenshot=Screenshot
 # tabs in preferences page
-tab.Main=Grundeinstellungen
+#tabs
+tab.main=Grundeinstellungen
 tab.informationAggregation=Information
 tab.shortcutsAndTweaks=Shortcuts & Erweiterungen
 tab.presentation=Darstellung & Tweaks
@@ -942,6 +954,7 @@ pref.printDateFormat=Datumsformat der Ausgabe
 foxtrick.prefs.captionShowOnStatusBar=FoxTrick in der Statusbar anzeigen
 foxtrick.prefs.captionCleanupBranch=Gespeicherte Daten
 foxtrick.prefs.captionLoadSavePrefs=Einstellungen exportieren oder laden
+#statusbarpref
 foxtrick.prefs.statusbarpref=Aktivieren (Neustart erforderlich)
 foxtrick.prefs.labelCleanupBranch=FoxTrick-Einstellungen zurücksetzen (nur die normalen Einstellungen, persönliche Anpassungen werden nicht zurückgesetzt, Neustart erforderlich)
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
