--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -10,8 +10,8 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=Añade un atajo a la alineación dentro de el historial de partidos de un jugador
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=Resalta al jugador en la alineación con un amarillo diferente, cuando se usa el atajo dentro de la página de detalles del jugador, reemplazando el resaltado por defecto de Hattrick.
+foxtrick.LineupShortcut.desc=Añade un atajo a la alineación dentro de el historial de partidos de un jugador
+foxtrick.LineupShortcut.HighlightPlayer.desc=Resalta al jugador en la alineación con un amarillo diferente, cuando se usa el atajo dentro de la página de detalles del jugador, reemplazando el resaltado por defecto de Hattrick.
 foxtrick.SmallerPages.desc=Reduce el tamaño de algunas páginas para que se adapte a patallas pequeñas
 foxtrick.SmallerPages.ReduceBid.desc=Mueve la subasta a un lado de las habilidades y corta todas las líneas dejando solo numeros (Como subasta actual y hora)
 foxtrick.ForumTemplates.desc=Permite convertir mensajes de la conferencia en plantillas para su uso posterior (Funciona también para correos, tickets, libros de visita, editoriales)
@@ -20,10 +20,12 @@ foxtrick.ForumPreview.desc=Permite mostrar una vista previa del mensaje de la co
 foxtrick.AddLeaveConfButton.desc=Añadir un botón 'Abandonar Conferencia' a cada carpeta de la conferencia
 foxtrick.StarsCounter.desc=Añadir el número total de estrellas en la página de alineación del partido
 foxtrick.MoveLinks.desc=Mover los enlaces de liga y bandera del país a la cabecera del mensaje en la conferencia. Nota: La opción de 'Mostrar avatar' debe estar activada en las Preferencias de la Conferencia para que funcione!
+#AttVsDef
 foxtrick.AttVsDef.desc=Añadir la Comparación Ataque/Defensa a la página de partidos
 foxtrick.AttVsDef.oldstyle.desc=Estilo antiguo
 foxtrick.AttVsDef.newstyle.desc=Estilo nuevo
 foxtrick.AttVsDef.oldstyleifkseparated.desc=Estilo antiguo (tiros indirectos reparados)
+#Ratings
 foxtrick.Ratings.desc=Añadir calificaciones en la página del partido
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detallado)
@@ -34,6 +36,7 @@ foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Cambiar el icono asociado a favoritos, insertando en el comentario del favorito el código correspondiente entre corchetes: Ej. [cyan] mostrará el icono de color 'cyan'. Posible valores: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Muestra la mediana del precio en la página de comparación de transferencias
 foxtrick.FlagCollectionToMap.desc=Muestra un mapa con los países de los cuales has coleccionado sus banderas para cada categoría
 foxtrick.TransferSearchFilters.desc=Permite el uso de filtros de búsqueda dentro de la página de transferencias.
@@ -47,6 +50,7 @@ foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la 
 foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 foxtrick.StaffMarker.own.desc=Marcadores personales
 foxtrick.StaffMarker.flag.desc=Añade banderas a los usuarios dentro de la caja de selección
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
 foxtrick.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
 foxtrick.ForumYouthIcons.user_id.desc=Añade un icono para el ID del mánager
@@ -62,6 +66,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Añade un icono para el ID de la liga
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agranda las cajas de texto para mejorar la escritura
 foxtrick.ForumYouthIcons.pre.desc=Añade un icono para el pre-formato del foro
 foxtrick.ForumYouthIcons.table.desc=Añade un icono para tabla
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags
 foxtrick.CopyPostID.desc=Enlace para copiar el PostId
 foxtrick.CopyPostID.AddCopyIcon.desc=Añade un icono para copiar el ID antes del primer postID
@@ -153,6 +158,7 @@ foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick,
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Mostrar en todas las páginas
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Muestra información útil en la página de detalles del jugador
 foxtrick.ExtendedPlayerDetails.SWD.desc=Muestra la duración del contrato en temporadas - semanas - días
 foxtrick.ExtendedPlayerDetails.SW.desc=Muestra la duración del contrato en temporadas - semanas
@@ -193,6 +199,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activar skin 2
 foxtrick.CurrencyConverter.desc=Convierte una moneda/divisa dentro de Hattrick
 foxtrick.MovePlayerStatement.desc=Coloca las declaraciones del jugador en la imagen del mismo. Si las imágenes estan deshabilitadas, las declaraciones se eliminaran.
 foxtrick.TickerColoring.desc=Los diferentes eventos despelagados en la sección de noticias se verá coloreado.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Añade un enlace a las Estadísticas de Supporter en los iconos principales
 foxtrick.ExtraShortcuts.AddLeft.desc=Seleccionar para añadir el icono a la izquierda, dejar sin seleccionar para añadirlo a la derecha
 foxtrick.ExtraShortcuts.AddSpace.desc=Aumentar espacio para iconos (atajos)
@@ -206,6 +213,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
 foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
@@ -221,12 +229,10 @@ foxtrick.ContextMenuCopy.Table.desc=Añade una opción para copiar una tabla en 
 foxtrick.NewMail.desc=Resalta los correos nuevos recibidos
 foxtrick.NewMail.NotifyMail.desc=Muestra una notificación si es que hay nuevos correos para ti
 foxtrick.NewMail.NotifyForum.desc=Muestra una notificación si es que hay nuevos mensajes en el foro para ti
-foxtrick.CopyTrainingReport.desc=Añade un boton para copiar el Reporte de entrenamiento en la página de entrenamiento juvenil.
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Abrir Hattrick-youthclub.org en una nueva pestaña después de copiar.
-foxtrick.CopyScoutReport.desc=Añade un boton para copiar el Reporte del scout en la página del jugador juvenil.
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Abrir Hattrick-youthclub.org en una nueva pestaña después de copiar.
-foxtrick.CopyPlayerSource.desc=Añade un boton para copiar el códgio fuente (para ser usado en Hattrick-youthclub.org) dentro de la página del jugador juvenil.
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Abrir Hattrick-youthclub.org en una nueva pestaña después de copiar.
+foxtrick.CopyYouth.TrainingReport.desc=Añade un boton para copiar el Reporte de entrenamiento en la página de entrenamiento juvenil.
+foxtrick.CopyYouth.ScoutComment.desc=Añade un boton para copiar el Reporte del scout en la página del jugador juvenil.
+foxtrick.CopyYouth.PlayerSource.desc=Añade un boton para copiar el códgio fuente (para ser usado en Hattrick-youthclub.org) dentro de la página del jugador juvenil.
+
 foxtrick.PlayerBirthday.desc=Muestra los ultimos y próximos cumpleaños en la Vista general de los jugadores
 foxtrick.MovePlayerSelectbox.desc=Mueve la caja de selección de jugadores arriba en la página del jugador
 foxtrick.SeasonStats.desc=Muestra algunas estadísticas en la página de Archivo de partidos
@@ -235,6 +241,7 @@ foxtrick.LeagueNewsFilter.all.desc=Mostrar todas la noticias
 foxtrick.LeagueNewsFilter.friendlies.desc=Mostrar solo amistosos internacionales y cambio de entrenador
 foxtrick.LeagueNewsFilter.transfers.desc=Mostrar solo transferencias
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostrar solo cambios en la alineación
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Mueve la lista de managers en linea en la región. Precaución! Esto puede volverse muy lento si la lista de managers en línea es mayor a 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Añade ventana de enlaces a los enlaces del equipo
 foxtrick.TeamPopupLinks.UserLinks.desc=Añade ventana de enlaces a los enlaces al usuario
@@ -265,16 +272,18 @@ foxtrick.SkillColoring.skill_select.desc=Mostrar números en la página de trans
 foxtrick.SkillColoring.no_skill_links.desc=Esconde el subrayado y fuente color verde dadas por los HTs
 foxtrick.BackgroundFixed.desc=Imagen de fondo estática
 foxtrick.MatchIncome.desc=Ingreso del partido dentro del reporte del partido
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Más espacio en la página de jugadores juveniles
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Oculta las habilidades desconocidas de los juveniles, dentro de la página de jugadores
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Oculta la palabra 'máximo' para ganar más espacio, dentro de la página de jugadores juveniles, especialmente si las caras estan habilitadas
 foxtrick.SkillTable.desc=Muestra las habilidades de los jugadores como tabla
 foxtrick.SkillTable.OtherTeams.desc=Habilitar para otros equipos
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Resalta los equipos ganadores dentro de la página de Partidos de Copa.
 foxtrick.HighlightCupwins.highlight_outsider.desc=Resalta el resutado si el equipo local gana.
 foxtrick.SkillTranslation.desc=Añade traducción al inglés para las habilidades en la página de ayuda/denominaciones
 foxtrick.ReadHtPrefs.desc=Automáticamente cambia el idioma de Foxtrick, cada vez que se cambien las preferencias de idioma de Hattrick
-foxtrick.OnPagePrefs.desc=Muestra una caja expandible en la barra lateral, para cambiar las preferencias de los módulos que alteran la página actual
+#CountryList
 foxtrick.CountryList.desc=Modificaciones al nombre de los países
 foxtrick.CountryList.SelectBoxes.desc=Reemplaza los nombres en inglés en las cajas de selección, por sus nombres originales
 foxtrick.CountryList.TeamPage.desc=Muestra un enlace de texto a la liga, antes de la región y serie en la página del equipo
@@ -584,6 +593,7 @@ Current_club.abbr=Club
 Current_league=Liga Actual
 Current_league.abbr=Liga
 
+#matchdetail
 foxtrick.matchdetail.midfield=Mediocampo
 foxtrick.matchdetail.attack=Ataque
 foxtrick.matchdetail.defence=Defensa
@@ -635,7 +645,7 @@ notify.newForumMessage=Has recibido %s nuevo(s) mensaje(s) en el foro.
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=Preferencias FoxTrick en la página
+
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
 HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es: %s.
 
@@ -892,6 +902,7 @@ status.disabled=inhabilitado
 prefs.screenshot=Captura de pantalla
 
 # tabs in preferences page
+#tabs
 tab.main=Principal
 tab.informationAggregation=Información adicional
 tab.shortcutsAndTweaks=Atajos y ajustes
@@ -913,6 +924,7 @@ pref.printDateFormat=Date format for printing
 foxtrick.prefs.captionShowOnStatusBar=Icono de barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias Guardadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar o Importar preferencias
+#statusbarpref
 foxtrick.prefs.statusbarpref=Mostrar icono de Foxtrick en la barra de estado (require reiniciar)
 foxtrick.prefs.labelCleanupBranch=Restaurar valores predeterminados (Solo preferencias, sin ajustes personales. Requiere reiniciar.)
 foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos
