--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -14,10 +14,12 @@ foxtrick.ForumPreview.desc=Mahdollistaa viestin esikatselemisen (Toimii myös po
 foxtrick.AddLeaveConfButton.desc=Lisää 'Jätä foorumi' -nappi jokaisen foorumin kansioon
 foxtrick.StarsCounter.desc=Lisää kokonaistähtimäärän ottelun kokoonpanosivulle
 foxtrick.MoveLinks.desc=Siirrä managerin sarja- ja lippu linkit viestin otsikkoon. Huomio: 'Näytä avatar' toiminto täytyy olla päällä Hattrickissä tämän toimiakseen!
+#AttVsDef
 foxtrick.AttVsDef.desc=Lisää Hyökkäys/Puolustus vertailut otteluraporttisivulle
 foxtrick.AttVsDef.oldstyle.desc=Vanha tyyli
 foxtrick.AttVsDef.newstyle.desc=Uusi tyyli
 foxtrick.AttVsDef.oldstyleifkseparated.desc=Vanha tyyli (eristetty epäs. vapaapotkut)
+#Ratings
 foxtrick.Ratings.desc=Lisää arvostelut otteluraporttisivulle
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (tarkennettu)
@@ -28,6 +30,7 @@ foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Kirjanmerkkiin liittyvän ikonin väriä voi vaihtaa lisäämällä linkin kirjanmerkin lisätietoihin vastaavan värikoodin esim. [cyan] joka näyttää ikonin syaanin värisenä. Mahdolliset arvot: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Näyttää mediaani siirtohinnan siirtovertailussa
 foxtrick.FlagCollectionToMap.desc=Näyttää maailmankartan sisältäen jokaisen keräämäsi maan lipun kategorioissa
 foxtrick.TransferSearchFilters.desc=Mahdollistaa hakusuodattimien tallennuksen siirtolistalla
@@ -37,11 +40,11 @@ foxtrick.HTDateFormat.desc=Lisää tärkeimmille HT sivujen päivämäärille gl
 foxtrick.HTDateFormat.LocalSeason.desc=Esitä globaalin kauden sijaan paikallinen kausi
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Käytä mallin mukaista kompensointia asettaaksesi ensimmäisen päivän viikosta (0 = maanantai/oletus, -2 = lauantai)
 foxtrick.TeamPopupLinks.desc=Tuo esiin pienen pop-up ikkunan pikalinkeillä joukkueenID ja käyttäjänID linkkien kohdalla.
-foxtrick.TeamPopupLinksMore.desc=Näyttää 'lisää...' linkin JoukkuePopup linkkilaatikossa, joka paljastaa 'lisää' oikopolkuja.
 foxtrick.StaffMarker.desc=Merkkaa virkamiesten nimimerkit foorumilla ja joukkueen sivulla.
 foxtrick.StaffMarker.manager.desc=Merkkaa virkamiesten nimimerkit seurasivulla.
 foxtrick.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
 foxtrick.StaffMarker.flag.desc=Lisää liput käyttäjille valikkolaatikossa
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Tuo linkkipalkin juniorijoukkuetta varten foorumiin (Toimii myös posteille)
 foxtrick.ForumYouthIcons.q.desc=Lisää ikoni lainaus-tagille jos puuttuu
 foxtrick.ForumYouthIcons.user_id.desc=Lisää käyttäjäID ikoni
@@ -58,6 +61,7 @@ foxtrick.ForumYouthIcons.enlarge_input.desc=Laajentaa tekstilaatikkoa paremman k
 foxtrick.ForumYouthIcons.pre.desc=Lisää ikoni foorumin 'pre' formaatille
 foxtrick.ForumYouthIcons.table.desc=Lisää ikoni taulukolle. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
 foxtrick.ShowMessageButton.desc=Lisää 'Lähetä Viesti' toiminto managerisivulle
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Korvaa FoxTrick HT-ML-Tagit HTML-Tageihin (i.E. 'pre' elementti)
 foxtrick.CopyPostID.desc=ViestiId muutokset. Helpottaa foorumissa, kun haluat nopeasti kopioida ViestiIDn.
 foxtrick.CopyPostID.AddCopyIcon.desc=Lisää ikoni ViestiIDn kopioimista varten (Foorumissa viestinumeron vieressä)
@@ -147,6 +151,7 @@ foxtrick.CustomMedals.desc=Korvaa Hattrickin uudet mitalit vanhan tyylin mitalei
 foxtrick.SeniorTeamShortCuts.desc=Lisää edustusjoukkueen sivulle linkit viimeisimpään kokoonpanoon ja valmentajalle.
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Näytä linkit vain muiden joukkueiden sivuilla
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Näytä linkit kaikilla sivuilla, mukaanlukien oman joukkueeni sivulla
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Esittää jotain hyödyllistä tietoa pelaajan henkilötieto-sivulla (liittyen pelaajan joukkueessa olon pituuteen)
 foxtrick.ExtendedPlayerDetailsWage.desc=Optiot, jotka näyttää palkan ilman bonusta ja/tai vuosipalkan
 foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Esittää palkan ilman bonusta
@@ -187,6 +192,7 @@ foxtrick.SkinPlugin.Skin2.desc=Aktivoi skini 2 (linkki tyyli)
 foxtrick.CurrencyConverter.desc=Muuntaa HT valuutan
 foxtrick.MovePlayerStatement.desc=Siirtää pelaajan puheen eli lausunnon pelaajakuvaan. Jos kuvat on estetty, lausunnot poistetaan.
 foxtrick.TickerColoring.desc=Tickerin eli uutiskirjoittimen värjääminen erilaisien tapahtumien mukaan eri väreillä.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Lisää oikopolkuja etusivun pääikoneihin
 foxtrick.ExtraShortcuts.AddLeft.desc=Ruksi lisääksesi ikonit vasemmalle, ruksittamatta ikonit siirtyvät oikealle puolelle.
 foxtrick.ExtraShortcuts.AddSpace.desc=Kasvata tilaa oikopolku-ikoneille
@@ -199,6 +205,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Kopioi otteluIDn, kun klikkaat sarja/cup/ystävyys ikonia ottelut tai otteluhistoria -sivulla
 foxtrick.HeaderFix.desc=Korjaa otsakkeen rullauksen aikana (vaikuttaa myös muilla HT-sivuilla)
 foxtrick.HeaderFix.FixLeft.desc=Säätää myös alavalikon rullauksen aikana
@@ -214,12 +221,10 @@ foxtrick.ContextMenuCopy.Table.desc=Valinta kopioidaksesi taulukon HT-ML -muodos
 foxtrick.NewMail.desc=Korostaa saapuneet viesit ja foorumiviestit
 foxtrick.NewMail.NotifyMail.desc=Näytä huomautus, jos sinulle on uusia viestejä
 foxtrick.NewMail.NotifyForum.desc=Näytä huomautus, jos sinulle on uusia foorumivastauksia
-foxtrick.CopyTrainingReport.desc=Mahdollistaa harjoitusraportin kopioimisen. Eli lisää Kopioi Harjoitusraportti (käytettävissä mm. Hattrick Youth Clubissa) painike juniorijoukkueen harjoittelusivulle.
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Avaa hattrick-youthclub.org -sivu uudessa välilehdessä kopioimisen jälkeen
-foxtrick.CopyScoutReport.desc=Mahdollistaa skoutin raportin kopioimisen. (käytetään hattrick youthclubissa mm.) Eli lisää painike junioripelaajan sivulle skouttiraportin kopioimista varten.
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Avaa hattrick-youthclub.org -sivu uudessa välilehdessä kopioimisen jälkeen
-foxtrick.CopyPlayerSource.desc=Lisää 'kopioi HTML-lähdekoodi' -painike junioripelaajan sivulle (käytetään Hattrick Youth Clubissa)
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Avaa hattrick-youthclub.org -sivu uudessa välilehdessä kopioimisen jälkeen
+foxtrick.CopyYouth.TrainingReport.desc=Mahdollistaa harjoitusraportin kopioimisen. Eli lisää Kopioi Harjoitusraportti (käytettävissä mm. Hattrick Youth Clubissa) painike juniorijoukkueen harjoittelusivulle.
+foxtrick.CopyYouth.ScoutComment.desc=Mahdollistaa skoutin raportin kopioimisen. (käytetään hattrick youthclubissa mm.) Eli lisää painike junioripelaajan sivulle skouttiraportin kopioimista varten.
+foxtrick.CopyYouth.PlayerSource.desc=Lisää 'kopioi HTML-lähdekoodi' -painike junioripelaajan sivulle (käytetään Hattrick Youth Clubissa)
+
 foxtrick.PlayerBirthday.desc=Näytä tulevat ja menneet syntymäpäivät pelaajien yleiskatsauksessa.
 foxtrick.MovePlayerSelectbox.desc=Siirtää pelaaja-valikkolaatikon ylös pelaajan sivulla
 foxtrick.SeasonStats.desc=Näyttää joitain tilastoja otteluhistoria sivuilla
@@ -228,17 +233,20 @@ foxtrick.LeagueNewsFilter.all.desc=Näytä kaikki uutiset
 foxtrick.LeagueNewsFilter.friendlies.desc=Näytä vain kansainväliset ystävyysottelu- ja valmentajan vaihto -uutiset
 foxtrick.LeagueNewsFilter.transfers.desc=Näytä vain siirtouutiset
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Näytä vain kokoonpanomuutokset
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Siirtää sisäänkirjautuneiden managerien määrän ylös alue-sivulla. Varoitus! Tästä ominaisuudesta tulee hidas, jos sisäänkirjautuneiden managerien lista on yli 100.
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Piilota tuntemattomat taidot ja/tai ´maksimi´ -sana junioripelaajasivulla
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Piilota junioripelaajien tuntemattomat taidot
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Piilota sana 'maksimi' saadaksesi lisää tilaa.
 foxtrick.SkillTable.desc=Näytä pelaajien taidot taulukossa
 foxtrick.SkillTable.OtherTeams.desc=Salli muille joukkueille
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Korostaa ottelun voittaneet joukkueet Cup Ottelut -sivulla
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Korosta tulos, jos ottelun voittaa joukkue jolla on matalampi ranking
 foxtrick.SkillTranslation.desc=Lisää englannin kielen sanalliset arvot taitoihin jne. ohje/arvot -sivulle
 foxtrick.ReadHtPrefs.desc=Vaihda kieli automaattisesti vastaamaan samaa kieltä HT-kielen kanssa, aina kun vaihdan kieltä HT-asetuksista.
-foxtrick.OnPagePrefs.desc=Näyttää asetuslaatikon oikean tai vasemmanpuoleisen sivupalkin pohjalla, joka mahdollistaa kyseisiä sivuja koskevien Foxtrick moduulien hylkäämisen/aktivoimisen.
+#CountryList
 foxtrick.CountryList.desc=Muokkauksia maiden nimille
 foxtrick.CountryList.SelectBoxes.desc=Korvaa englanninkieliset maiden nimet niiden alkuperäisillä nimillä pudotusvalikoissa
 foxtrick.CountryList.TeamPage.desc=Esittää alueen ja sarjan vieressä tekstilinkin sarjaan/divisioonaan seuran sivulla
@@ -261,7 +269,6 @@ foxtrick.LeagueAndMatchChat.ChatNick.desc=Valitse Chat -nimimerkkisi
 foxtrick.RapidId.desc=Lisää kätevä syötelaatikko sivun yläpuolelle katsellaksesi joukkuetta, pelaajaa, jne. ID:llä
 foxtrick.YouthSeriesEstimation.desc=Tuloshaun taulussa, arvioi sarjatauolla olevien juniorisarjojen otteluiden aloitusajan.
 foxtrick.LocalTime.desc=Näytä valinnainen paikallinen aika HT-ajan sijaan. Voit vaihtaa aikaa näiden kahden valinnan välillä klikkaamalla kelloa.
-foxtrick.LocalTime.DefaultLocal.desc=Näytä paikallinen aika oletuksena
 foxtrick.ForumThreadAutoIgnore.desc=Ignoroi automaattisesti foorumitopicit valituilla tageilla (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tageista, eg: NT, idea, Bug. Pilkku eristetty, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
@@ -294,8 +301,8 @@ foxtrick.ShowLineupSet.Winning.desc=Korosta voittavat joukkueet
 
 # IN-GAME STRINGS. translate first
 
-foxtrick.CrossTable.allway_show_cross.desc=Näytä poikittainen taulukko aina
-foxtrick.CrossTable.allway_show_graph.desc=Näytä sarjagraafi aina
+
+
 CrossTable.graph=Kausigraafi
 CrossTable.table=Kausitaulukko (poikittainen)
 
@@ -560,6 +567,7 @@ Current_league.abbr=Sarja
 #Skills
 weak=heikko
 
+#matchdetail
 foxtrick.matchdetail.midfield=Keskikenttä
 foxtrick.matchdetail.attack=Hyökkäys
 foxtrick.matchdetail.defence=Puolustus
@@ -582,8 +590,6 @@ foxtrick.tlwarning=Hattrick haluaa sinun asettavan siirtolistan pelaajia varten.
 foxtrick.MatchIncome.desc=Ottelun ansiotulot otteluraportissa
 foxtrick.conferences.signaturetoggle=Allekirjoitus
 foxtrick.conferences.markunread=Merkkaa lukemattomat tästä
-foxtrick.tweaks.sendmessage=Lähetä viesti
-foxtrick.tweaks.sendmessageofficial=Huomaa että kaikki henkilökunnalle käsiteltävät ongelmat ja kysymykset tulee lähettää yhteydenottolomakkeen kautta <a class='inner' href='/Help/Contact.aspx'>staff pages</a>. Sisäistä viestijärjestelmää <b>ei</b> tule käyttää henkilökunnan käsiteltäväksi lähetettävien ongelmien varten.
 foxtrick.tweaks.selectplayer=Valitse pelaaja
 foxtrick.linkscustom.selecticon=Valitse ikoni
 foxtrick.linkscustom.addpersonallink=Lisää henkilökohtainen linkki
@@ -614,7 +620,7 @@ notify.newForumMessage=Sinulle on %s uusi foorumiviesti(ä).
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick OnPagePrefs
+
 foxtrick.modules_allpages=Kaikki moduulit
 HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxtrickin pääasetuksissa. Paikallinen Foxtrick-kielesi on nyt: %s.
 
@@ -693,46 +699,26 @@ less=vähemmän...
 TeamPopupLinks.prefsCaption=Linkki asetukset
 TeamPopupLinks.ShowByDefault=Näytä oletuksena
 TeamPopupLinks.ShowOnMore=Näytä lisää
-
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Avaa joukkuepopupit uusina välilehtinä
 foxtrick.TeamPopupLinks.TeamLinks.desc=Lisää JoukkuePopupLinkit joukkueID linkkeihin
 foxtrick.TeamPopupLinks.UserLinks.desc=Lisää JoukkuePopupLinkit käyttäjäID linkkeihin
 foxtrick.TeamPopupLinks.Manager.desc=Linkki Managerille (vain joukkueID linkeille)
-foxtrick.TeamPopupLinksMore.Manager.desc=Linkki Managerille (vain joukkueID linkeille)
 foxtrick.TeamPopupLinks.Team.desc=Linkki Joukkueeseen (vain manageri linkeille)
-foxtrick.TeamPopupLinksMore.Team.desc=Linkki Joukkueeseen (vain manageri linkeille)
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Linkki Joukkueeseen Alltidissa
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Linkki Joukkueeseen Alltidissa
 foxtrick.TeamPopupLinks.Matches.desc=Linkki viimeisimpiin otteluihin
-foxtrick.TeamPopupLinksMore.Matches.desc=Linkki viimeisimpiin otteluihin
 foxtrick.TeamPopupLinks.Players.desc=Linkki pelaajasivulle
-foxtrick.TeamPopupLinksMore.Players.desc=Linkki pelaajasivulle
 foxtrick.TeamPopupLinks.last_5_ips.desc=Linkki viiteen viimeisimpään kirjautumiseen
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Linkki viiteen viimeisimpään kirjautumiseen
 foxtrick.TeamPopupLinks.Guestbook.desc=Linkki vieraskirjaan
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Linkki vieraskirjaan
 foxtrick.TeamPopupLinks.SendMessage.desc=Linkki Lähetä Viesti
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Linkki Lähetä Viesti
 foxtrick.TeamPopupLinks.Challenge.desc=Linkki Haastamiseen
-foxtrick.TeamPopupLinksMore.Challenge.desc=Linkki Haastamiseen
 foxtrick.TeamPopupLinks.Achievements.desc=Linkki Saavutuksiin
-foxtrick.TeamPopupLinksMore.Achievements.desc=Linkki Saavutuksiin
 foxtrick.TeamPopupLinks.TransferHistory.desc=Linkki siirtohistoriaan
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Linkki siirtohistoriaan
 foxtrick.TeamPopupLinks.TeamHistory.desc=Linkki joukkueen historiaan
-foxtrick.TeamPopupLinksMore.TeamHistory.desc=Linkki joukkueen historiaan
 foxtrick.TeamPopupLinks.LastLineup.desc=Linkki viimeisimpään kokoonpanoon
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Linkki viimeisimpään kokoonpanoon
 foxtrick.TeamPopupLinks.NextMatch.desc=Linkki seuraavaan otteluun
-foxtrick.TeamPopupLinksMore.NextMatch.desc=Linkki seuraavaan otteluun
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Lisää seuraavan ottelun HT-Liveen
-foxtrick.TeamPopupLinksMore.AddNextMatch.desc=Lisää seuraavan ottelun HT-Liveen
 foxtrick.TeamPopupLinks.YouthMatches.desc=Linkki juniori otteluihin
-foxtrick.TeamPopupLinksMore.YouthMatches.desc=Linkki juniori otteluihin
 foxtrick.TeamPopupLinks.Coach.desc=Linkki valmentajalle
-foxtrick.TeamPopupLinksMore.Coach.desc=Linkki valmentajalle
 foxtrick.TeamPopupLinks.CustomLink.desc=Omat linkit. Tagit [userid] ja [teamid] korvataan asianmukaisella IDllä.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Omat linkit. Tagit [userid] ja [teamid] korvataan asianmukaisella IDllä.
 
 foxtrick.SkillColoring.desc=Visualisoi taidot, arvostelut..
 foxtrick.SkillColoring.skill_color.desc=Värjää taidot ja vertailut
@@ -909,6 +895,7 @@ status.disabled=lamautettu
 prefs.screenshot=Kuvankaappaus
 
 # tabs in preferences page
+#tabs
 tab.main=Pääasetukset
 tab.informationAggregation=Tietojen yhdistäminen
 tab.shortcutsAndTweaks=Oikopolut ja Lisäosat
@@ -921,24 +908,24 @@ tab.about=Lisätietoa
 tab.changes=Muutokset
 tab.help=Apua
 
-foxtrick.prefs.links=Kysymysfoorumit ja apusivut
-foxtrick.prefs.portal=Foxtrick-portaali
-foxtrick.prefs.external_forum=Foxtrick-foorumi
-foxtrick.prefs.hattrick_forum=Foxtrick-foorumi (Hattrick)
-foxtrick.prefs.commented_screenshots=Kommentoidut kuvankaappaukset
-foxtrick.prefs.hex_color_editor=Heksaväri-muokkaaja
+
+
+
+
+
+eksaväri-muokkaaja
 foxtrick.prefs.PrefDefaultWarningLabel=Esiasetusten varoitus
 foxtrick.prefs.PrefDefaultWarningText=Tarkistithan kieli ja valuutta -asetukset? Jotkin Foxtrickin ominaisuuksista ei toimi, jos kyseisiä asetuksia ei olla asetettu täsmällisesti.
 foxtrick.prefs.basicPreferences=Perusasetukset
 foxtrick.prefs.captionHTLanguage=Kieli
-foxtrick.prefs.captionHTCurrency=Valuutta
 foxtrick.prefs.captionHTDateformat=Päivämäärän muoto
 foxtrick.prefs.captionHTCountry=Maa
 foxtrick.prefs.captionShowOnStatusBar=Tilapalkki-ikoni
 foxtrick.prefs.captionCleanupBranch=Tallennetut asetukset
 foxtrick.prefs.captionLoadSavePrefs=Viedä tai tuoda -asetukset
-foxtrick.prefs.captionCurrencySymbolTo=Muunna nykyinen valuutta
-foxtrick.prefs.captionCurrencyConverter=Valuuttamuunnin
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Näytä Foxtrick-ikoni tilapalkissa (vaatii uudelleenkäynnistyksen)
 foxtrick.prefs.labelCleanupBranch=Palauta oletusasetukset (Vain asetukset, ei henkilökohtaisia asetuksia. Vaatii uudelleenkäynnistyksen.)
 foxtrick.prefs.labelDisableAll=Kytke kaikki moduulit pois päältä
@@ -949,8 +936,8 @@ foxtrick.prefs.saveNotice=Kopioi sisältö tekstialueessa ja tallenna tiedostona
 foxtrick.prefs.labelLoadPrefs=Tuo asetukset (Nykyiset asetukset saattaa olla päällekirjoitettu. Vaatii uudelleenkäynnistyksen)
 foxtrick.prefs.loadNotice=Liitä tallentamasi asetukset tekstialueessa ja paina "tuo" tuodaksesi asetuksesi.
 foxtrick.prefs.captionDisableSettings=Lamauta Foxtrick
-foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick MyHT
-foxtrick.prefs.labelFoxtrickFirstRun=Valitse versio mistä haluaisit nähdä vielä uudelleen mitä on muuttunut (Muutokset näkyvät MyHTlla eli HTn etusivulla)
+
+
 foxtrick.prefs.stagepref=Estä Foxtrick Stage-serverillä
 foxtrick.prefs.disableTemporaryLabel=Estä Foxtrick väliaikaisesti
 foxtrick.prefs.saved=Asetukset tallennettu!
