--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -10,15 +10,18 @@ foxtrick.AddLeaveConfButton.desc=					Foeget in 'Ferlit foarum'-knop ta oan elts
 foxtrick.StarsCounter.desc=							Foeget it totaal oantal stjerren ta oan de wedstriidopstelling
 foxtrick.RepositionedPlayers.desc=					Markearret reposisjonearre spilers yn de wedstriidopstelling
 foxtrick.MoveLinks.desc=							Ferpleatst kompetysje en flagkoppelings nei berjochtkop. Let op: de 'Toan avatar'-funskje fan Hattrick moat hjirfoar oan stean!
+#AttVsDef
 foxtrick.AttVsDef.desc=								Foeget oanfal/ferdigeningsfergeliking ta oan de wedstriidside
 foxtrick.AttVsDef.oldstyle.desc=					âlde styl
 foxtrick.AttVsDef.newstyle.desc=					nije  styl
 foxtrick.AttVsDef.oldstyleifkseperated.desc=		âlde styl (aparte ynd. frije trapen)
+#Ratings
 foxtrick.Ratings.desc=								Foeget wurdearrings ta oan de wedstriidside
 foxtrick.BookmarkAdjust.desc=						Feroaret it ikoan by in blêdwizer atst de byhearrende koade yn it kommintaar fan de blêdwizer setst: [cyan] toant bygelyks it cyaankleurde ikoan. Mooglike weardes: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=						Toant in popupwarskôging foar de Hattrick-nijsbalk, sels atst op dat stuit eat oars dochst
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=					Toant mediaanpriis yn oerstapfergelyk
-foxtrick.YouthSkillNotes.desc=						Soarget foar bewurkjen fan jeugdspilerfeardigens en it toanen lykas by senioaren
+
 foxtrick.FlipSidesInMatchOrders.desc=				Soarget foar snel spegeljen fan de opstelling op it wedstriidoarderformulier
 foxtrick.FormationBoxInMatchOrders.desc=			Toant in blok mei de formaasje op it wedstriidoarderformulier
 foxtrick.FlagCollectionToMap.desc=					Toant per kategory in wrâldkaart mei alle lannen wêrfan atst flaggen sammele hast
@@ -27,8 +30,8 @@ foxtrick.TransferDeadline.desc=					Foeget in ekstra rigel ta oan speurresultate
 foxtrick.HTDateFormat.desc=							Foeget de HT-wike en seizoen fan de spulwrâld ta oan de belangrykste HT-datums op de side
 foxtrick.HTDateFormat.LocalSeason.desc=				Toant lokale seizoen ynstee fan spulwrâld-seizoen
 foxtrick.TeamPopupLinks.desc=						Toant in lyts popupskermke mei snelkoppelings atst mei de mûs oer in koppeling mei ploechid giest
-foxtrick.TeamPopupLinksMore.desc=					Toant in 'mear...'-koppeling yn it popupskermke mei snelkoppelings, dy't ferfolgens mear koppelings toant.
 foxtrick.StaffMarker.desc=						Markeart aliassen fan officials op de foarums. Yn de tekstfakken kinst in eigen styl (HTML stylattribuut) oanmeitsje.
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=						Toant in koppelingsbalk foar de jeugdakademy
 foxtrick.ShowMessageButton.desc=					Foeget in 'Stjoer Berjocht'-knop ta oan de managerside
 foxtrick.CopyPostID.desc=							Kopieart PostID nei klemboerd ynstee fan it te toanen op de foarumside
@@ -36,7 +39,6 @@ foxtrick.ShowForumPrefButton.desc=					Toant snelkoppeling nei foarumfoarkeuren 
 foxtrick.AlltidFlags.desc=							Foeget Alltidflaggen en koppelings fan beide posters ta oan foarumside
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=			Koppelje earst nei Hattrick's kompetysjeside, as (ferburgen) manageravatar oanstiet
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=			Koppelje earst nei Alltid's kompetysjeside
-foxtrick.LinksCustom.desc=							Toant opsjes om sels koppelings ta te foegjen. Ynstruksjes: it oansetten fan dizze opsje foeget 'foeg koppelings ta' ta oan de besteande Foxtrick koppelingsfakken of 'ferwiderje' oan besteande koppelings. Klik ferwiderje om in eigen koppeling te ferwiderjen, en tafoegje om in skerm te krijen om in nije koppeling mei ikoan ta te foegjen. It ikoan moat 16x16 pixels mjitte. It útsetten fan dizze module ferberget dizze opsjes, mar de eigen koppelings wurde noch altyd toand.
 foxtrick.LinksLeague.desc=							Foeget inkele eksterne links ta oan de kompetysjeside
 foxtrick.LinksTeam.desc=							Foeget inkele eksterne links ta oan de ploechside
 foxtrick.LinksCountry.desc=							Foeget inkele eksterne links ta oan de lânside
@@ -83,6 +85,7 @@ foxtrick.SeniorTeamShortCuts.desc=					Foeget koppelings nei coach en lêste-ops
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=	Toant koppelings allinnich op oare ploechsiden
 foxtrick.SeniorTeamShortCuts.AllPages.desc=			Toant koppelings op alle siden
 foxtrick.FixcssProblems.desc=						Herstelt inkele problemen fan ferkearde HT css
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=				Toant ekstra ynfo by spilerdetails
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=		Herstelt it probleem fan wite koppelings yn foarums
 foxtrick.FixcssProblems.Forum_Post_Header.desc=		Herstelt it probleem fan missende datum en tiid yn kop fan foarumberjochten
@@ -96,7 +99,9 @@ foxtrick.SkinPlugin.desc=							Foeget dyn eigen CSS-skin ta oan hattrick
 foxtrick.CurrencyConverter.desc=					Omsette fan in HT-muntienheid
 foxtrick.MovePlayerStatement.desc=					Ferpleatst spilerútspraak nei de pasfoto fan de spiler. As ôfbyldings útsteane, wurdt de útspraak net toand.
 foxtrick.TickerColoring.desc=						Jout kleur oan ferskate barren dy't yn de nijsbalk toand wurde.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=					Foeget koppelingsikoan ta oan haadikoanen
+#CopyMatchID
 foxtrick.CopyMatchID.desc=							Kopieart it wedstriidID by in klik op it kompetysje/beker/treningswedstriid-ikoan op de wedstriden- of wedstriidarchyfside
 foxtrick.HeaderFix.desc=							Set de kop fan de side fêst
 foxtrick.CopyRatings.desc=				Foeget in knop ta by 'Aksjes' yn it wedstriidrapport om de wurdearrings nei it klemboerd te kopiearjen (HT-tabelstyl foar forums)
@@ -185,9 +190,9 @@ transfercompare_medianprice=						Mediaanpriis
 transfercompare_avgprice=							Midsmjittige priis
 
 #YouthSkillNotes
-Notes_about_skills=									Feardigensnotysjes
-Edit_notes=											Bewurkje notysjes
-Save_notes=											Bewarje notysjes
+
+
+
 
 #Skilltypes
 Playmaking=											Posysjespul
@@ -209,6 +214,7 @@ foxtrick.menu.removeallfilters=						Alle filters ferwiderje
 foxtrick.matchlineup.totalstars=					Totaal oantal stjerren:
 foxtrick.shortcuts.matchlineup=						Snelkoppeling nei wedstriidopstelling
 foxtrick.shortcuts.leaveconference=					Ferlit foarum-snelkoppeling
+#matchdetail
 foxtrick.matchdetail.midfield=						Middenfjild
 foxtrick.matchdetail.attack=						Oanfal
 foxtrick.matchdetail.defence=						Ferdigening
@@ -280,7 +286,7 @@ foxtrick.tweaks.forummessagetemplates=				Foarumberjocht-templates
 foxtrick.tweaks.flagsinplayerbackground=			Flaggen op eftergrûn fan spilergesichten
 foxtrick.tweaks.teamlogobelow=						Fix foar grutte ploechlogo's
 foxtrick.tweaks.mapofvisitedcountries=				Kaart fan besochte lannen (flaggensammelingsside)
-foxtrick.tweaks.sendmessage=						Stjoer berjocht
+
 foxtrick.tweaks.selectplayer=						Selektear spiler
 foxtrick.linkscustom.selecticon=					Selektear ikoan
 foxtrick.linkscustom.addpersonallink=				Foegje persoanlike koppeling ta
@@ -358,33 +364,20 @@ TransferHistory=									Oerstapskiednis
 LastLineup=											Lêste opstelling
 more=												mear...
 less=												minder...
-
 foxtrick.TeamPopupLinks.TeamLinks.desc=				Foegje TeamPopupLinks ta oan ploechkoppelings
 foxtrick.TeamPopupLinks.UserLinks.desc=				Foegje TeamPopupLinks ta oan managerkoppelings
 foxtrick.TeamPopupLinks.Manager.desc=				Koppeling nei de manager (allinnich foar ploechkoppelings)
-foxtrick.TeamPopupLinksMore.Manager.desc=			Koppeling nei de manager (allinnich foar ploechkoppelings)
 foxtrick.TeamPopupLinks.Team.desc=					Koppeling nei de ploech (allinnich foar managerkoppelings)
-foxtrick.TeamPopupLinksMore.Team.desc=				Koppeling nei de ploech (allinnich foar managerkoppelings)
 foxtrick.TeamPopupLinks.Matches.desc=				Koppeling nei lêste wedstriden
-foxtrick.TeamPopupLinksMore.Matches.desc=			Koppeling nei lêste wedstriden
 foxtrick.TeamPopupLinks.Players.desc=				Koppeling nei spilers
-foxtrick.TeamPopupLinksMore.Players.desc=			Koppeling nei spilers
 foxtrick.TeamPopupLinks.last_5_ips.desc=			Koppeling nei de lêste 5 logins
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=		Koppeling nei de lêste 5 logins
 foxtrick.TeamPopupLinks.Guestbook.desc=				Koppeling nei it gastenboek
-foxtrick.TeamPopupLinksMore.Guestbook.desc=			Koppeling nei it gastenboek
 foxtrick.TeamPopupLinks.SendMessage.desc=			Koppeling nei Stjoer berjocht
-foxtrick.TeamPopupLinksMore.SendMessage.desc=		Koppeling nei Stjoer berjocht
 foxtrick.TeamPopupLinks.Challenge.desc=				Koppeling nei Utdaagje
-foxtrick.TeamPopupLinksMore.Challenge.desc=			Koppeling nei Utdaagje
 foxtrick.TeamPopupLinks.Achievements.desc=			Koppeling nei Prestaasjes
-foxtrick.TeamPopupLinksMore.Achievements.desc=		Koppeling nei Prestaasjes
 foxtrick.TeamPopupLinks.TransferHistory.desc=		Koppeling nei de oerstapskiednis
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=	Koppeling nei de oerstapskiednis
 foxtrick.TeamPopupLinks.LastLineup.desc=			Koppeling nei de lêste opstelling
-foxtrick.TeamPopupLinksMore.LastLineup.desc=		Koppeling nei de lêste opstelling
 foxtrick.TeamPopupLinks.Coach.desc=					Koppeling nei de coach
-foxtrick.TeamPopupLinksMore.Coach.desc=				Koppeling nei de coach
 
 foxtrick.SkillColoring.desc=						Better toane fan feardigens
 foxtrick.SkillColoring.skill_color.desc=			Feardigens kleurje
@@ -408,22 +401,23 @@ foxtrick.FlagCollectionToMap.SAmerica=				Súd-Amearika
 foxtrick.FlagCollectionToMap.World=					Wrâld
 
 # Captions and labels
-foxtrick.prefs.MainTab=								Haadynstellings
-foxtrick.prefs.ShortcutsTab=						Snelkoppelings en oanpassings
-foxtrick.prefs.PresentationTab=						Presintaasje en oanpassings
-foxtrick.prefs.MatchesTab=							Wedstriden
-foxtrick.prefs.ForumTab=							Foarum
-foxtrick.prefs.LinksTab=							Koppelings
-foxtrick.prefs.AboutTab=							Oer Foxtrick
+#tabs
+tab.main=								Haadynstellings
+tab.shortcutsAndTweaks=						Snelkoppelings en oanpassings
+tab.presentation=						Presintaasje en oanpassings
+tab.matches=							Wedstriden
+tab.forum=							Foarum
+tab.links=							Koppelings
+tab.about=							Oer Foxtrick
 foxtrick.prefs.captionHTLanguage=					Taalynstellings
-foxtrick.prefs.captionHTCurrency=					Jildynstellings
 foxtrick.prefs.captionHTDateformat=					Datumformaatynstellings
 foxtrick.prefs.captionHTCountry=					Lânynstellings
 foxtrick.prefs.captionShowOnStatusBar=				Toan ikoan yn statusbalk
 foxtrick.prefs.captionCleanupBranch=				Opsleine foarkeuren
 foxtrick.prefs.captionLoadSavePrefs=				Foarkeuren ymportearje of eksportearje
-foxtrick.prefs.captionCurrencySymbolTo=				Muntienheid omsette nei
-foxtrick.prefs.captionCurrencyConverter=			Muntienheid-omsetter
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=						Ynskeakelje (herstart nedich)
 foxtrick.prefs.captionAlertSettings=				Warskôgingsynstellings
 foxtrick.FoxtrickAlert.AlertSlider.desc=						Toan warskôgingsskerm
