--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -6,22 +6,24 @@
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Podes empregar as mensaxes da conferencia como plantiñas para utilizalas máis adiante
 foxtrick.ForumTemplates.DefaultShow.desc=Amosa ou oculta  por defecto as túas plantiñas
-foxtrick.ForumTemplates.CustomWidth.desc=Usa un ancho personalizado para amosar os títulos das plantiñas (predeterminado 125(px))
 foxtrick.ForumPreview.desc=Permite mostar a vista previa dunha mensaxe (Da conferencia ou do correo)
 foxtrick.AddLeaveConfButton.desc=Engade un botón 'Abandoar conferencia' en cada carpeta da mesma
 foxtrick.StarsCounter.desc=Engade o número total de estrelas na páxina da aliñación do encontro
 foxtrick.RepositionedPlayers.desc=Resalta ós xogadores reposicionados na páxina da aliñación.
 foxtrick.MoveLinks.desc=Move os enlaces de liga e bandeira do manager ó encabezamento da mensaxe. Nota: a opción 'Mostrar avatar' de Hattrick debe estar seleccionada para que funcione isto!
+#AttVsDef
 foxtrick.AttVsDef.desc=Engade as comparativas de ataque/defensa na páxina do encontro
 foxtrick.AttVsDef.oldstyle.desc=vello estilo
 foxtrick.AttVsDef.newstyle.desc=novo estilo
 foxtrick.AttVsDef.oldstyleifkseperated.desc=vello estilo (separando os lanzamentos de falta indirectos)
+#Ratings
 foxtrick.Ratings.desc=Engade as cualificacións á páxina do encontro
 foxtrick.BookmarkAdjust.desc=Cambia a icona asociada a un marcador insertando no comentario do mesmo o código correspondente entre corchetes: p.ex. [cyan] mostra a icona azul cian. Valores posibeis: aqua(auga), B(negriña), black(negro), blue(azul), Brown(marrón), cyan(azul cian), darkpurple(morado escuro), green(verde), idea, lightblue(azul claro), lightgreen(verde claro), orange(laranxa), pink(rosa), purple(morado), red(vermello), White(branco), yellow(amárelo)
 foxtrick.FoxtrickAlert.desc=Amosa unha notificación deslizante coas novas da ventá de noticias, aínda que estes a facer algunha outra cousa
 foxtrick.FoxtrickAlert.NewMail.desc=Amosa unha notificación deslizante para os teus novos correos
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Mostra a mediana do prezo dos traspasos na páxina de Comparación de traspasos
-foxtrick.YouthSkillNotes.desc=Podes editar as habilidades dos xogadores xuvenís e que aparezan do mesmo xeito que no primeiro equipo
+
 foxtrick.FlipSidesInMatchOrders.desc=Permite dar a volta rápidamente á formación na páxina de ordes dun encontro
 foxtrick.FormationBoxInMatchOrders.desc=Mostra a formación actual do equipo na páxina de ordes dun encontro
 foxtrick.FlagCollectionToMap.desc=Amosa un mapa do mundo con tódolos países dos que conseguiches a bandeira en cada categoría
@@ -30,11 +32,11 @@ foxtrick.TransferDeadline.desc=Engade una liña extra a cada resultado da busca 
 foxtrick.HTDateFormat.desc=Engade a tempada e á semana globais de Hattrick ás datas máis importantes das páxinas do HT.
 foxtrick.HTDateFormat.LocalSeason.desc=Amosa a tempada local en lugar da tempada global do Hattrick
 foxtrick.TeamPopupLinks.desc=Fai aparecer unha pequeña ventá emerxente con ligazóns relacionadas co equipo cada vez que pasas co rato por riba dun acceso directo a un equipo
-foxtrick.TeamPopupLinksMore.desc=Amosa unha ligazón 'máis..." na ventá emerxente de ligazóns do equipo que deixa ver os seguintes atallos
 foxtrick.StaffMarker.desc=Resalta os nomes dos colaboradores de HT nas conferencias. Nos cadros de texto podes definir como queres velos (mediante atributos de estilo HTML)
 foxtrick.StaffMarker.own.desc=Marcadores personais
 foxtrick.StaffMarker.editor.desc=Editores
 foxtrick.StaffMarker.foxtrick-dev.desc=Desenroladores e tradutores de Foxtrick
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Mostra unha barra de enlaces para a academia de xuvenís (tamen funciona nos correos)
 foxtrick.ShowMessageButton.desc=Engade un botón de “Enviar mensaxe” na páxina do mánager
 foxtrick.CopyPostID.desc=Alteracións da ID das mensaxes da conferencia
@@ -43,7 +45,6 @@ foxtrick.ShowForumPrefButton.desc=Presenta un atallo ás preferencias da confere
 foxtrick.AlltidFlags.desc=Engade as bandeira de Alltid e as ligazóns aos nomes de usuario das páxinas das conferencias
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Fai que as ligazóns vaian á páxina do grupo en Hattrick se está activada a opción de ocultar o avatar nas conferencias
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Enlaza directamente coa páxina do grupo en Alltid
-foxtrick.LinksCustom.desc=Amosa as opcións para que un poida crear novas ligazóns personalizadas: Aparecerá o cadro 'Engadir ligazóns' nas pestanas de Ligazóns. Podes asociar unha icona a esas novas ligazóns que crees, pero deben ter un tamaño de 16x16 pixeles. Se despois desactivas esta opción, o cadro para crear novas ligazóns desaparecerá, pero as que crearas manteranse dispoñíbeis na súa pestana
 foxtrick.LinksLeague.desc=Engade algunhas ligazóns externas á paxina da liga
 foxtrick.LinksTeam.desc=Engade algunhas ligazóns externas á paxina do equipo
 foxtrick.LinksCountry.desc=Engade algunhas ligazóns externas á paxina do país
@@ -98,6 +99,7 @@ foxtrick.SeniorTeamShortCuts.desc=Engade unha ligazón ao adestrador e á últim
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Amosar soamente nos outros equipos
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Amosar en tódalas páxinas
 foxtrick.FixcssProblems.desc=Amaña algúns problemas de estilos CSS do HT incorrectos
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Mostra información útil nos detalles do xogador
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=Amaña o problema de enlaces brancos o pasar o rato por riba deles foros
 foxtrick.FixcssProblems.Forum_Post_Header.desc=Amaña o problema de datas e horas desaparecidas nas cabeceiras das mensaxes da conferencia
@@ -113,14 +115,16 @@ foxtrick.SkinPlugin.desc=Engade a tua propia pel CSS ó hattrick
 foxtrick.CurrencyConverter.desc=Covertedor de moeda do HT
 foxtrick.MovePlayerStatement.desc=Move as declaración dos xogadores a súa imaxe. Se as imaxes están desactivadas as declaracións desaparecerán
 foxtrick.TickerColoring.desc=Colorea os diferentes eventos que se amosan no cadro de últimas novas
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Engade iconas de ligazóns as iconas principais
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copia a ID do encontro cando se clica na icona de liga/copa/amigábel nos encontros ou no arquivo de encontros
 foxtrick.HeaderFix.desc=Amaña a cabeceira nos desprazamentos
 foxtrick.CopyRatings.desc=Engade un botón a 'Accións' no reporte do encontro, para que poidas copiar as calificacións ó portapapeis (estilo HT-table para conferencias)
 foxtrick.ContextMenuCopy.desc=Engade unha opción ó menú contextual para copiar as ids(teamid, userid, ...)
 foxtrick.NewMail.desc=Se recibes un novo correo o destaca
 foxtrick.NTConfirmAddRemove.desc=Engade unha ventá de confirmación para engadir/botar xogadores das selezóns
-foxtrick.CopyTrainingReport.desc=Engade un botó de 'Copiar reporte do adestramento' na páxina de adestramentos da academia de xuvenís.
+foxtrick.CopyYouth.TrainingReport.desc=Engade un botó de 'Copiar reporte do adestramento' na páxina de adestramentos da academia de xuvenís.
 foxtrick.PlayerBirthday.desc=Amosa o último e o próximo aniversario do xogador nos seus detalles
 
 #MatchReportTweaks
@@ -220,9 +224,9 @@ transfercompare_medianprice=Mediana do prezo
 transfercompare_avgprice=Precio medio
 
 #YouthSkillNotes
-Notes_about_skills=Notas acerca das habilidades
-Edit_notes=Editar notas
-Save_notes=Gardar notes
+
+
+
 
 #Skilltypes
 Playmaking=Xogadas
@@ -244,6 +248,7 @@ foxtrick.menu.removeallfilters=Borrar todos
 foxtrick.matchlineup.totalstars=Número total de estrelas:
 foxtrick.shortcuts.matchlineup=Acceso directo á páxina da aliñación dun encontro
 foxtrick.shortcuts.leaveconference=Acceso directo a abandoar unha conferencia
+#matchdetail
 foxtrick.matchdetail.midfield=Mediocampo
 foxtrick.matchdetail.attack=Ataque
 foxtrick.matchdetail.defence=Defensa
@@ -316,7 +321,7 @@ foxtrick.tweaks.forummessagetemplates=Plantiñas de mensaxes das conferencias
 foxtrick.tweaks.flagsinplayerbackground=Bandeiras de fondo nas imaxes dos xogadores
 foxtrick.tweaks.teamlogobelow=Apaño para que se amosen os logos de gran tamaño de equipo
 foxtrick.tweaks.mapofvisitedcountries=Mapa dos países visitados (páxina de colección de bandeiras)
-foxtrick.tweaks.sendmessage=Enviar mensaxe
+
 foxtrick.tweaks.selectplayer=Selecciona un xogador
 foxtrick.linkscustom.selecticon=Selecciona unha icona
 foxtrick.linkscustom.addpersonallink=Engade unha ligazón persoal
@@ -331,7 +336,7 @@ foxtrick.linkscustom.help=Axuda
 foxtrick.linkscustom.helptext=Este é o modo de edicion. Clicando na cabeceira deste cadro cambia entre os modos de edición e o normal. Soamente no modo normal as túas ligazóns persoais serán completamente funcionales. Ligazóns estáticas externas son sinxelas de engadir, só engade a url completa (Exemplo: http:\/\/alltid.org\/league\/427\/). Para links estáticos internos sálta a parte do servidor (Exemplo: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). As etiquetas só as necesitas para as pouco comunes ligazóns dinámicas. Con etiquetas as ligazóns se cambiarán dinámicamente usando a información do sitio onde esteas. Por exemplo http:\/\/alltid.org\/league\/[leagueid] sempre che levará o sitio de alltid da liga que estás mirando no hattrick. As etiquetas que están dispoñíbeis están listadas no cadro de selección. Soamente podes usar aquelas que están listadas na páxina onde estás engadindo a túa ligazón personal. O texto que se produce so é unhá plantiña de exemplo. Podes escribir ti mesmo a etiqueta (cos [])
 foxtrick.linkscustom.helptext2=Tamén podes exportar as túas ligazóns e compartilas. Para facelo clica no botón de exportar e selecciona un arquivo para gardar a ligazón. As ligazón se engadirán ó final dese arquivo, podes gardar varias ligazón nun arquivo. Para importar ligazóns diríxete á sección de preferencias e vai a importar preferencias. Só as preferencias presentes nese arquivo serán importadas, que neste caso son as túas ligazóns. As túas ligazóns previas non se borrarán
 foxtrick.matches.income=Ingresos:
-foxtrick.newmailtoyou=tes correo novo
+
 foxtrick.tweaks.Birthdays=Aniversarios
 foxtrick.tweaks.BirthdayLastWeek=Aniversarios da pasada semana
 foxtrick.tweaks.BirthdayNextWeek=Aniversarios da proxima semana
@@ -406,38 +411,22 @@ TransferHistory=Historial de traspasos
 LastLineup=Última aliñación
 more=máis...
 less=menos...
-
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Abre novas pestanas para as ligazóns da venta emerxente
 foxtrick.TeamPopupLinks.TeamLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a equipos
 foxtrick.TeamPopupLinks.UserLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a usuarios
 foxtrick.TeamPopupLinks.Manager.desc=Ligazón ó Mánager (só para ligazóns a equipos)
-foxtrick.TeamPopupLinksMore.Manager.desc=Ligazón ó Mánager (só para ligazóns a equipos)
 foxtrick.TeamPopupLinks.Team.desc=Ligazón ó equipo (só para ligazóns a usuarios)
-foxtrick.TeamPopupLinksMore.Team.desc=Ligazón ó equipo (só para ligazóns a usuarios)
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Ligazón ó equipo en Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Ligazón ó equipo en Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Vai aos últimos encontros
-foxtrick.TeamPopupLinksMore.Matches.desc=Vai aos últimos encontros
 foxtrick.TeamPopupLinks.Players.desc=Vai á páxina dos xogadores
-foxtrick.TeamPopupLinksMore.Players.desc=Vai á páxina dos xogadores
 foxtrick.TeamPopupLinks.last_5_ips.desc=Vai ás últimas 5 conexións
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Vai ás últimas 5 conexións
 foxtrick.TeamPopupLinks.Guestbook.desc=Vai ao libro de visitas
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Vai ao libro de visitas
 foxtrick.TeamPopupLinks.SendMessage.desc=Ligazón a enviar mensaxe
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Ligazón a enviar mensaxe
 foxtrick.TeamPopupLinks.Challenge.desc=Ligazón a retos
-foxtrick.TeamPopupLinksMore.Challenge.desc=Ligazón a retos
 foxtrick.TeamPopupLinks.Achievements.desc=Ligazón a logros
-foxtrick.TeamPopupLinksMore.Achievements.desc=Ligazón a logros
 foxtrick.TeamPopupLinks.TransferHistory.desc=Vai ó historial de traspasos
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Vai ó historial de traspasos
 foxtrick.TeamPopupLinks.LastLineup.desc=Vai á ultima aliñación
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Vai á ultima aliñación
 foxtrick.TeamPopupLinks.Coach.desc=Vai á páxina do adestrador
-foxtrick.TeamPopupLinksMore.Coach.desc=Vai á páxina do adestrador
 foxtrick.TeamPopupLinks.CustomLink.desc=Ligazóns propias. As etiquetas [userid] e [teamid] se reemplazarán polas ids apropiadas
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Ligazóns propias. As etiquetas [userid] e [teamid] se reemplazarán polas ids apropiadas
 
 foxtrick.SkillColoring.desc=Permite distinguir mellor as habilidades
 foxtrick.SkillColoring.skill_color.desc=Colorea ás habilidades
@@ -461,24 +450,25 @@ foxtrick.FlagCollectionToMap.SAmerica=América do Sur
 foxtrick.FlagCollectionToMap.World=O mundo
 
 # Captions and labels
-foxtrick.prefs.MainTab=Opción principais
-foxtrick.prefs.ShortcutsTab=Atallos e engadidos
-foxtrick.prefs.PresentationTab=Presencia e melloras
-foxtrick.prefs.MatchesTab=Encontros
-foxtrick.prefs.ForumTab=Conferencias
-foxtrick.prefs.LinksTab=Ligazóns
-foxtrick.prefs.AboutTab=Acerca de
+#tabs
+tab.main=Opción principais
+tab.shortcutsAndTweaks=Atallos e engadidos
+tab.presentation=Presencia e melloras
+tab.matches=Encontros
+tab.forum=Conferencias
+tab.links=Ligazóns
+tab.about=Acerca de
 foxtrick.prefs.PrefDefaultWarningLabel=Aviso de preferencias por defecto
 foxtrick.prefs.PrefDefaultWarningText=Comproba a lingua e a moeda. Algunhas opcións do foxtrick non funcionarán se non se configuran correctamente
 foxtrick.prefs.captionHTLanguage=Lingua
-foxtrick.prefs.captionHTCurrency=Moeda
 foxtrick.prefs.captionHTDateformat=Preferencias do formato da data
 foxtrick.prefs.captionHTCountry=Preferencias do país
 foxtrick.prefs.captionShowOnStatusBar=Coloca unha icona na barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferencias cargadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferencias
-foxtrick.prefs.captionCurrencySymbolTo=Convertir moeda a
-foxtrick.prefs.captionCurrencyConverter=Conversor de moeda
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Activar (require reinicio do navegador)
 foxtrick.prefs.captionAlertSettings=Alertas
 foxtrick.FoxtrickAlert.AlertSlider.desc=Amosar alertas deslizantes
