--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -15,10 +15,12 @@ foxtrick.ForumPreview.desc=Bied de mogelijkheid een voorbeeld van een bericht te
 foxtrick.AddLeaveConfButton.desc=Voeg een 'Verlaat forum' optie toe aan iedere forum folder
 foxtrick.StarsCounter.desc=Toon het totaal aantal sterren op de teamopstelling pagina
 foxtrick.MoveLinks.desc=Verplaats de informatie over de competitie en het vlaggetje van een manager naar de kop van een bericht. NB: de 'Toon avatars' optie moet in Hattrick aan staan om dit te laten werken!
+#AttVsDef
 foxtrick.AttVsDef.desc=Voeg een vergelijking tussen aanval en verdediging toe aan de wedstrijdpagina
 foxtrick.AttVsDef.oldstyle.desc=Oude stijl
 foxtrick.AttVsDef.newstyle.desc=Nieuwe stijl
 foxtrick.AttVsDef.oldstyleifkseperated.desc=Oude stijl (indirecte vrije schoppen apart)
+#Ratings
 foxtrick.Ratings.desc=Voeg ratings toe aan de wedstrijdpagina
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (gedetailleerd)
@@ -29,6 +31,7 @@ foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Verander het icon wat bij een bookmark hoort door in de beschrijving van een bookmark een kleurcode tussen vierkante haken te plaatsen. Bijvoorbeeld [cyan] laat het icon in cyaan zien. Mogelijke waarden: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Toon mediaangemiddelde prijs in transfervergelijking
 foxtrick.FlagCollectionToMap.desc=Toon een kaartoverzicht van alle landen waar je het vlaggetje van verzameld hebt
 foxtrick.TransferSearchFilters.desc=Bied de mogelijkheid om zoeksjablonen voor de transferlijst te gebruiken
@@ -42,6 +45,7 @@ foxtrick.StaffMarker.desc=Markeer gebruikers op het forum en teampagina's, die t
 foxtrick.StaffMarker.manager.desc=Markeer de alias van officials op teampagina's
 foxtrick.StaffMarker.own.desc=Persoonlijke markeringen
 foxtrick.StaffMarker.flag.desc=Voegt vlaggen toe aan gebruikers in het selectievenster
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Toon een balk met links voor de jeugdopleiding op het forum (werkt ook in HT mail, persberichten, advertenties en gastenboek)
 foxtrick.ForumYouthIcons.q.desc=Toon icoon voor aanhalingstekens als deze er niet zijn
 foxtrick.ForumYouthIcons.user_id.desc=Toon icoon voor UserID
@@ -57,6 +61,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Toon icoon voor YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergroot de tekstboxen om gemakkelijker berichten te schrijven
 foxtrick.ForumYouthIcons.pre.desc=Toon icoon voor forum 'pre' formaat (vaste spaties en afstanden)
 foxtrick.ForumYouthIcons.table.desc=Toon icoon voor tabel. Aangepast label accepteert Regular Expressions (Om \ te krijgen, voeg nog een \ toe, bijv. \\)
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Vervang FoxTrick HT-ML tags door HTML tags (bv 'pre' element)
 foxtrick.CopyPostID.desc=Toon een link om het ID van een bericht te kopiëren
 foxtrick.CopyPostID.AddCopyIcon.desc=Toon een icoon 'Kopieer Bericht ID' voor het eerste bericht-ID in de berichtkop
@@ -148,6 +153,7 @@ foxtrick.CustomMedals.desc=Vervang de nieuwe Hattrick trofeeën met de oude stij
 foxtrick.SeniorTeamShortCuts.desc=Toon coach en laatste opstelling links bij eerste elftallen
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Toon alleen op andere team pagina's
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Toon op alle pagina's
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Toon handige extra informatie bij spelerdetails
 foxtrick.ExtendedPlayerDetails.SWD.desc=Toon contractduur in seizoenen - weken - dagen
 foxtrick.ExtendedPlayerDetails.SW.desc=Toon contractduur in seizoenen - weken
@@ -188,6 +194,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activeer skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Reken HT valuta om
 foxtrick.MovePlayerStatement.desc=Verplaats een spelersverklaring naar de afbeelding van een speler. Indien afbeeldingen uitgeschakeld zijn, wordt de spelersverklaring niet getoond
 foxtrick.TickerColoring.desc=Kleur de verschillende gebeurtenissen in de ticker
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Toon extra links bij de hoofdiconen
 foxtrick.ExtraShortcuts.AddLeft.desc=Vink aan om de iconen links te plaatsen, uitgevinkt plaatst de iconen rechts
 foxtrick.ExtraShortcuts.AddSpace.desc=Vergroot de tussenruimte tussen snelkoppeling-iconen
@@ -200,6 +207,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Kopieer het wedstrijd-ID als je op het competitie/beker/vriendschappelijk icoon klikt op de wedstrijdenpagina. Voor supporters werkt dit ook op de wedstrijdvoorbeschouwingspagina's
 foxtrick.HeaderFix.desc=Repareer de kop van de Hattrick website tijdens scrollen op de pagina
 foxtrick.HeaderFix.FixLeft.desc=Repareer ook het submenu tijdens het scrollen
@@ -215,12 +223,10 @@ foxtrick.ContextMenuCopy.Table.desc=Optio om een tabel in HT-ML te kopiëren
 foxtrick.NewMail.desc=Laat duidelijker zien dat je nieuwe mail hebt
 foxtrick.NewMail.NotifyMail.desc=Laat een melding zien als er nieuwe berichten voor je zijn
 foxtrick.NewMail.HighlightNewForum.desc=Markeer het getal met het aantal nieuwe forum berichten
-foxtrick.CopyTrainingReport.desc=Toon een knop om het trainingsverslag te kopiëren van de trainingpagina van je jeugdteam
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
-foxtrick.CopyScoutReport.desc=Toon een knop om het commentaar van de scout te kopiëren
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
-foxtrick.CopyPlayerSource.desc=Toon een knop om de source code van een jeugdspeler te kopiëren
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
+foxtrick.CopyYouth.TrainingReport.desc=Toon een knop om het trainingsverslag te kopiëren van de trainingpagina van je jeugdteam
+foxtrick.CopyYouth.ScoutComment.desc=Toon een knop om het commentaar van de scout te kopiëren
+foxtrick.CopyYouth.PlayerSource.desc=Toon een knop om de source code van een jeugdspeler te kopiëren
+
 foxtrick.PlayerBirthday.desc=Toon laatste en volgende verjaardag in spelersoverzicht
 foxtrick.MovePlayerSelectbox.desc=Verplaats de speler selectieknop naar boven op de speler detailpagina
 foxtrick.SeasonStats.desc=Toon statistieken op de wedstrijdarchief pagina's
@@ -232,6 +238,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Markeer teams die onlangs hun opstelling hebben gewijzigd in de 'Volgende ronde' tabel
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Markeer teams die gewonnen hebben in het 'Laatste wedstrijd' overzicht
 foxtrick.LeagueNewsFilter.gray_bots.desc=Maak botteams en eigenaarloze teams grijs in competitietabellen
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op: dit kan erg traag worden als er meer dan 100 managers online zijn.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
 foxtrick.TeamPopupLinks.UserLinks.desc=Toon team pop-up naar managerlinks
@@ -262,16 +269,18 @@ foxtrick.SkillColoring.skill_select.desc=Toon ook getallen op de transfermarkt, 
 foxtrick.SkillColoring.no_skill_links.desc=Verberg de onderlijning en het groene lettertype van HT's
 foxtrick.BackgroundFixed.desc=Statische achtergrondafbeelding
 foxtrick.MatchIncome.desc=Entreegeld in wedstrijd detailpagina
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Meer ruimte op de jeugdspelers pagina
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberg jeugdvaardigheden die nog niet bekend zijn op de jeugdspelers overzichtpagina
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberg de 'max.' waarde om meer ruimte te creëren, met name als gezichten getoond worden
 foxtrick.SkillTable.desc=Toon de spelersvaardigheden in een tabel. Suggestie: module 'ExtraPlayerInfo' om extra informatie te tonen
 foxtrick.SkillTable.OtherTeams.desc=Toon ook voor andere teams
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Markeer de winnaars op de bekerwedstrijdenpagina
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Markeer wedstrijden gewonnen door het team wat lager op de ranglijst staat
 foxtrick.SkillTranslation.desc=Toon Engelse vertalingen van de vaardigheden op de heplpagina's
 foxtrick.ReadHtPrefs.desc=Pas automatisch de taalinstellingen in FoxTrick aan als je van taal wijzigt in Hattrick
-foxtrick.OnPagePrefs.desc=Toon een venster aan de zijkant, waarmee je FoxTrick modules kunt wijzigen die het uiterlijk van de huidige pagina aanpassen
+#CountryList
 foxtrick.CountryList.desc=Aanpassingen voor landennamen
 foxtrick.CountryList.SelectBoxes.desc=Vervang de Engelstalige landennamen voor hun eigen landennamen in selectievelden
 foxtrick.CountryList.TeamPage.desc=Toon een tekstlink naar de competitie voor de regio en de klasse op een team pagina
@@ -280,7 +289,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Verwijder de afbeeldinglink naar de comp
 foxtrick.MatchTables.desc=Verwijder spaties uit de wedstrijdtabellen in het eenvoudige thema
 foxtrick.MatchTables.RemoveTime.desc=Verwijder het tijdstip van de wedstrijd bij de wedstrijdentabel
 foxtrick.YouthPromotes.desc=Toon aantal dagen tot promotie van een jeugdspeler
-foxtrick.htmsStatistics.desc=Toon scoringsstatistieken bij wedstrijden
+foxtrick.HTMSPrediction.desc=Toon scoringsstatistieken bij wedstrijden
 foxtrick.HighlightOwnerless.desc=Markeer botteams en eigenaarloze teams op de competitiepagina
 foxtrick.LastLogin.desc=Toon de tijd sinds de laatste login op de managerpagina
 foxtrick.TransferCompareSort.desc=Door te klikken op de kop kun je de transfervergelijking resultaten sorteren op TSI, prijs of vorm
@@ -293,7 +302,6 @@ foxtrick.LeagueAndMatchChat.ChatNick.desc=Kies je nickname voor de chat
 foxtrick.RapidId.desc=Een handig veld bovenaan de pagina om snel op ID een team, speler, etc. te bekijken
 foxtrick.YouthSeriesEstimation.desc=In de zoekresultaten-tabel, schat de start tijd van jeugdcompetities die een seizoensonderbreking hebben
 foxtrick.LocalTime.desc=Laat de optionele locale tijd zien, ipv de Hattrick tijd. Als op de klok geklikt wordt, wisselt de tijdsweergave tussen deze twee
-foxtrick.LocalTime.DefaultLocal.desc=Laat standaard de locale tijd zien
 foxtrick.ForumThreadAutoIgnore.desc=Negeer forum onderwerpen met geselecteerde labels (onderwerpen met [Label] of {Label})
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lijst met labels, bijv.: NT, Idee, Bug. (Komma gescheiden, negeert hoofd/kleine letters)
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lijst met toegestane onderwerpen, gebaseerd op IDs (het deel voor de punt). Onderwerpen in deze lijst worden niet genegeerd. Komma gescheiden
@@ -577,6 +585,7 @@ Current_club.abbr=Club
 Current_league=Huidige competitie
 Current_league.abbr=Competitie
 
+#matchdetail
 foxtrick.matchdetail.midfield=Middenveld
 foxtrick.matchdetail.attack=Aanval
 foxtrick.matchdetail.defence=Verdediging
@@ -628,7 +637,7 @@ notify.newForumMessage=Je hebt %s nieuw(e) antwoord(en) op een eigen forum-beric
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick PaginaVoorkeuren
+
 foxtrick.modules_allpages=Modules die op alle pagina's werken
 HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal automatisch gekozen moet worden. Jouw FoxTrick taal is nu ingesteld op: %s.
 
@@ -778,10 +787,10 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federatie Chat
 
 
 #htms
-foxtrick.htmsStatistics.prediction=Voorspeld resultaat
-foxtrick.htmsStatistics.windrawloss=winst/gelijkspel/verlies
-foxtrick.htmsStatistics.linkcaption=Wedstrijdanalyse door HTMS
-foxtrick.htmsStatistics.changePrediction=Wijzig voorspelling
+HTMSPrediction.prediction=Voorspeld resultaat
+HTMSPrediction.windrawloss=winst/gelijkspel/verlies
+HTMSPrediction.title=Wedstrijdanalyse door HTMS
+HTMSPrediction.changePrediction=Wijzig voorspelling
 
 #HTMSPoints
 HTMSPoints=HTMS Punten:
@@ -878,6 +887,7 @@ status.disabled=uitgeschakeld
 prefs.screenshot=Screenshot
 
 # tabs in preferences page
+#tabs
 tab.main=Hoofdopties
 tab.informationAggregation=Informatie Verzameling
 tab.shortcutsAndTweaks=Links en tweaks
@@ -897,6 +907,7 @@ foxtrick.prefs.captionHTCountry=Land
 foxtrick.prefs.captionShowOnStatusBar=Statusbalk icoon
 foxtrick.prefs.captionCleanupBranch=Opgeslagen voorkeuren
 foxtrick.prefs.captionLoadSavePrefs=Exporteer of importeer voorkeuren
+#statusbarpref
 foxtrick.prefs.statusbarpref=Toon FoxTrick icoon in statusbalk (vereist herstart)
 foxtrick.prefs.labelCleanupBranch=Zet standaard instellingen terug (alleen voorkeuren, geen persoonlijke instellingen, herstart vereist)
 foxtrick.prefs.labelDisableAll=Schakel alle modules uit
