--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -6,22 +6,25 @@
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Permite transformar mensagens do fórum em templates para uso posterior
 foxtrick.ForumTemplates.DefaultShow.desc=Mostra ou esconde os teus templates por defeito
-foxtrick.ForumTemplates.CustomWidth.desc=Usar a largura padrão para o título do template (default 125(px))
+
 foxtrick.ForumPreview.desc=Permite mostrar uma previsão dos posts (Também funciona para os HT-mail)
 foxtrick.AddLeaveConfButton.desc=Adiciona um botão 'Abandonar conferência' a cada pasta do fórum
 foxtrick.StarsCounter.desc=Adiciona o número total de estrelas à  página de formação inicial
 foxtrick.RepositionedPlayers.desc=Realça os jogadores reposicionados na página de Lineup
 foxtrick.MoveLinks.desc=Move os links da série e bandeira nacional do utilizador para o cabeçalho da mensagem. Nota: A função 'Mostrar avatar' no Hattrick tem de estar activada para isto funcionar!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adicionar comparação Ataque/Defesa à página de jogo
 foxtrick.AttVsDef.oldstyle.desc=Estilo Antigo
 foxtrick.AttVsDef.newstyle.desc=Novo Estilo
 foxtrick.AttVsDef.oldstyleifkseperated.desc=Estilo antigo (Livres ind. separados)
+#Ratings
 foxtrick.Ratings.desc=Adiciona ratings à página de jogo
 foxtrick.BookmarkAdjust.desc=Modificar o ícone associado a um atalho inserindo no comentário do atalho o código correspondente em parêntesis rectos: [cyan] irá mostrar o ícone ciano. Valores possíveis: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Mostra uma notificação pop-up com as notícias do topo da página do Hattrick mesmo quando estás a fazer outra coisa qualquer no momento.
 foxtrick.FoxtrickAlert.NewMail.desc=Mostra uma nova janela pop-up quando tens um novo Ht-mail
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Mostra um preço de venda médio na compararação de transferências
-foxtrick.YouthSkillNotes.desc=Permite editar as características dos jogadores da equipa de juniores e mostrá-las tal como na equipa principal
+
 foxtrick.FlipSidesInMatchOrders.desc=Permite trocar rapidamente os lados na página de ordens de jogo
 foxtrick.FormationBoxInMatchOrders.desc=Mostra a formação actual na página de ordens de jogo
 foxtrick.FlagCollectionToMap.desc=Mostra, para cada categoria, um mapa com todos os países cujas bandeiras tenham sido coleccionadas
@@ -31,11 +34,12 @@ foxtrick.HTDateFormat.desc=Adiciona a semana e época global do HT nas datas mai
 foxtrick.HTDateFormat.LocalSeason.desc=Mostrar o número de época local em vez de global.
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Usa o offset padrão para colocares o teu primeiro dia da semana (0 = segunda-feira, -2 = sábado)
 foxtrick.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com vários links aquando da passagem do cursor por cima de um link para uma equipa
-foxtrick.TeamPopupLinksMore.desc=Mostra um link 'mais...' nos links da caixa de popup da equipa que mostra os seguintes 'mais...' atalhos.
+
 foxtrick.StaffMarker.desc=Marca os usernames dos GM, Mod e LA's nos fóruns. Nas caixas de texto podes definir o teu próprio estilo.
 foxtrick.StaffMarker.own.desc=Marcas pessoais
 foxtrick.StaffMarker.editor.desc=Editores
 foxtrick.StaffMarker.foxtrick-dev.desc=Criadores e tradutores do Foxtrick
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Mostra uma barra de link para a Academia. (Também funciona para os HT-mail)
 foxtrick.ShowMessageButton.desc=Adiciona o botão 'Enviar Mensagem' à  página do utilizador
 foxtrick.CopyPostID.desc=Copia O ID do post para a área de transfrências em vez de apenas mostrar na página do fórum.
@@ -43,7 +47,7 @@ foxtrick.CopyPostID.AddCopyIcon.desc=Adiciona um ícone para copiar o ID do post
 foxtrick.AlltidFlags.desc=Adiciona as bandeiras do Alltid e links de ambos os autores das mensagens à página do fórum
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Liga primeiro à página da série do Hattrick, se a imagem (escondida) do treinador estiver activada.
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Liga primeiro à página da série do Hattrick.
-foxtrick.LinksCustom.desc=Miostra opções para mostrar links personalizados. Instruções:Ao activar esta opção adiciona 'Adicionar Links' para as caixas de links do Foxtrick. Respectivamente 'remover' para os links próprios. Clique 'remover' para remover um link próprio e 'adicionar' para adicionar a uma caixa de texto um ícone e link próprio. O ícone deve ter 16x16 pixels. Desactivar este módulo aqui esconde estas opções. Os links personalizados, contudo continuarão a ser mostrados.
+
 foxtrick.LinksLeague.desc=Adiciona alguns links externos à  página da série
 foxtrick.LinksTeam.desc=Adiciona alguns links externos à  página das equipas
 foxtrick.LinksCountry.desc=Adiciona alguns links externos à  página do país
@@ -93,13 +97,14 @@ foxtrick.TeamStats.desc=Mostra um resumo da equipa.
 foxtrick.LargeFlags.desc=Substitui a pequena bandeira do país dos jogodores na página dos mesmos por bandeiras maiores
 foxtrick.GoToPostBox.desc=Adiciona uma caixa IrParaPostX no cimo do fórum.
 foxtrick.TeamSelectBox.desc=Substitui a lista de jogadores por uma ComboBox na página dos jogadores. Clicando no cabeçalho muda entre a lista e caixa de selecção
-foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Também substitui a lista de jogadores por uma caixa de selecção nos jogadores jovens
+
 foxtrick.CopyPlayerAd.desc=Adiciona um botão para Acções na página do jogador, para que possas copiar a trnsferência do jogador para a área de transferência.
 foxtrick.CustomMedals.desc=Substitui os novos troféus do Hattrick pelas antigas medalhas
 foxtrick.SeniorTeamShortCuts.desc=Adiciona os links 'Treinador' e 'Última formação' à equipa sénior.
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar apenas em páginas de outras equipas
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Mostrar em todas as páginas
 foxtrick.FixcssProblems.desc=Corrige alguns problemas de estilos de CSS errados do HT.
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Mostra algumas informações importantes nos detalhes do jogador
 foxtrick.FixcssProblems.Forum_Hover_Links.desc=Corrige o problema dos links brancos no Fórum
 foxtrick.FixcssProblems.Forum_Post_Header.desc=Corrige o problema de falta de data e hora nos cabeçalhos dos posts no Fórum.
@@ -116,7 +121,9 @@ foxtrick.SkinPlugin.desc=Adiciona o teu próprio skin CSS às páginas do HT
 foxtrick.CurrencyConverter.desc=Converter uma moeda HT
 foxtrick.MovePlayerStatement.desc=Move as declarações de jogadores para a imagem dos mesmos. Se as faces estiverem desactivadas, as declarações serão removidas.
 foxtrick.TickerColoring.desc=Colorização dos diferentes eventos mostrados no topo da página Hattrick.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adiciona um Link para as estatísticas de sócio aos links principais.
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copia o matchid quando se clica no ícone campeonato/taça/amigável na página dos Jogos ou Arquivo dos Jogos
 foxtrick.HeaderFix.desc=Corrige o cabeçalho quando se faz scroll (affects also on other pages of HT)
 foxtrick.CopyRatings.desc=Adiciona um botão em Acções na página do relatório de jogo que permite copiar os ratings para a Área de Transferência (Estilo Tabela HT para fórum)
@@ -125,7 +132,7 @@ foxtrick.NewMail.desc=Destaca-se se receberes novos mails
 foxtrick.NewMail.CustomColor.desc=A cor padrão para um novo número de mails. Talvez requeira o reinício do browser
 foxtrick.NewMail.HighlightNewMailIcon.desc=Destaca um novo HT-mail a vermelho. Pode ser necessário reiniciar o browser
 foxtrick.NTConfirmAddRemove.desc=Adiciona uma caixa de confirmação para adicionar/remover jogadores de/para selecções nacionais
-foxtrick.CopyTrainingReport.desc=Adiciona a opção 'Copy Training Report' (para ser utilizado no Hattrick Youth Club) ao the relatório de treino dos juniores
+foxtrick.CopyYouth.TrainingReport.desc=Adiciona a opção 'Copy Training Report' (para ser utilizado no Hattrick Youth Club) ao the relatório de treino dos juniores
 foxtrick.PlayerBirthday.desc=Mostra o último e os próximos aniversários na página de jogadores
 foxtrick.AddHtLiveToOngoing.desc=Adiciona o botão HT Live a todos os jogos decorrentes
 
@@ -230,9 +237,9 @@ transfercompare_medianprice=Preço mediano
 transfercompare_avgprice=Preço Médio
 
 #YouthSkillNotes
-Notes_about_skills=Notas sobre características
-Edit_notes=Editar Notas
-Save_notes=Guardar Notas
+
+
+
 
 #Skilltypes
 Playmaking=Criatividade
@@ -254,6 +261,7 @@ foxtrick.menu.removeallfilters=Remover todos
 foxtrick.matchlineup.totalstars=Número total de estrelas:
 foxtrick.shortcuts.matchlineup=Atalho para a formação da equipa no jogo
 foxtrick.shortcuts.leaveconference=Atalho para abandonar fórum
+#matchdetail
 foxtrick.matchdetail.midfield=Meio-Campo
 foxtrick.matchdetail.attack=Ataque
 foxtrick.matchdetail.defence=Defesa
@@ -326,7 +334,7 @@ foxtrick.tweaks.forummessagetemplates=Templates de mensagem no Fórum
 foxtrick.tweaks.flagsinplayerbackground=Bandeira do país no fundo da imagem do jogador.
 foxtrick.tweaks.teamlogobelow=Correcção para os logos demasiado grandes.
 foxtrick.tweaks.mapofvisitedcountries=Mapa dos países visitados. (Página da Colecção de Bandeiras)
-foxtrick.tweaks.sendmessage=Enviar mensagem
+
 foxtrick.tweaks.selectplayer=Seleccionar jogador
 foxtrick.linkscustom.selecticon=Seleccionar ícone
 foxtrick.linkscustom.addpersonallink=Adicionar link pessoal
@@ -341,7 +349,7 @@ foxtrick.linkscustom.help=Ajuda
 foxtrick.linkscustom.helptext=Primeiro, isto é só o modo de edição. Ao clicar no cabeçalho desta caixa alterna entre modo editor e modo normal. Apenas em modo normal os teus próprios links estão completamente funcionais. Links estáticos externos são fáceis de adicionar, apenas adiciona o url completo (Examplo: http: \/\/alltid.org\/league\/427\/) . Para links estáticos internos não colocar a parte do servidor (Examplo: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). As etiquetas apenas precisas para links dinâmicos raros. Com etiquestas os links são dinâmicamente mudados usando a informação do lado em que tu estás. Por exemplo http:\/\/alltid.org\/league\/[leagueid] Iria sempre para o link Alltid da série que estás a ver. As etiquetas que estão disponíveis em cada site estão listadas na caixa de selecção. Apenas podes usar aqueles que estão listados no site onde tu estás a adicionar o link personalizado. Os texto produzido é apenas um template de amostra. Podes escrever a tua própria etiqueta. (com []).
 foxtrick.linkscustom.helptext2=Tua também exportas os teus links e os partilhas. Para isto podes clicar no botão exportar e seleccionar um ficheiro para guardar o link. Os links são anexados aquele ficheiro, para que possas guardar vários links num único ficheiro. Para importar links vai à janela de preferências e dirige-te a Importar Preferências. Apenas as preferências que se encontrem naquele ficheiro serão importadas, que neste caso, são os links. Nenhum dos teus links anteriores serão apagados.
 foxtrick.matches.income=Receita:
-foxtrick.newmailtoyou=Novo mail recebido
+
 foxtrick.tweaks.Birthdays=Aniversários
 foxtrick.tweaks.BirthdayLastWeek=Aniversários na semana passada
 foxtrick.tweaks.BirthdayNextWeek=Aniversários na próxima semana
@@ -429,37 +437,37 @@ LastLineup=Última formação
 more=mais...
 less=menos...
 
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Abrir popups de equipa em novas tabs
+
 foxtrick.TeamPopupLinks.TeamLinks.desc=Adiciona LinksPopupEquipa aos links da equipa
 foxtrick.TeamPopupLinks.UserLinks.desc=Adiciona LinksPopupEquipa aos links de utilizador
 foxtrick.TeamPopupLinks.Manager.desc=Link para o treinados (apenas para os links de equipa)
-foxtrick.TeamPopupLinksMore.Manager.desc=Link para o treinador (apenas para os links de equipa)
+
 foxtrick.TeamPopupLinks.Team.desc=Link para a equipa (apenas para links do treinados)
-foxtrick.TeamPopupLinksMore.Team.desc=Link para a Equipa (apenas para links de treinador)
+
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link para a equipa no Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Link para a Equipa no Alltid
+
 foxtrick.TeamPopupLinks.Matches.desc=Link para os últimos jogos
-foxtrick.TeamPopupLinksMore.Matches.desc=Link para os últimos jogos
+
 foxtrick.TeamPopupLinks.Players.desc=Link para a página da equipa
-foxtrick.TeamPopupLinksMore.Players.desc=Link para a página dos jogadores
+
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link para os últimos 5 logins
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Link para os últimos 5 logins
+
 foxtrick.TeamPopupLinks.Guestbook.desc=Link para o livro de visitas
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Link para o Livro de Visitas
+
 foxtrick.TeamPopupLinks.SendMessage.desc=Link para Enviar Mensagem
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Link para enviar mensagem
+
 foxtrick.TeamPopupLinks.Challenge.desc=Link para os desafios
-foxtrick.TeamPopupLinksMore.Challenge.desc=Link para Desafios
+
 foxtrick.TeamPopupLinks.Achievements.desc=Link para as conquistas
-foxtrick.TeamPopupLinksMore.Achievements.desc=Link para as Conquistas
+
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link o hitórico de transferências
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Link para o Histórico de Transferências
+
 foxtrick.TeamPopupLinks.LastLineup.desc=Link para a última formação
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Link para a Última Formação
+
 foxtrick.TeamPopupLinks.Coach.desc=Link para o treinador
-foxtrick.TeamPopupLinksMore.Coach.desc=Link para o treinador
+
 foxtrick.TeamPopupLinks.CustomLink.desc=Links Próprios. As tags [userid] e [teamid] serão substituídas pelos ids apropriados
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Links Próprios. As tags [userid] e [teamid] serão substituídas pelos ids apropriados
+
 
 foxtrick.SkillColoring.desc=Melhor visualização das características
 foxtrick.SkillColoring.skill_color.desc=Colorir as características
@@ -482,25 +490,27 @@ foxtrick.FlagCollectionToMap.SAmerica=América do Sul
 foxtrick.FlagCollectionToMap.World=Mundo
 
 # Captions and labels
-foxtrick.prefs.MainTab=Opções Principais
-foxtrick.prefs.ShortcutsTab=Atalhos e Extras
-foxtrick.prefs.PresentationTab=Apresentação e Tweaks
-foxtrick.prefs.MatchesTab=Jogos
-foxtrick.prefs.ForumTab=Fóruns
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AboutTab=Sobre
+#tabs
+tab.main=Opções Principais
+tab.shortcutsAndTweaks=Atalhos e Extras
+tab.presentation=Apresentação e Tweaks
+tab.matches=Jogos
+tab.forum=Fóruns
+tab.links=Links
+tab.about=Sobre
 foxtrick.prefs.PrefDefaultWarningLabel=Pre-definir um aviso padrão
 foxtrick.prefs.PrefDefaultWarningText=Verifique a linguagem das definições correntes. Algumas definições e features não vão trabalhar se as definições não forem as mesmas.
 foxtrick.prefs.captionHTLanguage=Definições de Linguagem
 foxtrick.prefs.captionHTLanguageAutoSet=Verifique para mudar automaticamente de linguagem quando muda também no HT.
-foxtrick.prefs.captionHTCurrency=Definições de moeda
+
 foxtrick.prefs.captionHTDateformat=Definições de formato de data
 foxtrick.prefs.captionHTCountry=Definições do país
 foxtrick.prefs.captionShowOnStatusBar=Mostrar ícone na barra de estado
 foxtrick.prefs.captionCleanupBranch=Preferências guardadas
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferências
-foxtrick.prefs.captionCurrencySymbolTo=Converter moeda corrente para
-foxtrick.prefs.captionCurrencyConverter=Conversor de moeda
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Activar (Requer reínicio)
 foxtrick.prefs.captionAlertSettings=Definições de Alerta
 foxtrick.FoxtrickAlert.AlertSlider.desc=Mostrar Popup de alerta
@@ -517,8 +527,8 @@ foxtrick.prefs.labelSavePrefs_Prefs=Exportar as definições do Foxtrick
 foxtrick.prefs.labelSavePrefs_Notes=Exportar as suas definições pessoais (notas, templates & custom links)
 foxtrick.prefs.labelLoadPrefs=Importar preferências foxtrick. (As actuais poderão ser sobrepostas. Requer reínicio)
 foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick.
-foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick MyHT
-foxtrick.prefs.labelFoxtrickFirstRun=Seleccione a versão que quer que seja mostrada no MyHT quando houver mudanças
+
+
 foxtrick.prefs.stagepref=Desactivar FoxTrick no servidor do Stage
 foxtrick.prefs.disableTemporaryLabel=Desactivar momentaneamente o Foxtrick
 
