--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -6,22 +6,24 @@
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 foxtrick.ForumTemplates.desc=Permite transformar mensagens do fórum em templates para uso posterior
 foxtrick.ForumTemplates.DefaultShow.desc=Shows or hides your templates by default
-foxtrick.ForumTemplates.CustomWidth.desc=Use custom width for display of template titles (default 125(px))
 foxtrick.ForumPreview.desc=Permitir mostrar o preview do post
 foxtrick.AddLeaveConfButton.desc=Adiciona um botão 'Abandonar conferência' a cada pasta do fórum
 foxtrick.StarsCounter.desc=Adiciona o número total de estrelas na página de formação inicial
 foxtrick.RepositionedPlayers.desc=Highlights repositioned players at lineup page
 foxtrick.MoveLinks.desc=Move os links dos grupos e bandeira nacional do usuario para o cabeçalho da mensagem. Nota: A função 'Mostrar avatar' no Hattrick tem de estar ativada para isto funcionar!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adicionar comparação Ataque/Defesa A pagina de jogo
 foxtrick.AttVsDef.oldstyle.desc=Estilo Antigo
 foxtrick.AttVsDef.newstyle.desc=Estilo Novo
 foxtrick.AttVsDef.oldstyleifkseperated.desc=Estilo Antigo (Falta Indireta Separada)
+#Ratings
 foxtrick.Ratings.desc=Adiciona ratings A pagina de jogos
 foxtrick.BookmarkAdjust.desc=Modificar o ícone associado a um atalho inserindo no comentário do atalho o código correspondente em parenteses retos: [cyan] irá mostrar o ícone ciano. Valores possíveis: aqua, B, preto, azul, marrom, cyan, roxo escuro, verde, idea, azul claro, verde claro, laranja, rosa, roxo, vermelho, branco, amarelo
 foxtrick.FoxtrickAlert.desc=Displays a pop-up notification with hattrick news ticker events, even when you are doing something else at the moment
 foxtrick.FoxtrickAlert.NewMail.desc=Displays a pop-up notification for new mails to you
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Mostra na comparacao de preços o preço medio
-foxtrick.YouthSkillNotes.desc=Permite editar a habilidade do jogador junior e mostrar como no time principal
+
 foxtrick.FlipSidesInMatchOrders.desc=Permite trocar rapidamente os lados na pagina de ordens de jogo
 foxtrick.FormationBoxInMatchOrders.desc=Mostra a formação actual na pagina de ordens de jogo
 foxtrick.FlagCollectionToMap.desc=Mostra, para cada categoria, um mapa com todos os paises cujas bandeiras tenham sido colecionadas
@@ -31,11 +33,11 @@ foxtrick.HTDateFormat.desc=Adicionar HT global semana e temporada nas mais impor
 foxtrick.HTDateFormat.LocalSeason.desc=Display local season instead of global season
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your first day of the week (0 = monday, -2 = saturday)
 foxtrick.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com varios links quando passar o cursor por cima de um link para uma equipa
-foxtrick.TeamPopupLinksMore.desc=Shows a 'more...' link in team popup links box which reveals following 'more' shortcuts.
 foxtrick.StaffMarker.desc=Realça os nicks de membros do staff nos foruns
 foxtrick.StaffMarker.own.desc=Personal markers
 foxtrick.StaffMarker.editor.desc=Editors
 foxtrick.StaffMarker.foxtrick-dev.desc=Foxtrick developers and translators
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Mostrar a barra de link para a Escola de Juniors
 foxtrick.ShowMessageButton.desc=Adiciona o botão Enviar Mensagem' A pagina do usuario
 foxtrick.CopyPostID.desc=PostId alterations
@@ -45,7 +47,6 @@ foxtrick.ShowForumPrefButton.desc=Shows shortcut to forum preferences on all for
 foxtrick.AlltidFlags.desc=Adds Alltid flags and links of both posters on forum page
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's league page, if (hidden) manager avatar is on
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's league page
-foxtrick.LinksCustom.desc=Shows options to add custom links. Instructions: Checking this option adds 'add links' to existing foxtrick link boxes resp. 'remove' to existing own links. Click remove to remove an own link and add to get a dialog box to add a new link and icon. Icon should have 16x16 pixels. Unchecking this module here again hides those options. The custom links, however, are still being displayed.
 foxtrick.LinksLeague.desc=Adiciona alguns links externos a pagina do Grupo
 foxtrick.LinksTeam.desc=Adiciona alguns links externos a pagina das equipes
 foxtrick.LinksCountry.desc=Adiciona alguns links externos a pagina do pais
@@ -94,13 +95,14 @@ foxtrick.TeamStats.desc=Compiles an overview of team.
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page. Clicking on the header switches between list and select box
-foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=Also replaces the list of players by a selectbox on youth players page
+
 foxtrick.CopyPlayerAd.desc=Adds a Button to 'Actions' on player site, so you can copy a player transfer add to clipboard
 foxtrick.CustomMedals.desc=Trocar os novos trofeus do Hattrick pelos antigos
 foxtrick.SeniorTeamShortCuts.desc=Adicionar links Técnico e Ultima formação na Equipe Principal
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar somente nas paginas de outros times
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Mostrar em todas as paginas
 foxtrick.FixcssProblems.desc=Arrumar alguns problemas com estilos CSS do HT
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Mostrar algma informação de ajuda nos detalhes do jogador
 foxtrick.ExtendedPlayerDetailsWage.desc=Shows wage without bonus and/or seasonal wage
 foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Displays wage without bonus
@@ -124,15 +126,9 @@ foxtrick.SkinPlugin.desc=Adicionar seu proprio skin CSS para o hattrick
 foxtrick.CurrencyConverter.desc=Converter para uma moeda HT
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
 foxtrick.TickerColoring.desc=The different events displayed in the news ticker will be coloured.
-foxtrick.TickerColoring.LoginWelcome.desc=LoginWelcome custom color
-foxtrick.TickerColoring.LoginSupporters.desc=LoginSupporters custom color
-foxtrick.TickerColoring.ForumReplyToMe.desc=ForumReplyToMe custom color
-foxtrick.TickerColoring.TransferMarket.desc=TransferMarket custom color
-foxtrick.TickerColoring.Challenges.desc=Challenges custom color
-foxtrick.TickerColoring.Guestbook.desc=Guestbook custom color
-foxtrick.TickerColoring.MailToMe.desc=MailToMe custom color
-foxtrick.TickerColoring.Hover.desc=Hover custom color
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adds linkicons to main icons
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
@@ -145,7 +141,7 @@ foxtrick.NewMail.desc=Highlight it if you receive new mails
 foxtrick.NewMail.CustomColor.desc=Custom color for new mail number. May require browser restart
 foxtrick.NewMail.HighlightNewMailIcon.desc=Highlight newmail icon in red. May require browser restart
 foxtrick.NTConfirmAddRemove.desc=Adds a confirmation box for adding/removing players to/from national squads
-foxtrick.CopyTrainingReport.desc=Adds a Copy Training Report (to be used in Hattrick Youth Club) button to the youth training report page
+foxtrick.CopyYouth.TrainingReport.desc=Adds a Copy Training Report (to be used in Hattrick Youth Club) button to the youth training report page
 foxtrick.PlayerBirthday.desc=Shows last and comming birthdays in players overview
 foxtrick.AddHtLiveToOngoing.desc=Add HT Live button to ongoing matches
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
@@ -157,43 +153,29 @@ foxtrick.LeagueNewsFilter.transfers.desc=Show only transfers
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 foxtrick.LeagueNewsFilter.PAs.desc=Show only press announcements
 foxtrick.ShortPAs.desc=Show only expandable header of press announcements
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.ExtendedPlayerDetails.SWD.desc=Display contract duration as seasons - weeks - days
 foxtrick.ExtendedPlayerDetails.SW.desc=Display contract duration as seasons - weeks
 foxtrick.ExtendedPlayerDetails.SD.desc=Display contract duration as seasons - days
 foxtrick.ExtendedPlayerDetails.WD.desc=Display contract duration as weeks - days
 foxtrick.ExtendedPlayerDetails.D.desc=Display contract duration as days
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Open teampopups in new tabs
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add TeamPopupLinks to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add TeamPopupLinks to manager links
 foxtrick.TeamPopupLinks.Manager.desc=Link to the manager (for team links only)
-foxtrick.TeamPopupLinksMore.Manager.desc=Link to the manager (for team links only)
 foxtrick.TeamPopupLinks.Team.desc=Link to the team (for manager links only)
-foxtrick.TeamPopupLinksMore.Team.desc=Link to the team (for manager links only)
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link to the team at Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Link to the team at Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link to the last matches
-foxtrick.TeamPopupLinksMore.Matches.desc=Link to the last matches
 foxtrick.TeamPopupLinks.Players.desc=Link to the players page
-foxtrick.TeamPopupLinksMore.Players.desc=Link to the players page
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link to the last 5 logins
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Link to the last 5 logins
 foxtrick.TeamPopupLinks.Guestbook.desc=Link to the guestbook
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Link to the guestbook
 foxtrick.TeamPopupLinks.SendMessage.desc=Link to Send Message
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Link to Send Message
 foxtrick.TeamPopupLinks.Challenge.desc=Link to challenge
-foxtrick.TeamPopupLinksMore.Challenge.desc=Link to challenge
 foxtrick.TeamPopupLinks.Achievements.desc=Link to Achievements
-foxtrick.TeamPopupLinksMore.Achievements.desc=Link to Achievements
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link to the transfer history
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Link to the transfer history
 foxtrick.TeamPopupLinks.LastLineup.desc=Link to the last lineup
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Link to the last lineup
 foxtrick.TeamPopupLinks.Coach.desc=Link to the Coach
-foxtrick.TeamPopupLinksMore.Coach.desc=Link to the Coach
 foxtrick.TeamPopupLinks.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropriate ids.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Own links. The tags [userid] and [teamid] will be replaced by the appropriate ids.
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colorises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorises skills only and not personalities, fan mood etc.
@@ -208,8 +190,10 @@ foxtrick.ExtraShortcuts.AddLeft.desc=Check to add icon left, uncheck to add them
 foxtrick.ExtraShortcuts.Supporterstats.desc=Linkicon to supporter stats
 foxtrick.ExtraShortcuts.Transfers.desc=Linkicon to transfers page of the own team
 foxtrick.ExtraShortcuts.Prefs.desc=Linkicon to preferences page
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Hide youthskills which are unknown on youthplayers overview page
 foxtrick.YouthSkillTable.desc=Show known youthskills as table
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Highlight winning teams on CupMatches page
 
 # -----------------------------------------------------------------------------
@@ -336,9 +320,9 @@ transfercompare_medianprice=Média de Preço
 transfercompare_avgprice=Preço Médio
 
 #YouthSkillNotes
-Notes_about_skills=Anotações sobre habilidades
-Edit_notes=Editar anotações
-Save_notes=Salvar anotações
+
+
+
 
 #Skilltypes
 Playmaking=Armação
@@ -361,6 +345,7 @@ foxtrick.menu.removeallfilters=Remover todos
 foxtrick.matchlineup.totalstars=Numero Total de Estrelas:
 foxtrick.shortcuts.matchlineup=Atalho para a pagina da formação inicial
 foxtrick.shortcuts.leaveconference=Atalho para sair da conferencia
+#matchdetail
 foxtrick.matchdetail.midfield=Meio Campo
 foxtrick.matchdetail.attack=Ataque
 foxtrick.matchdetail.defence=Defesa
@@ -429,7 +414,7 @@ foxtrick.tweaks.forummessagetemplates=Templates das mensagens do forum
 foxtrick.tweaks.flagsinplayerbackground=Bandeira nacional como fundo do rosto do jogador
 foxtrick.tweaks.teamlogobelow=Ajustar tamanho de logos grandes das equipes
 foxtrick.tweaks.mapofvisitedcountries=Mapa de paises visitados (pagina de colecÃ§Ã£o de bandeiras nacionais)
-foxtrick.tweaks.sendmessage=Enviar mensagem
+
 foxtrick.tweaks.selectplayer=Selecionar jogador
 foxtrick.linkscustom.selecticon=Selecionar icone
 foxtrick.linkscustom.addpersonallink=Adicionar link pessoal
@@ -444,7 +429,7 @@ foxtrick.linkscustom.help=Ajuda
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/) . For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). The tags you only need for rarer dynamic links. With tags the links are dynamically changed using the information of the side you are on. For example http:\/\/alltid.org\/league\/[leagueid] would allways lead you to the alltid side of the league you are just viewing in hattrick. The tags which are available on each site are listed in the select box. You only can use those which are listed on the site where you are adding your custom link. The text which is produced is just a sample template. You can write the tag yourself (with the []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and goto import preferences. Only the preferences present in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
 foxtrick.matches.income=Income:
-foxtrick.newmailtoyou=Novo e-mail para voce
+
 foxtrick.tweaks.Birthdays=Aniversarios
 foxtrick.tweaks.BirthdayLastWeek=Aniversarios ultima semana
 foxtrick.tweaks.BirthdayNextWeek=Aniversarios proxima semana
@@ -567,32 +552,33 @@ SP=SP
 
 # -----------------------------------------------------------------------------
 # Captions and labels
-foxtrick.prefs.MainTab=Menu de Opções
-foxtrick.prefs.ShortcutsTab=Atalhos e Modificações
-foxtrick.prefs.PresentationTab=Presentation and Tweaks
-foxtrick.prefs.MatchesTab=Jogos
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AboutTab=Sobre
-foxtrick.prefs.ChangesTab=Changes
-foxtrick.prefs.HelpTab=Help
-foxtrick.prefs.links=Links to question forums and help pages
-foxtrick.prefs.portal=FoxTrick portal
-foxtrick.prefs.external_forum=FoxTrick forum
-foxtrick.prefs.hattrick_forum=FoxTrick forum (Hattrick)
-foxtrick.prefs.commented_screenshots=Commented Screenshots
+#tabs
+tab.main=Menu de Opções
+tab.shortcutsAndTweaks=Atalhos e Modificações
+tab.presentation=Presentation and Tweaks
+tab.matches=Jogos
+tab.forum=Forum
+tab.links=Links
+tab.about=Sobre
+tab.changes=Changes
+tab.help=Help
+
+
+
+
+
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Please check language and currency settings. Some foxtrick features will not work if those settings are not set appropriately.
 foxtrick.prefs.captionHTLanguage=Configurações de idioma
 foxtrick.prefs.captionHTLanguageAutoSet=Check to automatically change language whenever you change your language in HT's preferences
-foxtrick.prefs.captionHTCurrency=Configurações de Valores
 foxtrick.prefs.captionHTDateformat=Configurações do formato de data
 foxtrick.prefs.captionHTCountry=Configurações de pais
 foxtrick.prefs.captionShowOnStatusBar=Mostrar icone de barra de estatus
 foxtrick.prefs.captionCleanupBranch=Resetar preferencias
 foxtrick.prefs.captionLoadSavePrefs=Exportar ou importar preferencias
-foxtrick.prefs.captionCurrencySymbolTo=Converte moeda para
-foxtrick.prefs.captionCurrencyConverter=Converter moeda
+
+
+#statusbarpref
 foxtrick.prefs.statusbarpref=Ligar (Necessario Reiniciar)
 foxtrick.prefs.captionAlertSettings=Configurações de alerta
 foxtrick.FoxtrickAlert.AlertSlider.desc=Mostrar alerta deslizante
@@ -607,8 +593,8 @@ foxtrick.prefs.labelSavePrefs_Prefs=Export foxtrick preferences
 foxtrick.prefs.labelSavePrefs_Notes=Export personal settings (notes, templates &  custom links)
 foxtrick.prefs.labelLoadPrefs=Importar preferencias do foxtrick (Preferencias existentes serao substitudas. Requer reiniciar)
 foxtrick.prefs.captionDisableSettings=Disabilitar Foxtrick
-foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick MyHT
-foxtrick.prefs.labelFoxtrickFirstRun=Select version from which you want to have shown once again on MyHT what has changed
+
+
 foxtrick.prefs.stagepref=Desabilitar Foxtrick no servidor do Stage
 foxtrick.prefs.disableTemporaryLabel=Disabilitar Foxtrick temporaramente
 
