--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -9,8 +9,8 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=Adaugă o scurtatura catre primul 11 pe pagina cu istoria meciurilor a jucatorilor
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=Evidentiaza cu galben jucatorul in primul 11 cand ajunge in primul 11 folosind scurtatura, inlocuind astfel evidentierea folosita de HT.
+foxtrick.LineupShortcut.desc=Adaugă o scurtatura catre primul 11 pe pagina cu istoria meciurilor a jucatorilor
+foxtrick.LineupShortcut.HighlightPlayer.desc=Evidentiaza cu galben jucatorul in primul 11 cand ajunge in primul 11 folosind scurtatura, inlocuind astfel evidentierea folosita de HT.
 foxtrick.SmallerPages.desc=Reduce dimensiunile unor pagini pentru a fi adaptate ecranelor de dimensiuni reduse
 foxtrick.SmallerPages.ReduceBid.desc=Muta bidul langa skilluri si scoate denumirea calitatilor lasand calitatile sub forma de numere
 foxtrick.ForumTemplates.desc=Permite transformarea posturilor din forumuri in sabloane pentru a putea fi utilizate ulterior
@@ -20,10 +20,12 @@ foxtrick.HideManagerAvatar.desc=Ascunde avatarul de pe forum, dar nu si linkuril
 foxtrick.AddLeaveConfButton.desc=Adauga un buton 'Paraseste forumul' pentru fiecare fiecare forum in parte
 foxtrick.StarsCounter.desc=Adauga numarul total de stele la pagina cu asezarea echipei
 foxtrick.MoveLinks.desc=Muta linkurile seriei si steagul la antetul mesajului. Nota: Functia din Hattrick 'Arata avatar si info' trebuie sa fie activata ca aceasta sa functioneze!
+#AttVsDef
 foxtrick.AttVsDef.desc=Adauga raportul atac/aparare la pagina meciului
 foxtrick.AttVsDef.oldstyle.desc=Stilul vechi
 foxtrick.AttVsDef.newstyle.desc=Stilul nou
 foxtrick.AttVsDef.oldstyleifkseparated.desc=Stilul vechi (fazele fixe separate)
+#Ratings
 foxtrick.Ratings.desc=Adauga ratinguri la pagina meciului
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliat)
@@ -38,6 +40,7 @@ foxtrick.FoxtrickAlert.desc=Afiseaza o notificare de tip pop-up cu Hattrick News
 foxtrick.FoxtrickAlert.NewMail.desc=Notificare de tip pop-up in cazul primirii unor mesaje noi (non-supporteri)
 foxtrick.FoxtrickAlert.NewForum.desc=Notificare de tip pop-up in cazul primirii unor mesaje noi pe forum (non-supporteri)
 foxtrick.AlertCustomSounds.desc=Sunete personalizate pentru alerte. Cele nebifate ruleaza sunetul implicit.
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Arata mediana preturilor de transfer in 'Compara transferul'
 foxtrick.FlagCollectionToMap.desc=Arata o harta a lumii cu toate tarile ale caror steaguri le-ati colectat in fiecare categorie
 foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de cautare pentru lista de transferuri
@@ -47,11 +50,11 @@ foxtrick.HTDateFormat.desc=Adauga saptamana si sezonul la nivel global/local la 
 foxtrick.HTDateFormat.LocalSaison.desc=Afiseaza sezonul local in locul sezonului global
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 = luni, -2 = sambata)
 foxtrick.TeamPopupLinks.desc=Afiseaza o mica fereastra pop-up cu linkuri cand tii cursorul peste un link teamid
-foxtrick.TeamPopupLinksMore.desc=Afiseaza un link 'mai multe...' in fereastra pop-up scurtaturi echipa care afiseaza la randul ei mai multe scurtaturi.
 foxtrick.StaffMarker.desc=Marcheaza nickname-urile oficialilor pe forum.
 foxtrick.StaffMarker.manager.desc=Marcheaza oficialii pe paginile echipelor.
 foxtrick.StaffMarker.own.desc=Marcaje personale
 foxtrick.StaffMarker.flag.desc=Adauga steaguri userilor in casuta de selectare
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Afiseaza linkuri pentru academia de tineret (functioneaza si mailuri)
 foxtrick.ForumYouthIcons.q.desc=Adauga iconita pentru quote daca lipseste
 foxtrick.ForumYouthIcons.user_id.desc=Adauga iconita pentru ID-ul userului
@@ -67,6 +70,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adauga iconita pentru ID-ul seriei ju
 foxtrick.ForumYouthIcons.enlarge_input.desc=Mareste casutele text pentru a usura scrierea
 foxtrick.ForumYouthIcons.pre.desc=Adauga icoanita pentru 'pre' formatul forumului
 foxtrick.ForumYouthIcons.table.desc=Adauga iconita pentru tabel
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML
 foxtrick.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze pe forum
 foxtrick.CopyPostID.AddCopyIcon.desc=Adauga o iconita 'Copiaza Id-ul postului' inainte primului postID
@@ -160,6 +164,7 @@ foxtrick.CustomMedals.desc=inlocuieste noile medalii Hattrick cu cele vechi
 foxtrick.SeniorTeamShortCuts.desc=Adauga link-urile 'Antrenor' si 'Ultima asezare' la echipele de seniori
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Arata doar pe paginile altor echipe
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Arata pe toate paginile
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Afiseaza cateva informatii ajutatoare pe pagina jucatorului
 foxtrick.ExtendedPlayerDetails.SWD.desc=Afisare durata contractului ca sezoane - saptamani - zile
 foxtrick.ExtendedPlayerDetails.SW.desc=Afisare durata contractului ca sezoane - saptamani
@@ -202,6 +207,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activeaza skin-ul 2 (stil link)
 foxtrick.CurrencyConverter.desc=Conversie valutara HT
 foxtrick.MovePlayerStatement.desc=Muta declaratia jucatorului la fata jucatorului. Daca fetele sunt dezactivate, declaratiile vor fi inlaturate
 foxtrick.TickerColoring.desc=Diferitele evenimente afisate in Tickerul de stiri sunt colorate.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adauga scurtaturi la scurtaturile principale (sus dreapta)
 foxtrick.ExtraShortcuts.AddLeft.desc=Bifeaza sa le asezi in stanga, debifeaza pentru dreapta
 foxtrick.ExtraShortcuts.AddSpace.desc=Mareste spatiul pentru iconitele scurtatura
@@ -214,6 +220,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copiaza ID-ul meciului cand dai click pe pictograma meciurilor liga/cupa/amical sau meciurilor din arhiva. Pentru suporteri functioneaza si pe pagina 'Meciuri directe'
 foxtrick.HeaderFix.desc=Fixeaza antetul in timpul scrollului
 foxtrick.HeaderFix.FixLeft.desc=De asemenea fixeaza submeniul in timpul scrollului
@@ -227,12 +234,10 @@ foxtrick.ContextMenuCopy.Link.desc=Optiune pentru a copia locatia linkului in HT
 foxtrick.ContextMenuCopy.HtMl.desc=Optiune pentru a copia continutul selectat in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Optiune pentru a copia tabelul in HT-ML
 foxtrick.NewMail.desc=Evidentiaza numerotarea mesajelor noi din casuta de mesaj si forum
-foxtrick.CopyTrainingReport.desc=Adauga un buton Copiaza Raport Antrenament (ce urmeaza a fi folosit in Hattrick Youth Club) la pagina antrenamentului la juniori
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Deschide intr-un tab nou hattick-youthclub.org dupa copiere
-foxtrick.CopyScoutReport.desc=Adauga un buton Copiaza comentarii Cautator de Talente (ce urmeaza a fi folosit in Hattrick Youth Club)la pagina detaliata a juniorului
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Deschide intr-un tab nou hattick-youthclub.org dupa copiere
-foxtrick.CopyPlayerSource.desc=Adauga un buton Copy PlayerSource (folosit in Hattrick Youth Club) la pagina detaliata a juniorului
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Deschide intr-un tab nou hattick-youthclub.org dupa copiere
+foxtrick.CopyYouth.TrainingReport.desc=Adauga un buton Copiaza Raport Antrenament (ce urmeaza a fi folosit in Hattrick Youth Club) la pagina antrenamentului la juniori
+foxtrick.CopyYouth.ScoutComment.desc=Adauga un buton Copiaza comentarii Cautator de Talente (ce urmeaza a fi folosit in Hattrick Youth Club)la pagina detaliata a juniorului
+foxtrick.CopyYouth.PlayerSource.desc=Adauga un buton Copy PlayerSource (folosit in Hattrick Youth Club) la pagina detaliata a juniorului
+
 foxtrick.PlayerBirthday.desc=Arata ultimele si urmatoarele zile de nastere in pagina jucatorilor.
 foxtrick.MovePlayerSelectbox.desc=Muta casuta de selectare a jucatorilor pe pagina detaliata a jucatorului
 foxtrick.SeasonStats.desc=Arata date pe pagina cu arhiva meciurilor
@@ -241,46 +246,28 @@ foxtrick.LeagueNewsFilter.all.desc=Arata toate stirile
 foxtrick.LeagueNewsFilter.friendlies.desc=Arata doar stiri despre amicale si antrenori noi
 foxtrick.LeagueNewsFilter.transfers.desc=Arata stiri doar despre transferuri
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Arata stiri doar despre schimbarile ordinelor
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Muta managerii online pe pagina regiunilor. Atentie! Va functiona foarte incet daca numarul managerilor online depaseste 100.
-foxtrick.TeamPopupLinks.OpenNewTab.desc=Deschide teampopup-urile in taburi noi
 foxtrick.TeamPopupLinks.TeamLinks.desc=Adauga TeamPopupLinks la linkurile echipei
 foxtrick.TeamPopupLinks.UserLinks.desc=Adauga TeamPopupLinks la linkurile utilizatorului
 foxtrick.TeamPopupLinks.Manager.desc=Link catre Manager (doar pentru linkurile echipei)
-foxtrick.TeamPopupLinksMore.Manager.desc=Link catre Manager (doar pentru linkurile echipei)
 foxtrick.TeamPopupLinks.Team.desc=Link catre Echipa (doar pentru linkuri manager)
-foxtrick.TeamPopupLinksMore.Team.desc=Link catre Echipa (doar pentru linkuri manager)
 foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link catre echipa pe Alltid
-foxtrick.TeamPopupLinksMore.TeamAtAlltid.desc=Link catre echipa pe Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link catre ultimele meciuri
-foxtrick.TeamPopupLinksMore.Matches.desc=Link catre ultimele meciuri
 foxtrick.TeamPopupLinks.Players.desc=Link catre pagina jucatorilor
-foxtrick.TeamPopupLinksMore.Players.desc=Link catre pagina jucatorilor
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link catre ultimele 5 logari
-foxtrick.TeamPopupLinksMore.last_5_ips.desc=Link catre ultimele 5 logari
 foxtrick.TeamPopupLinks.Guestbook.desc=Link catre Cartea de oaspeti
-foxtrick.TeamPopupLinksMore.Guestbook.desc=Link catre Cartea de oaspeti
 foxtrick.TeamPopupLinks.SendMessage.desc=Link catre Trimite mesaj
-foxtrick.TeamPopupLinksMore.SendMessage.desc=Link catre Trimite mesaj
 foxtrick.TeamPopupLinks.Challenge.desc=Link catre Provoaca
-foxtrick.TeamPopupLinksMore.Challenge.desc=Link catre Provoaca
 foxtrick.TeamPopupLinks.Achievements.desc=Link catre Realizari
-foxtrick.TeamPopupLinksMore.Achievements.desc=Link catre Realizari
 foxtrick.TeamPopupLinks.TransferHistory.desc=Link catre Istoria transferurilor
-foxtrick.TeamPopupLinksMore.TransferHistory.desc=Link catre Istoria transferurilor
 foxtrick.TeamPopupLinks.TeamHistory.desc=Link catre Istoria clubului
-foxtrick.TeamPopupLinksMore.TeamHistory.desc=Link catre Istoria clubului
 foxtrick.TeamPopupLinks.LastLineup.desc=Link catre ultima asezare
-foxtrick.TeamPopupLinksMore.LastLineup.desc=Link catre ultima asezare
 foxtrick.TeamPopupLinks.NextMatch.desc=Link catre urmatorul meci
-foxtrick.TeamPopupLinksMore.NextMatch.desc=Link catre urmatorul meci
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adauga urmatorul meci la HT-Live
-foxtrick.TeamPopupLinksMore.AddNextMatch.desc=Adauga urmatorul meci la HT-Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Link catre meciurile juniorilor
-foxtrick.TeamPopupLinksMore.YouthMatches.desc=Link catre meciurile juniorilor
 foxtrick.TeamPopupLinks.Coach.desc=Link catre Antrenor
-foxtrick.TeamPopupLinksMore.Coach.desc=Link catre Antrenor
 foxtrick.TeamPopupLinks.CustomLink.desc=Linkuri proprii. Tag-uri [userid] si [teamid] vor fi inlocuite de id-urile in cauza.
-foxtrick.TeamPopupLinksMore.CustomLink.desc=Linkuri proprii. Tag-uri [userid] si [teamid] vor fi inlocuite de id-urile in cauza.
 foxtrick.SkillColoring.desc=Vizualizare mai usoara a calitatilor
 foxtrick.SkillColoring.skill_color.desc=Coloreaza calitatile
 foxtrick.SkillColoring.only_skill_color.desc=Coloreaza calitatile, dar nu si personalitatea, starea fanilor etc.
@@ -290,16 +277,19 @@ foxtrick.SkillColoring.skill_select.desc=Arata calitatile si ca numere si la tra
 foxtrick.SkillColoring.no_skill_links.desc=Ascunde fontul verde dat de HT-i
 foxtrick.BackgroundFixed.desc=Imagine fundal statica.
 foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile necunoscute ale jucatorilor si/sau "maximum" pe pagina juniorilor.
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maximum' pentru a castiga spatiu
 foxtrick.SkillTable.desc=Arata calitatile jucatorilor sub forma unui tabel.
 foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
 foxtrick.HighlightCupwins.highlight_outsider.desc=Evidentiaza meciurile castiga de echipe cu rank mai mic
 foxtrick.SkillTranslation.desc=Adauga traducerea calitatilor in Engleza pe pagina de ajutor
 foxtrick.ReadHtPrefs.desc=Detecteaza automat limba, tara, moneda si formatul datei (updatat dupa login)
-foxtrick.OnPagePrefs.desc=Arata o mica casuta jos in stanga sau dreapta lateral care permit schimbarea modulelor FoxTrick care ar putea strica afisarea paginii
+#CountryList
 foxtrick.CountryList.desc=Modificari pentru numele tarilor
 foxtrick.CountryList.SelectBoxes.desc=Schimba numele tarilor din Engleza in numele originale
 foxtrick.CountryList.TeamPage.desc=Afiseaza un link-text catre liga inaintea regiuii si seriei pe pagina echipei
@@ -316,13 +306,11 @@ foxtrick.ForumStripHattrickLinks.desc=Face linkurile din forum folosibile si ada
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Nicio confirmare inaintea formarii linkurilor
 foxtrick.LeagueAndMatchChat.desc=Adauga link catre chat extern pe pagina Cupei si pagina Fedaratiilor, la fel si la paginile ligiilor si meciurilor de seniori si juniori.
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Chat Yaplet in fereastra noua
-foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Deschide chatul Yaplet in interiorul paginii Hattrick
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Deschide chatul Gabbly in fereastra noua
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Alege numele utilizator pentru chat
 foxtrick.RapidId.desc=O casuta in susul paginii pentru a vedea echipa, jucatorul, etc dupa ID
 foxtrick.YouthSeriesEstimation.desc=In momentul cautarii, estimeaza momentul startului ligii de juniori care sunt in pauza competitionala
 foxtrick.LocalTime.desc=Arata optional ora locala in locul orei HT.Clickuind pe ceas se schimba intre cele doua optiuni.
-foxtrick.LocalTime.DefaultLocal.desc=Arata ora locala ca implicita
 foxtrick.ForumThreadAutoIgnore.desc=Ignora automat topicurile cand selectezi tag-uri (topicuri cu [Tag] sau {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tag-uri, exemple: NT, idee, Bug.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista alba a topicurilor dupa ID. Topicurile din lista alba nu vor fi ignorate.
@@ -379,7 +367,7 @@ foxtrick.HistoryStats.cupwinner.short=CC
 # YouthPromoteDays
 foxtrick.youthpromotedays.prom_d=Jucatorul poate fi promovat in
 foxtrick.youthpromotedays.days=zile
-foxtrick.youthpromotedays.prom_t=Jucatorul poate fi promovat astazi!
+YouthPromotes.today=Jucatorul poate fi promovat astazi!
 
 # links
 foxtrick.links.boxheader=Linkuri
@@ -610,6 +598,7 @@ Current_club.abbr=Echipa
 Current_league=Liga curenta
 Current_league.abbr=Liga
 
+#matchdetail
 foxtrick.matchdetail.midfield=Mijloc
 foxtrick.matchdetail.attack=Atac
 foxtrick.matchdetail.defence=Aparare
@@ -645,7 +634,7 @@ foxtrick.linkscustom.help=Ajutor
 foxtrick.linkscustom.helptext=In primul rand, acesta este doar modul de editor. Daca faceti click pe antetul acestei casute se va comuta intre editor si modul normal. Doar in modul normal linkurile proprii sunt pe deplin functionale. Linkurile externe statice sunt usor de adaugat, este suficient sa adaugati url-ul complet (Exemplu: http: \ / \ / alltid.org \ / liga \ / 427 \ /). Pentru linkuri interne statice sariti partea cu serverul (exemplu: \ / World \ / Seria \ / Default.aspx? LeagueLevelUnitID = 427). Cu ajutorul etichetelor linkurile sunt schimbate dinamic. De exemplu http: \ / \ / alltid.org \ / Liga \ / [leagueid] va va conduce intotdeauna in alltid in partea ligii care o vizualizati in hattrick. Etichetele care sunt la indemana pe fiecare site sunt listate in casuta de selectare. Poti utiliza doar acele etichete care sunt listate pe situl unde adaugi linkul. Textul produs este doar un exemplu de sablon. Poti scrie la tag-ul dvs. (cu []).
 foxtrick.linkscustom.helptext2=De asemenea puteti exporta linkurile. Pentru a face acest lucru puteti da click pe butonul Export si selectati un fisier pentru a salva acel link. Linkurile sunt adaugate in acest fisier, puteti salva mai multe linkuri intr-un singur fisier. Pentru a importa linkuri mergeti la casuta preferinta de dialog si apoi import preferinte. Doar preferintele prezente in fisierul selectat vor fi importate, care in acest caz sunt linkurile proprii. Nici unul din linkurile precedente nu vor fi sterse.
 foxtrick.matches.income=Venituri:
-foxtrick.newmailtoyou=Mesaje noi catre tine
+
 foxtrick.tweaks.Birthdays=Zile de nastere
 foxtrick.tweaks.BirthdayToday=Zile de nastere astazi
 foxtrick.tweaks.BirthdayLastWeek=Zile de nastere saptamana trecuta
@@ -660,7 +649,7 @@ foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nic
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=Setari FoxTrick pe pagina curenta
+
 foxtrick.modules_allpages=Module care functioneaza pe toate paginile
 HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
 NewOrChangedModules=Urmatoarele module sunt noi sau au fost schimbate de la
@@ -920,6 +909,7 @@ status.disabled=Dezactivat
 prefs.screenshot=Screenshot
 
 # tabs in preferences page
+#tabs
 tab.main=Principala
 tab.informationAggregation=Informatii agregare
 tab.shortcutsAndTweaks=Scurtaturi
@@ -939,6 +929,7 @@ foxtrick.prefs.captionHTCountry=Setari tara
 foxtrick.prefs.captionShowOnStatusBar=Afiseaza pictograma status
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta si importa preferinte
+#statusbarpref
 foxtrick.prefs.statusbarpref=Afiseaza iconita FoxTrick in status (necesita restart)
 foxtrick.prefs.captionAlertSettings=Setari alerta
 foxtrick.FoxtrickAlert.AlertSlider.desc=Arata alerta glisanta
