--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -42,6 +42,7 @@ foxtrick.StaffMarker.desc=Markeer gebruikers op het forum en teampagina's, die t
 foxtrick.StaffMarker.manager.desc=Markeer de alias van officials op teampagina's
 foxtrick.StaffMarker.own.desc=Persoonlijke markeringen
 foxtrick.StaffMarker.flag.desc=Voegt vlaggen toe aan gebruikers in het selectievenster
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Toon een balk met links voor de jeugdopleiding op het forum (werkt ook in HT mail, persberichten, advertenties en gastenboek)
 foxtrick.ForumYouthIcons.q.desc=Toon icoon voor aanhalingstekens als deze er niet zijn
 foxtrick.ForumYouthIcons.user_id.desc=Toon icoon voor UserID
@@ -57,6 +58,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Toon icoon voor YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergroot de tekstboxen om gemakkelijker berichten te schrijven
 foxtrick.ForumYouthIcons.pre.desc=Toon icoon voor forum 'pre' formaat (vaste spaties en afstanden)
 foxtrick.ForumYouthIcons.table.desc=Toon icoon voor tabel. Aangepast label accepteert Regular Expressions (Om \ te krijgen, voeg nog een \ toe, bijv. \\)
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Vervang FoxTrick HT-ML tags door HTML tags (bv 'pre' element)
 foxtrick.CopyPostID.desc=Toon een link om het ID van een bericht te kopiëren
 foxtrick.CopyPostID.AddCopyIcon.desc=Toon een icoon 'Kopieer Bericht ID' voor het eerste bericht-ID in de berichtkop
@@ -65,7 +67,6 @@ foxtrick.ShowForumPrefButton.desc=Toon snelkoppeling naar forumvoorkeuren op all
 foxtrick.AlltidFlags.desc=Toon Alltid vlaggetjes en links van beide auteurs in een bericht op het forum
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link eerst naar de competitiepagina op Hattrick, als de (verborgen) manager avatar aan staat
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link eerst maar de competitiepagina op Alltid
-foxtrick.LinksCustom.desc=Toon opties om eigen links toe te voegen. Hoe werkt dit: Als je deze optie aanzet, krijg je een 'voeg link toe' optie in de FoxTrick externe links boxen. Daarnaast krijg je bij je reeds geplaatste eigen links een 'verwijder' optie te zien. Als je een link toevoegt, dan mag een icoon 16x16 pixels zijn. Als je deze module weer uitzet, dan verwdwijnen de 'voeg toe' en 'verwijder' opties, maar je eigen links blijf je zien.
 foxtrick.LinksLeague.desc=Toon een aantal nuttige externe links op de competitiepagina
 foxtrick.LinksTeam.desc=Toon een aantal nuttige externe links op de teampagina
 foxtrick.LinksCountry.desc=Toon een aantal nuttige externe links op de landenpagina
@@ -149,6 +150,7 @@ foxtrick.CustomMedals.desc=Vervang de nieuwe Hattrick trofeeën met de oude stij
 foxtrick.SeniorTeamShortCuts.desc=Toon coach en laatste opstelling links bij eerste elftallen
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Toon alleen op andere team pagina's
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Toon op alle pagina's
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Toon handige extra informatie bij spelerdetails
 foxtrick.ExtendedPlayerDetails.SWD.desc=Toon contractduur in seizoenen - weken - dagen
 foxtrick.ExtendedPlayerDetails.SW.desc=Toon contractduur in seizoenen - weken
@@ -189,6 +191,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activeer skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Reken HT valuta om
 foxtrick.MovePlayerStatement.desc=Verplaats een spelersverklaring naar de afbeelding van een speler. Indien afbeeldingen uitgeschakeld zijn, wordt de spelersverklaring niet getoond
 foxtrick.TickerColoring.desc=Kleur de verschillende gebeurtenissen in de ticker
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Toon extra links bij de hoofdiconen
 foxtrick.ExtraShortcuts.AddLeft.desc=Vink aan om de iconen links te plaatsen, uitgevinkt plaatst de iconen rechts
 foxtrick.ExtraShortcuts.AddSpace.desc=Vergroot de tussenruimte tussen snelkoppeling-iconen
@@ -199,6 +202,7 @@ foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link naar de FoxTrick voorkeurenpagin
 foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link naar Hattrick Radio (België/Nederland) (Winamp)
 foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link naar Hatrick Radio (België/Nederland) (Windows Media Player)
 foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link naar Radio downtime (DACHL) (Winamp)
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Kopieer het wedstrijd-ID als je op het competitie/beker/vriendschappelijk icoon klikt op de wedstrijdenpagina. Voor supporters werkt dit ook op de wedstrijdvoorbeschouwingspagina's
 foxtrick.HeaderFix.desc=Repareer de kop van de Hattrick website tijdens scrollen op de pagina
 foxtrick.HeaderFix.FixLeft.desc=Repareer ook het submenu tijdens het scrollen
@@ -214,12 +218,10 @@ foxtrick.ContextMenuCopy.Table.desc=Optio om een tabel in HT-ML te kopiëren
 foxtrick.NewMail.desc=Laat duidelijker zien dat je nieuwe mail hebt
 foxtrick.NewMail.NotifyMail.desc=Laat een melding zien als er nieuwe berichten voor je zijn
 foxtrick.NewMail.HighlightNewForum.desc=Markeer het getal met het aantal nieuwe forum berichten
-foxtrick.CopyTrainingReport.desc=Toon een knop om het trainingsverslag te kopiëren van de trainingpagina van je jeugdteam
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
-foxtrick.CopyScoutReport.desc=Toon een knop om het commentaar van de scout te kopiëren
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
-foxtrick.CopyPlayerSource.desc=Toon een knop om de source code van een jeugdspeler te kopiëren
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Open hattrick-youthclub.org in nieuwe tab na het kopiëren
+foxtrick.CopyYouth.TrainingReport.desc=Toon een knop om het trainingsverslag te kopiëren van de trainingpagina van je jeugdteam
+foxtrick.CopyYouth.ScoutComment.desc=Toon een knop om het commentaar van de scout te kopiëren
+foxtrick.CopyYouth.PlayerSource.desc=Toon een knop om de source code van een jeugdspeler te kopiëren
+
 foxtrick.PlayerBirthday.desc=Toon laatste en volgende verjaardag in spelersoverzicht
 foxtrick.MovePlayerSelectbox.desc=Verplaats de speler selectieknop naar boven op de speler detailpagina
 foxtrick.SeasonStats.desc=Toon statistieken op de wedstrijdarchief pagina's
@@ -231,6 +233,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Markeer teams die onlangs hun opstelling hebben gewijzigd in de 'Volgende ronde' tabel
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Markeer teams die gewonnen hebben in het 'Laatste wedstrijd' overzicht
 foxtrick.LeagueNewsFilter.gray_bots.desc=Maak botteams en eigenaarloze teams grijs in competitietabellen
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op: dit kan erg traag worden als er meer dan 100 managers online zijn.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
 foxtrick.TeamPopupLinks.UserLinks.desc=Toon team pop-up naar managerlinks
@@ -261,16 +264,18 @@ foxtrick.SkillColoring.skill_select.desc=Toon ook getallen op de transfermarkt, 
 foxtrick.SkillColoring.no_skill_links.desc=Verberg de onderlijning en het groene lettertype van HT's
 foxtrick.BackgroundFixed.desc=Statische achtergrondafbeelding
 foxtrick.MatchIncome.desc=Entreegeld in wedstrijd detailpagina
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Meer ruimte op de jeugdspelers pagina
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberg jeugdvaardigheden die nog niet bekend zijn op de jeugdspelers overzichtpagina
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberg de 'max.' waarde om meer ruimte te creëren, met name als gezichten getoond worden
 foxtrick.SkillTable.desc=Toon de spelersvaardigheden in een tabel. Suggestie: module 'ExtraPlayerInfo' om extra informatie te tonen
 foxtrick.SkillTable.OtherTeams.desc=Toon ook voor andere teams
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Markeer de winnaars op de bekerwedstrijdenpagina
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Markeer wedstrijden gewonnen door het team wat lager op de ranglijst staat
 foxtrick.SkillTranslation.desc=Toon Engelse vertalingen van de vaardigheden op de heplpagina's
 foxtrick.ReadHtPrefs.desc=Pas automatisch de taalinstellingen in FoxTrick aan als je van taal wijzigt in Hattrick
-foxtrick.OnPagePrefs.desc=Toon een venster aan de zijkant, waarmee je FoxTrick modules kunt wijzigen die het uiterlijk van de huidige pagina aanpassen
+#CountryList
 foxtrick.CountryList.desc=Aanpassingen voor landennamen
 foxtrick.CountryList.SelectBoxes.desc=Vervang de Engelstalige landennamen voor hun eigen landennamen in selectievelden
 foxtrick.CountryList.TeamPage.desc=Toon een tekstlink naar de competitie voor de regio en de klasse op een team pagina
@@ -279,7 +284,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Verwijder de afbeeldinglink naar de comp
 foxtrick.MatchTables.desc=Verwijder spaties uit de wedstrijdtabellen in het eenvoudige thema
 foxtrick.MatchTables.RemoveTime.desc=Verwijder het tijdstip van de wedstrijd bij de wedstrijdentabel
 foxtrick.YouthPromotes.desc=Toon aantal dagen tot promotie van een jeugdspeler
-foxtrick.htmsStatistics.desc=Toon scoringsstatistieken bij wedstrijden
+foxtrick.HTMSPrediction.desc=Toon scoringsstatistieken bij wedstrijden
 foxtrick.HighlightOwnerless.desc=Markeer botteams en eigenaarloze teams op de competitiepagina
 foxtrick.LastLogin.desc=Toon de tijd sinds de laatste login op de managerpagina
 foxtrick.TransferCompareSort.desc=Door te klikken op de kop kun je de transfervergelijking resultaten sorteren op TSI, prijs of vorm
@@ -287,13 +292,11 @@ foxtrick.ForumStripHattrickLinks.desc=Verwijder de servernaam uit links op het f
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Geen bevestiging voordat de link aangepast wordt
 foxtrick.LeagueAndMatchChat.desc=Toon een link naar externe chat op pagina's voor de Cup, federaties, competities, jeugdcompetities, wedstrijden en jeugdwedstrijden. (als je geen begroeting krijgt te zien, is de provider down)
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Open Yaplet chat in een nieuw venster
-foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Open Yaplet chat binnen de Hattrick pagina
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Open Gabbly chat in een nieuw venster
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Kies je nickname voor de chat
 foxtrick.RapidId.desc=Een handig veld bovenaan de pagina om snel op ID een team, speler, etc. te bekijken
 foxtrick.YouthSeriesEstimation.desc=In de zoekresultaten-tabel, schat de start tijd van jeugdcompetities die een seizoensonderbreking hebben
 foxtrick.LocalTime.desc=Laat de optionele locale tijd zien, ipv de Hattrick tijd. Als op de klok geklikt wordt, wisselt de tijdsweergave tussen deze twee
-foxtrick.LocalTime.DefaultLocal.desc=Laat standaard de locale tijd zien
 foxtrick.ForumThreadAutoIgnore.desc=Negeer forum onderwerpen met geselecteerde labels (onderwerpen met [Label] of {Label})
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lijst met labels, bijv.: NT, Idee, Bug. (Komma gescheiden, negeert hoofd/kleine letters)
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lijst met toegestane onderwerpen, gebaseerd op IDs (het deel voor de punt). Onderwerpen in deze lijst worden niet genegeerd. Komma gescheiden
@@ -565,6 +568,7 @@ Current_club.abbr=Club
 Current_league=Huidige competitie
 Current_league.abbr=Competitie
 
+#matchdetail
 foxtrick.matchdetail.midfield=Middenveld
 foxtrick.matchdetail.attack=Aanval
 foxtrick.matchdetail.defence=Verdediging
@@ -600,8 +604,6 @@ foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=Allereerst, dit is de bewerkingsmodus. Door op de bovenkant van deze box te klikken, schakel je tussen de bewerkingsmodus en de normale modus. Alleen in de normale modus werken de links. Statische externe links zijn gemakkelijk toe te voegen, voeg gewoon de volledige URL toe (voorbeeld: http: \/\/alltid.org\/league\/427\/). Voor statische links binnen Hattrick laat je het server gedeelte weg (voorbeeld: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). De parameters zijn alleen nodig voor dynamische links. Met parameters kun je informatie van Hattrick dynamisch in links plaatsen (voorbeeld: http:\/\/alltid.org\/league\/[leagueid] stuurt je naar de alltid site van de competitie die je op dat moment bekijkt). De parameters die op iedere pagina beschikbaar zijn, worden getoond in een selectieveld. Je kunt alleen die parameters gebruiken. De tekst die getoond wordt in een link, is slechts een voorbeeld. Je kunt die tekst zelf vervangen door je parameter naar keuze (met de []).
 foxtrick.linkscustom.helptext2=Je kunt je links ook exporteren en delen. Hiertoe klik je op de export knop en selecteer je een bestand om je links in op te slaan. Links worden aan dat bestand toegevoegd, dus je kunt verscheidene links in één bestand opslaan. Om links te importeren ga je in het voorkeuren venster naar inporteer voorkeuren. Alleen de voorkeuren uit het geselecteerde bestand worden geïmporteerd. In dit geval zijn dat dus alleen jouw links. Reeds bestaande links worden niet verwijderd.
 foxtrick.matches.income=Recette:
-foxtrick.newmailtoyou=nieuw(e) bericht(en)
-foxtrick.newforumtoyou=nieuw(e) forumbericht(en)
 foxtrick.tweaks.Birthdays=Verjaardagen
 foxtrick.tweaks.BirthdayToday=Verjaardagen vandaag
 foxtrick.tweaks.BirthdayLastWeek=Verjaardagen afgelopen week
@@ -617,7 +619,7 @@ ntpeek.title=Recente wedstrijden van het nationale team
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick PaginaVoorkeuren
+
 foxtrick.modules_allpages=Modules die op alle pagina's werken
 HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal automatisch gekozen moet worden. Jouw FoxTrick taal is nu ingesteld op: %s.
 
@@ -770,10 +772,10 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federatie Chat
 
 
 #htms
-foxtrick.htmsStatistics.prediction=Voorspeld resultaat
-foxtrick.htmsStatistics.windrawloss=winst/gelijkspel/verlies
-foxtrick.htmsStatistics.linkcaption=Wedstrijdanalyse door HTMS
-foxtrick.htmsStatistics.changePrediction=Wijzig voorspelling
+HTMSPrediction.prediction=Voorspeld resultaat
+HTMSPrediction.windrawloss=winst/gelijkspel/verlies
+HTMSPrediction.title=Wedstrijdanalyse door HTMS
+HTMSPrediction.changePrediction=Wijzig voorspelling
 
 #HTMSPoints
 HTMSPoints=HTMS Punten:
@@ -869,6 +871,7 @@ status.disabled=uitgeschakeld
 prefs.screenshot=Screenshot
 
 # tabs in preferences page
+#tabs
 tab.main=Hoofdopties
 tab.informationAggregation=Informatie Verzameling
 tab.shortcutsAndTweaks=Links en tweaks
@@ -888,6 +891,7 @@ foxtrick.prefs.captionHTCountry=Land
 foxtrick.prefs.captionShowOnStatusBar=Statusbalk icoon
 foxtrick.prefs.captionCleanupBranch=Opgeslagen voorkeuren
 foxtrick.prefs.captionLoadSavePrefs=Exporteer of importeer voorkeuren
+#statusbarpref
 foxtrick.prefs.statusbarpref=Toon FoxTrick icoon in statusbalk (vereist herstart)
 foxtrick.prefs.labelCleanupBranch=Zet standaard instellingen terug (alleen voorkeuren, geen persoonlijke instellingen, herstart vereist)
 foxtrick.prefs.labelDisableAll=Schakel alle modules uit
