--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -47,6 +47,7 @@ foxtrick.StaffMarker.desc=在论坛以及球队页面高亮官方工作人员的
 foxtrick.StaffMarker.manager.desc=在球队页面高亮
 foxtrick.StaffMarker.own.desc=自定义标记, 使用 JSON 格式, 以用户 ID 为键, 样式为值, 如 {"1001" : "color: red;", "1002" : "background-color: yellow;"}
 foxtrick.StaffMarker.flag.desc=在选择框中给用户添加旗帜
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=显示用于青年队的链接条 (同样适用于邮件, 新闻通告, 以及访客记录)
 foxtrick.ForumYouthIcons.q.desc=添加引用的图标
 foxtrick.ForumYouthIcons.user_id.desc=添加用户 ID 的图标
@@ -62,6 +63,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=添加青年联赛 ID 的图标
 foxtrick.ForumYouthIcons.enlarge_input.desc=增大文本框以更好地输入
 foxtrick.ForumYouthIcons.pre.desc=添加“pre”格式的图标
 foxtrick.ForumYouthIcons.table.desc=添加表格的图标, 自定义的分隔符为正则表达式形式.
+#FormatPostingText
 foxtrick.FormatPostingText.desc=将FoxTrick的HT-ML标签转换为HTML标签 (即使用<pre>元素)
 foxtrick.CopyPostID.desc=提供复制帖子 ID 的链接
 foxtrick.CopyPostID.AddCopyIcon.desc=在帖子 ID 前添加一个复制帖子 ID 的按钮
@@ -153,6 +155,7 @@ foxtrick.CustomMedals.desc=将新式奖杯替换为旧式奖杯
 foxtrick.SeniorTeamShortCuts.desc=将教练以及上场比赛阵容链接添加到成年队
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=只在其他球队的页面上显示
 foxtrick.SeniorTeamShortCuts.AllPages.desc=在所有球队页面上显示
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=在球员详细页面中显示一些有用的信息
 foxtrick.ExtendedPlayerDetails.SWD.desc=将加入球队时间显示为赛季 - 周 - 日
 foxtrick.ExtendedPlayerDetails.SW.desc=将加入球队时间显示为赛季 - 周
@@ -193,6 +196,7 @@ foxtrick.SkinPlugin.Skin2.desc=皮肤 2 (链接样式)
 foxtrick.CurrencyConverter.desc=HT 货币转换
 foxtrick.MovePlayerStatement.desc=将球员声明移到球员头像内. 如果禁用了头像, 则声明将被移除.
 foxtrick.TickerColoring.desc=根据滚动新闻内容不同, 显示不同的颜色.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=在主要的快捷键旁边添加快捷键
 foxtrick.ExtraShortcuts.AddLeft.desc=在左边添加按钮, 若未选定则在右边添加
 foxtrick.ExtraShortcuts.AddSpace.desc=在按钮之间添加空白
@@ -205,6 +209,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
+#CopyMatchID
 foxtrick.CopyMatchID.desc=当点击比赛左边的联赛/杯赛/附加赛/友谊赛图标时, 复制比赛 ID.
 foxtrick.HeaderFix.desc=在滚动页面时固定头部
 foxtrick.HeaderFix.FixLeft.desc=同时固定左边的菜单
@@ -220,12 +225,10 @@ foxtrick.ContextMenuCopy.Table.desc=以 HT-ML 格式复制表格的选项
 foxtrick.NewMail.desc=高亮新邮件数量与新论坛消息数量
 foxtrick.NewMail.NotifyMail.desc=在有新邮件到来时显示通知
 foxtrick.NewMail.NotifyForum.desc=在有论坛回复时显示通知
-foxtrick.CopyTrainingReport.desc=在青年队训练页面中添加一个复制训练报告的按钮
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=在复制后打开 hattrick-youthclub.org
-foxtrick.CopyScoutReport.desc=在青年球员详细页面中添加一个复制球探评论的按钮
-foxtrick.CopyScoutReport.OpenHTYpage.desc=在复制后打开 hattrick-youthclub.org
-foxtrick.CopyPlayerSource.desc=在青年球员详细页面中添加一个复制 HTML 源代码的按钮 (用于 hattrick-youthclub.org)
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=在复制后打开 hattrick-youthclub.org
+foxtrick.CopyYouth.TrainingReport.desc=在青年队训练页面中添加一个复制训练报告的按钮
+foxtrick.CopyYouth.ScoutComment.desc=在青年球员详细页面中添加一个复制球探评论的按钮
+foxtrick.CopyYouth.PlayerSource.desc=在青年球员详细页面中添加一个复制 HTML 源代码的按钮 (用于 hattrick-youthclub.org)
+
 foxtrick.PlayerBirthday.desc=在球员概述中显示刚过以及即将到来的球员生日
 foxtrick.MovePlayerSelectbox.desc=在球员详细页面中将球员选择框移至上方
 foxtrick.SeasonStats.desc=在归档比赛页面中显示统计信息
@@ -234,6 +237,7 @@ foxtrick.LeagueNewsFilter.all.desc=显示所有新闻
 foxtrick.LeagueNewsFilter.friendlies.desc=仅显示国际友谊赛以及教练变更
 foxtrick.LeagueNewsFilter.transfers.desc=仅显示转会
 foxtrick.LeagueNewsFilter.lineup_changes.desc=仅显示布阵改变
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=将地区页面中在线的经理向上移. 注意! 如果超过100个玩家在线, 会很慢.
 foxtrick.TeamPopupLinks.TeamLinks.desc=给球队链接添加 TeamPopupLinks
 foxtrick.TeamPopupLinks.UserLinks.desc=给经理链接添加 TeamPopupLinks
@@ -264,16 +268,18 @@ foxtrick.SkillColoring.skill_select.desc=在转会搜索中显示与技能对应
 foxtrick.SkillColoring.no_skill_links.desc=隐藏 Hattrick 的下划线和绿色字体
 foxtrick.BackgroundFixed.desc=静态背景图像
 foxtrick.MatchIncome.desc=在比赛报告中显示比赛收入
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=在青年球员列表页面隐藏未知技能和/或隐藏“最高”关键词
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=隐藏未知技能
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=隐藏“最高”关键词以获得更多空间
 foxtrick.SkillTable.desc=将球员的技能显示为一个技能表.
 foxtrick.SkillTable.OtherTeams.desc=在其他球队的页面上也显示
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=在杯赛列表中高亮胜队
 foxtrick.HighlightCupwins.HighlightCupsets.desc=高亮由杯赛排名较低的球队获胜的比赛
 foxtrick.SkillTranslation.desc=在帮助/名称页面添加与技能对应的英语
 foxtrick.ReadHtPrefs.desc=自动设置语言, 国家, 以及货币
-foxtrick.OnPagePrefs.desc=在边栏显示页面设置框, 用于设置在该页面上运行的模块.
+#CountryList
 foxtrick.CountryList.desc=国家选项
 foxtrick.CountryList.SelectBoxes.desc=在选择框中将英语的国家名替换为它们的原名
 foxtrick.CountryList.TeamPage.desc=在球队页面上, 在地区和联赛链接之前显示到国家的链接
@@ -295,7 +301,6 @@ foxtrick.LeagueAndMatchChat.ChatNick.desc=选择你用于聊天的昵称
 foxtrick.RapidId.desc=在页面顶端方便根据 ID 查看比赛, 球员等的输入框
 foxtrick.YouthSeriesEstimation.desc=在搜索结果中, 估计间歇期中的青年联赛恢复比赛的时间
 foxtrick.LocalTime.desc=以本地时区显示时钟, 点击时钟可在两个时区之间切换.
-foxtrick.LocalTime.DefaultLocal.desc=默认显示本地时区的时钟
 foxtrick.ForumThreadAutoIgnore.desc=自动忽略包含给定标签的论坛帖子 (以 [Tag] 或 {Tag} 开头)
 foxtrick.ForumThreadAutoIgnore.Tags.desc=标签列表, 如: NT, idea, Bug. 由逗号分隔, 大小写不敏感.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=帖子白名单, 包含帖子 ID (“.”之前的部分). 白名单内的帖子不会被忽略.
@@ -583,6 +588,7 @@ Current_club.abbr=球队
 Current_league=当前联赛
 Current_league.abbr=联赛
 
+#matchdetail
 foxtrick.matchdetail.midfield=中场
 foxtrick.matchdetail.attack=攻击
 foxtrick.matchdetail.defence=防守
@@ -634,7 +640,7 @@ notify.newForumMessage=有 %s 项致你的论坛回复.
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick 页面设置
+
 foxtrick.modules_allpages=在所有页面上运行的模块
 HTLanguageChanged=FoxTrick 检查到语言变化, FoxTrick 的语言现在被设为 %s.
 
@@ -884,6 +890,7 @@ status.disabled=已禁用
 prefs.screenshot=截屏
 
 # tabs in preferences page
+#tabs
 tab.main=主要
 tab.informationAggregation=信息聚合
 tab.shortcutsAndTweaks=快捷链接
@@ -903,6 +910,7 @@ foxtrick.prefs.captionHTCountry=国家
 foxtrick.prefs.captionShowOnStatusBar=状态栏图标
 foxtrick.prefs.captionCleanupBranch=清理首选项
 foxtrick.prefs.captionLoadSavePrefs=导出或导入首选项
+#statusbarpref
 foxtrick.prefs.statusbarpref=在状态栏中显示 FoxTrick 图标 (需要重启)
 foxtrick.prefs.labelCleanupBranch=重置首选项 (仅还原首选项, 不还原个人设置)
 foxtrick.prefs.labelDisableAll=禁用所有模块
