--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -11,21 +11,22 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=إضافة إختصار إلى التشكيلة في تاريخ مباريات اللاعب
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=التظليل على اللاعب في التشكيلة باللون الأصفر عند الولوج إلى صفحة التشكيلة بإستخدام الإختصار وإستبدال تظليل هاتريك.
+foxtrick.LineupShortcut.desc=إضافة إختصار إلى التشكيلة في تاريخ مباريات اللاعب
+foxtrick.LineupShortcut.HighlightPlayer.desc=التظليل على اللاعب في التشكيلة باللون الأصفر عند الولوج إلى صفحة التشكيلة بإستخدام الإختصار وإستبدال تظليل هاتريك.
 foxtrick.SmallerPages.desc=يقوم بتصغير أبعاد بعض الصفحات لتوافق الشاشات الصغيرة
 foxtrick.SmallerPages.ReduceBid.desc=نقل المزايدة بجانب المهارات وقص كل الأحرف للإبقاء على الأرقام فقط (كالمزايدة الحالية والوقت)
 foxtrick.ForumTemplates.desc=يسمح بتغيير رسائل المنتدى إلى قوالب للإستخدام فيما بعد (يعمل أيضا في الرسائل البريدية والتذاكر الإشرافية ومحرري سجل الزوار
 foxtrick.ForumTemplates.DefaultShow.desc=يظهر أو يخفي القوالب الخاصة بك بشكل إفتراضي
-foxtrick.ForumTemplates.CustomWidth.desc=يستخدم عرض مخصص لعرض عنواين القوالب (الإفتراضي 125 بكسل)
 foxtrick.ForumPreview.desc=يسمح بإظهار عرض لرسالة (يعمل أيضا في الرسائل البريدية والتذاكر الإشرافية والإعلانات وسجل الزوار)
 foxtrick.AddLeaveConfButton.desc=يقوم بإضافة زر 'ترك منتدى' لكل مجلدات المنتديات
 foxtrick.StarsCounter.desc=يقوم بإضافة العدد الكلي للنجوم لصفحة تشكيلة المباراة
 foxtrick.MoveLinks.desc=يقوم بتحريك دوري المدير وروابط العلم إلى تبويب الرسالة. ملاحظة: وظيفة 'إظهار الصور الرمزية والمعلومات' في هاتريك لابد أن تكون مفعلة ليحدث هذا التحريك!
+#AttVsDef
 foxtrick.AttVsDef.desc=يقوم بإضافة مقارنة بين الهجوم و الدفاع إلى صفحة المباراة
 foxtrick.AttVsDef.oldstyle.desc=النمط القديم
 foxtrick.AttVsDef.newstyle.desc=النمط الجديد
 foxtrick.AttVsDef.oldstyleifkseparated.desc=النمط القديم (تحديد منفصل للركلات الثابتة)
+#Ratings
 foxtrick.Ratings.desc=يقوم بإضافة تقييمات إلى صفحة المباراة
 foxtrick.Ratings.HatStats.desc=إحصائيات HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (مفصلة)
@@ -60,6 +61,7 @@ foxtrick.AlertCustomOff.Challenges.desc=Challenges
 foxtrick.AlertCustomOff.Guestbook.desc=Guestbook
 foxtrick.AlertCustomOff.MailToMe.desc=Mail to me
 foxtrick.AlertCustomOff.MyHTMessages.desc=MyHT messages
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Shows a median transfer price in transfer compare
 foxtrick.FlagCollectionToMap.desc=Shows a world map with all the countries which flags you have collected in each category
 foxtrick.TransferSearchFilters.desc=Allows for transfer list search filter templates
@@ -73,6 +75,7 @@ foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Personal markers (format with own userids): userId=1000 userId=1001 style='color:yellow !important;' userId=1002 style='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
 foxtrick.ForumYouthIcons.user_id.desc=Adds icon for UserID
@@ -88,6 +91,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
+#FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPostID.AddCopyIcon.desc=Adds an icon Copy PostId before first PostId
@@ -96,7 +100,6 @@ foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
 foxtrick.AlltidFlags.desc=Adds Alltid flags and links of users in a message header
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Link first to Hattrick's series page, if (hidden) manager avatar is on
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Link first to Alltid's series page
-foxtrick.LinksCustom.desc=Shows options to add custom links. Instructions: Checking this option adds 'add links' to existing foxtrick link boxes resp. 'remove' to existing own links. Click remove to remove an own link and add to get a dialog box to add a new link and icon. Icon should have 16x16 pixels. Unchecking this module here again hides those options. The custom links, however, are still being displayed.
 foxtrick.LinksLeague.desc=Adds some external links to the series page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
 foxtrick.LinksCountry.desc=Adds some external links to the country page
@@ -180,6 +183,7 @@ foxtrick.CustomMedals.desc=Replaces the new Hattrick medals with the old style o
 foxtrick.SeniorTeamShortCuts.desc=Adds coach and lastlineup links to senior teams
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Show only on other team pages
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Show on all pages
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Displays some helpful information in the player details
 foxtrick.ExtendedPlayerDetails.SWD.desc=Display contract duration as seasons - weeks - days
 foxtrick.ExtendedPlayerDetails.SW.desc=Display contract duration as seasons - weeks
@@ -220,6 +224,7 @@ foxtrick.SkinPlugin.Skin2.desc=Activate skin 2 (link style)
 foxtrick.CurrencyConverter.desc=Converting a HT currency
 foxtrick.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
 foxtrick.TickerColoring.desc=The different events displayed in the news ticker will be coloured.
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Adds shortcuts to the main shortcuts
 foxtrick.ExtraShortcuts.AddLeft.desc=Check to add icon left, uncheck to add them right
 foxtrick.ExtraShortcuts.AddSpace.desc=Increase space for shortcut icons
@@ -230,6 +235,7 @@ foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link to FoxTrick preferences page
 foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link to Hattrick Radio (Belgium/Netherlands) (Winamp)
 foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link to Hattrick Radio (Belgium/Netherlands) (Windows Media Player)
 foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link to Radio downtime (DACHL) (Winamp)
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
@@ -246,12 +252,10 @@ foxtrick.NewMail.desc=Highlight it if you receive new mails
 foxtrick.NewMail.CustomColor.desc=Custom color for new mail number. May require browser restart
 foxtrick.NewMail.HighlightNewMailIcon.desc=Highlight newmail icon in red. May require browser restart
 foxtrick.NewMail.HighlightNewForum.desc=Highlight new forum message number in the menu
-foxtrick.CopyTrainingReport.desc=Adds a Copy Training Report button to the youth training report page
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
-foxtrick.CopyScoutReport.desc=Adds a Copy Scout Comment button to the youthplayers detail page
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
-foxtrick.CopyPlayerSource.desc=Adds a Copy HTML source code (to be used in hattrick-youthclub.org) button to the youthplayers detail page
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Open hattrick-youthclub.org in new tab after copying
+foxtrick.CopyYouth.TrainingReport.desc=Adds a Copy Training Report button to the youth training report page
+foxtrick.CopyYouth.ScoutComment.desc=Adds a Copy Scout Comment button to the youthplayers detail page
+foxtrick.CopyYouth.PlayerSource.desc=Adds a Copy HTML source code (to be used in hattrick-youthclub.org) button to the youthplayers detail page
+
 foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
 foxtrick.MovePlayerSelectbox.desc=Moves players selectbox up on players detail page
 foxtrick.SeasonStats.desc=Shows some stats on the match archive pages
@@ -263,6 +267,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Highlight teams which changed or set line-up recently in next round table
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Highlight winning teams in last round table
 foxtrick.LeagueNewsFilter.gray_bots.desc=Gray ownerless teams in match tables
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Moves managers online up on region page. Caution! This gets very slow if the list of online players get over 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
@@ -293,16 +298,18 @@ foxtrick.SkillColoring.skill_select.desc=Show also numbers at transfer search i.
 foxtrick.SkillColoring.no_skill_links.desc=Hides the underlining and green font given by HTs
 foxtrick.BackgroundFixed.desc=Static background image.
 foxtrick.MatchIncome.desc=Match income in the match report
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=More space to the youth players page
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Hide youthskills which are unknown on youthplayers overview page
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Hide 'maximal' key word to gain more space particularly if facecards are enabled
 foxtrick.SkillTable.desc=Show skills of players as a table.
 foxtrick.SkillTable.OtherTeams.desc=Enable for other teams
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
 foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format
-foxtrick.OnPagePrefs.desc=Show a box in the sidebar for preferences of modules running on the current page.
+#CountryList
 foxtrick.CountryList.desc=Modifications for country names
 foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
 foxtrick.CountryList.TeamPage.desc=Displays a textlink to the league before the region and series on team page
@@ -311,7 +318,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Removes the image link to the league on 
 foxtrick.MatchTables.desc=Removes white space on match tables on simple design
 foxtrick.MatchTables.RemoveTime.desc=Removes match time on current matches table
 foxtrick.YouthPromotes.desc=Shows days to promote a youth player
-foxtrick.htmsStatistics.desc=Adds statistics on score result on matches.
+foxtrick.HTMSPrediction.desc=Adds statistics on score result on matches.
 foxtrick.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
@@ -319,13 +326,11 @@ foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in f
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=No confirmation before stripping links
 foxtrick.LeagueAndMatchChat.desc=Adds link for external Chat on National Cup and Federation page, as well as, on series, youth series, senior and youth match pages. (if there is no greeting, the provider is down)
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Open Yaplet chat in new window
-foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=Open Yaplet chat within Hattrick page
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Open Gabbly chat in new window
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Choose your nickname for Chat
 foxtrick.RapidId.desc=A convenient input box on the top of page to view team, player, etc. by id
 foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
 foxtrick.LocalTime.desc=Show optional local time instead of Hattrick time. Clicking on the clock switches between the two options
-foxtrick.LocalTime.DefaultLocal.desc=Show local time by default
 foxtrick.ForumThreadAutoIgnore.desc=Automatically ignore forum topics with selected tags (topics with [Tag] or {Tag}).
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
@@ -593,6 +598,7 @@ Current_club.abbr=Club
 Current_league=Current league
 Current_league.abbr=League
 
+#matchdetail
 foxtrick.matchdetail.midfield=Midfield
 foxtrick.matchdetail.attack=Attack
 foxtrick.matchdetail.defence=Defence
@@ -628,8 +634,6 @@ foxtrick.linkscustom.help=Help
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/alltid.org\/league\/[leagueid] would always lead you to the Alltid page of the series you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
 foxtrick.matches.income=Income:
-foxtrick.newmailtoyou=new mail(s) to you
-foxtrick.newforumtoyou=new forum message(s)
 foxtrick.tweaks.Birthdays=Birthdays
 foxtrick.tweaks.BirthdayToday=Birthdays today
 foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
@@ -645,7 +649,7 @@ ntpeek.title=Recent national matches
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick On-page Prefs
+
 foxtrick.modules_allpages=Modules running on all pages
 HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
 
@@ -796,10 +800,10 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federation Chat
 
 
 #htms
-foxtrick.htmsStatistics.prediction=Predicted result
-foxtrick.htmsStatistics.windrawloss=win/draw/loss
-foxtrick.htmsStatistics.linkcaption=Match Analysis by HTMS
-foxtrick.htmsStatistics.changePrediction=Change prediction
+HTMSPrediction.prediction=Predicted result
+HTMSPrediction.windrawloss=win/draw/loss
+HTMSPrediction.title=Match Analysis by HTMS
+HTMSPrediction.changePrediction=Change prediction
 
 # HTMSPoints
 HTMSPoints=HTMS Points:
@@ -856,16 +860,17 @@ status.enabled=enabled, but not active on %s
 status.disabled=disabled
 
 prefs.screenshot=Screenshot
-foxtrick.prefs.MainTab=Main
-foxtrick.prefs.ShortcutsTab=Shortcuts and Add-ons
-foxtrick.prefs.PresentationTab=Presentation and Tweaks
-foxtrick.prefs.MatchesTab=Matches
-foxtrick.prefs.ForumTab=Forum
-foxtrick.prefs.LinksTab=Links
-foxtrick.prefs.AlertTab=Alert
-foxtrick.prefs.AboutTab=About
-foxtrick.prefs.ChangesTab=Changes
-foxtrick.prefs.HelpTab=Help
+#tabs
+tab.main=Main
+tab.shortcutsAndTweaks=Shortcuts and Add-ons
+tab.presentation=Presentation and Tweaks
+tab.matches=Matches
+tab.forum=Forum
+tab.links=Links
+tab.alert=Alert
+tab.about=About
+tab.changes=Changes
+tab.help=Help
 foxtrick.prefs.basicPreferences=Basic Preferences
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTDateformat=Date format
@@ -873,6 +878,7 @@ foxtrick.prefs.captionHTCountry=Country
 foxtrick.prefs.captionShowOnStatusBar=Status bar icon
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
+#statusbarpref
 foxtrick.prefs.statusbarpref=Display FoxTrick icon on status bar (requires restart)
 foxtrick.prefs.labelCleanupBranch=Restore default preferences (Only preferences, no personal settings.)
 foxtrick.prefs.labelDisableAll=Disable all modules
