--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -11,21 +11,23 @@
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.FoxtrickLineupShortcut.desc=Közvetlen hivatkozást ad a felálláshoz a játékos mérkőzésarchívumában
-foxtrick.FoxtrickLineupShortcut.HighlightPlayer.desc=Ha a felállás oldalra a hivatkozáson keresztül jutottál, sárga színnel emeli ki a felállásban található játékost, és helyettesíti a HT saját kiemeléseit
+foxtrick.LineupShortcut.desc=Közvetlen hivatkozást ad a felálláshoz a játékos mérkőzésarchívumában
+foxtrick.LineupShortcut.HighlightPlayer.desc=Ha a felállás oldalra a hivatkozáson keresztül jutottál, sárga színnel emeli ki a felállásban található játékost, és helyettesíti a HT saját kiemeléseit
 foxtrick.SmallerPages.desc=Lekicsinyíti néhány oldal méretét, hogy kisebb képernyőn is megtekinthetők legyenek
 foxtrick.SmallerPages.ReduceBid.desc=A licitet a képességek mellé illeszti, és levágja a sorokat, csak a számokat (pl. az aktuális licitet és az időt) hagyja meg
 foxtrick.ForumTemplates.desc=Lehetővé teszi, hogy a fórumos hozzászólásokból sablon készüljön, amelyet később fel lehet használni (levelek, hibajegyek, vendégkönyv-bejegyzések esetén és szerkesztőknek is használható)
 foxtrick.ForumTemplates.DefaultShow.desc=Elrejti, illetve megjeleníti az alapértelmezett sablonokat
-foxtrick.ForumTemplates.CustomWidth.desc=Egyedi szélességgel jeleníti meg a sablonok címeit (az alapértelmezett szélesség: 125 (pixel))
+
 foxtrick.ForumPreview.desc=Megjeleníti a hozzászólás előnézetét (levelek, hibajegyek, hirdetések és vendégkönyv-bejegyzések esetén is működik)
 foxtrick.AddLeaveConfButton.desc=Minden fórummappához hozzáad egy „A fórum elhagyása” feliratú gombot
 foxtrick.StarsCounter.desc=Megjeleníti az összcsillagszámot a Felállás lapon
 foxtrick.MoveLinks.desc=A menedzserek bajnokságára és országára mutató hivatkozásokat az üzenet fejlécébe helyezi át. Megjegyzés: ehhez be kell jelölnöd „Az avatarok és az adatok megjelenítése” lehetőséget a Hattrick Fórumbeállításai között!
+#AttVsDef
 foxtrick.AttVsDef.desc=Hozzáadja a támadások/védelmek összehasonlítását a mérkőzésriporthoz
 foxtrick.AttVsDef.oldstyle.desc=korábbi stílus
 foxtrick.AttVsDef.newstyle.desc=új stílus
 foxtrick.AttVsDef.oldstyleifkseparated.desc=korábbi stílus (a közvetett pontrúgások külön)
+#Ratings
 foxtrick.Ratings.desc=Megjeleníti az alábbi értékeléseket a mérkőzésriport végén
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (részletes)
@@ -60,6 +62,7 @@ foxtrick.AlertCustomOff.Challenges.desc=Kihívások
 foxtrick.AlertCustomOff.Guestbook.desc=Vendégkönyv
 foxtrick.AlertCustomOff.MailToMe.desc=Nekem írott levelek
 foxtrick.AlertCustomOff.MyHTMessages.desc=Főoldali Hattrick-hírek
+#MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Megjeleníti a középárat az árbecslésben
 foxtrick.FlagCollectionToMap.desc=Megjelenít egy világatlaszt az általad az egyes kategóriákban gyűjtött zászlókkal
 foxtrick.TransferSearchFilters.desc=A segítségével a játékospiacon használható szűrősablonokat hozhatsz létre
@@ -73,6 +76,7 @@ foxtrick.StaffMarker.desc=Kiemeli a HT-stábtagok nickneveit a fórumokon és a 
 foxtrick.StaffMarker.manager.desc=Kiemeli a HT-stábtagok nickneveit a csapatoldalakon.
 foxtrick.StaffMarker.own.desc=Személyes jelölők (saját felhasználói azonosítót tartalmazó formátum): userId=1000 userId=1001 stílus='color:yellow !fontos;' userId=1002 stílus='background-color:yellow;)
 foxtrick.StaffMarker.flag.desc=Zászlókat rendel a legördülő listában lévő felhasználókhoz
+#ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Megjelenít egy hivatkozássávot az ifiakadémiához (levelek, sajtónyilatkozatok, vendégkönyvek és hirdetések esetén is működik)
 foxtrick.ForumYouthIcons.q.desc=Ikont ad az idézést jelölő címkéhez, ha addig nem volt
 foxtrick.ForumYouthIcons.user_id.desc=Ikont ad a felhasználói azonosítóhoz
@@ -88,6 +92,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Ikont ad az ifibajnokság-azonosító
 foxtrick.ForumYouthIcons.enlarge_input.desc=Megnöveli a szövegmezők méretét, így könnyebb beléjük írni
 foxtrick.ForumYouthIcons.pre.desc=Ikont ad a fórum előnézetéhez
 foxtrick.ForumYouthIcons.table.desc=Ikont ad a csoporttabellához. Az egyedi címkék hagyományos kifejezéseket is tartalmazhatnak (maszk \ a következővel: \, pl. \\.).
+#FormatPostingText
 foxtrick.FormatPostingText.desc=A FoxTrick HT-ML-tageket HTML-tagekre (azaz „pre” elemekre) cseréli
 foxtrick.CopyPostID.desc=Hozzáad egy hivatkozást egy hozzászólás számának kimásolásához
 foxtrick.CopyPostID.AddCopyIcon.desc=Megjelenít egy „A hozzászólás számának vágólapra másolása” ikont az első hozzászólás száma előtt
@@ -96,7 +101,7 @@ foxtrick.ShowForumPrefButton.desc=A fórumbeállításokra mutat a fórumoldalak
 foxtrick.AlltidFlags.desc=Mindkét fórumozóhoz megjeleníti az Alltidos zászlókat és hivatkozásokat az üzenet fejlécében
 foxtrick.AlltidFlags.LinkFlagToLeague.desc=Elsőként a Hattrick bajnoki oldalára mutat, ha a (rejtett) menedzseravatar be van kapcsolva
 foxtrick.AlltidFlags.LinkFlagToAlltid.desc=Elsőként az Alltid bajnoki oldalára mutat
-foxtrick.LinksCustom.desc=Megjeleníti az egyedi hivatkozások hozzáadási lehetőségeit. Utasítások: a lehetőség bejelölése után a„Hivatkozások hozzáadása” elem megjelenik a meglévő Foxtrick-hivatkozások mezőjében, a „Törlés” pedig a meglévő saját hivatkozásoknál. Saját hivatkozás törléséhez kattints a Törlés elemre, új hivatkozás vagy ikon hozzáadásához pedig a Hozzáadás elemre. Az ikonok mérete 16 x 16 pixel lehet. Ha újra kiveszed a pipát innen, a lehetőségek rejtve maradnak. Az egyedi hivatkozásaid azonban megmaradnak.
+
 foxtrick.LinksLeague.desc=Külső hivatkozásokat ad a bajnoki oldalhoz
 foxtrick.LinksTeam.desc=Külső hivatkozásokat ad a csapat főoldalához
 foxtrick.LinksCountry.desc=Külső hivatkozásokat ad az ország oldalához
@@ -180,6 +185,7 @@ foxtrick.CustomMedals.desc=Régi stílusúra cseréli az új stílusú Hattrick-
 foxtrick.SeniorTeamShortCuts.desc=Megjeleníti az edzőre és a legutóbbi felállásra mutató hivatkozást a nagycsapatnál
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Megjelenítés csak más csapatoldalakon
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Megjelenítés az összes oldalon
+#ExtendedPlayerDetails
 foxtrick.ExtendedPlayerDetails.desc=Hasznos információkat jelenít meg a játékosok adatlapján
 foxtrick.ExtendedPlayerDetails.SWD.desc=Az alábbi módon jeleníti meg a klubban töltött időt: szezon(ok) – hét/hetek – nap(ok)
 foxtrick.ExtendedPlayerDetails.SW.desc=Az alábbi módon jeleníti meg a klubban töltött időt: szezon(ok) – hét/hetek
@@ -220,6 +226,7 @@ foxtrick.SkinPlugin.Skin1.desc=A 2-es külső aktiválása (a stílus linkelése
 foxtrick.CurrencyConverter.desc=Vált a HT-s pénznemek között
 foxtrick.MovePlayerStatement.desc=A játékosok nyilatkozatát a játékosok arcképéhez helyezi át. Ha az arcképek ki vannak kapcsolva, a nyilatkozatok nem jelennek meg.
 foxtrick.TickerColoring.desc=Színezéssel jelzi a különböző eseményeket a hírablakban
+#ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Parancsikonokat ad a fő parancsikonokhoz
 foxtrick.ExtraShortcuts.AddLeft.desc=Ha bejelölöd, az ikonokat a bal, ha pedig törlöd a jelölést, a jobb oldalra rendezi
 foxtrick.ExtraShortcuts.AddSpace.desc=Megnöveli a helyet a parancsikonokhoz
@@ -230,6 +237,7 @@ foxtrick.ExtraShortcuts.Prefs.desc=Hivatkozás a FoxTrick-beállítások oldalho
 foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Hivatkozás a Hattrick Radióhoz (Belgium/Hollandia) (Winamp)
 foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Hivatkozás a Hattrick Radióhoz (Belgium/Hollandia) (Windows Media Player)
 foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Hivatkozás a Radio downtime-hoz (Németország, Ausztria, Svájc és Liechtenstein) (Winamp)
+#CopyMatchID
 foxtrick.CopyMatchID.desc=Kimásolja a mérkőzésazonosítót, amikor a bajnoki/kupa-/barátságos mérkőzés ikonra kattintasz a Mérkőzések vagy a Mérkőzések archívuma oldalon. Támogatóknál az Egymás ellen oldalon („A legutóbbi mérkőzések” és az „Egymás ellen” lapon) is használható.
 foxtrick.HeaderFix.desc=Görgetés közben rögzíti a fejlécet (más Hattrick-oldalakon is működik)
 foxtrick.HeaderFix.FixLeft.desc=Görgetés közben rögzíti az almenüt
@@ -246,12 +254,12 @@ foxtrick.NewMail.desc=Színezéssel jelzi, ha új HT-mélt kapsz
 foxtrick.NewMail.CustomColor.desc=Egyedi színnel jelöli az újonnan érkezett HT-mailek számát. A böngésző újraindítását igényelheti.
 foxtrick.NewMail.HighlightNewMailIcon.desc=Pirossal emeli ki a postaláda ikont. A böngésző újraindítását igényelheti.
 foxtrick.NewMail.HighlightNewForum.desc=Kiemeli az új fórumüzenetek számát a menüben
-foxtrick.CopyTrainingReport.desc=Egy „Az edzésriport másolása” feliratú gombot ad az ifiakadémia Edzés oldalához
-foxtrick.CopyTrainingReport.OpenHTYpage.desc=Másolás után új lapon nyitja meg a hattrick-youthclub.org oldalt
+foxtrick.CopyYouth.TrainingReport.desc=Egy „Az edzésriport másolása” feliratú gombot ad az ifiakadémia Edzés oldalához
+
 foxtrick.CopyScoutReport.desc=Egy „A játékosmegfigyelő kommentárjainak másolása” feliratú gombot ad az ifijátékosok adatlapjához
-foxtrick.CopyScoutReport.OpenHTYpage.desc=Másolás után új lapon nyitja meg a hattrick-youthclub.org oldalt
+
 foxtrick.CopyPlayerSource.desc=Egy (a hattrick-youthclub.org oldalon használható) „A HTLM-forráskód kimásolása” gombot ad az ifijátékosok adatlapjához
-foxtrick.CopyPlayerSource.OpenHTYpage.desc=Másolás után új lapon nyitja meg a hattrick-youthclub.org oldalt
+
 foxtrick.PlayerBirthday.desc=Megjeleníti a soron következő és nemrég elmúlt játékos-születésnapokat a nagycsapat Áttekintés oldalán
 foxtrick.MovePlayerSelectbox.desc=Felülre helyezi a játékosokhoz tartozó legördülő menüket a játékosok adatlapján
 foxtrick.SeasonStats.desc=Statisztikákat jelenít meg a Meccsarchívum oldalon
@@ -263,6 +271,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Csak a felállás módosításait 
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=A Következő forduló táblázatban kiemeli a nemrégiben felállást beállító vagy módosító csapatokat
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Kiemeli a győztes csapatok nevét az Utolsó forduló táblázatban
 foxtrick.LeagueNewsFilter.gray_bots.desc=Kiszürkíti a tulajdonos nélküli csapatok nevét a mérkőzéstáblázatokban
+#MoveManagerOnline
 foxtrick.MoveManagerOnline.desc=Felülre helyezi az online menedzserek listáját a Régiók oldalon. Figyelem! Ha az online játékosok száma eléri a 100-at, a folyamat igencsak lelassul!
 foxtrick.TeamPopupLinks.TeamLinks.desc=Előugró hivatkozásokat ad a csapathivatkozásokhoz
 foxtrick.TeamPopupLinks.UserLinks.desc=Előugró hivatkozásokat ad a menedzserhivatkozásokhoz
@@ -293,16 +302,19 @@ foxtrick.SkillColoring.skill_select.desc=A képességszinteket számokkal – pl
 foxtrick.SkillColoring.no_skill_links.desc=Elrejti az alapértelmezett aláhúzásokat és zöld színű betűket
 foxtrick.BackgroundFixed.desc=Állandó háttérkép
 foxtrick.MatchIncome.desc=Mérkőzésbevétel a meccsriport oldalán
+#YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Több hely az ifijátékosok oldalán
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Az ismeretlen szintű képességek elrejtése az ifijátékosok áttekintése oldalon
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=A „maximum” szó elrejtése, hogy több hely legyen az oldalon, különösen, ha az arcképek megjelenítése engedélyezve van
 foxtrick.SkillTable.desc=A játékosok képességeinek táblázatként történő megjelenítése.
 foxtrick.SkillTable.OtherTeams.desc=Megjelenítés más csapatoknál is
+#HighlightCupwins
 foxtrick.HighlightCupwins.desc=A győztes csapatok kiemelése a Kupamérkőzések oldalon
 foxtrick.HighlightCupwins.HighlightCupsets.desc=A meglepő (az alacsonyabban rangsorolt által megnyert) mérkőzések kiemelése
 foxtrick.SkillTranslation.desc=Az angol elnevezések feltüntetése a képességek mellett a Súgóban, illetve az Elnevezések mellékletben
 foxtrick.ReadHtPrefs.desc=A nyelv, az ország és a dátumformátum automatikus érzékelése
-foxtrick.OnPagePrefs.desc=Megjelent egy mezőt az oldalsávon az adott oldalon érvényes modulbeállításokhoz.
+
+#CountryList
 foxtrick.CountryList.desc=Országnévváltozatok
 foxtrick.CountryList.SelectBoxes.desc=Az angol nyelvű országneveket az eredeti nevekre cseréli
 foxtrick.CountryList.TeamPage.desc=Megjelenít egy szöveges hivatkozást az országhoz a csapatoldalon lévő régió és csoport előtt
@@ -311,7 +323,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Törli az országra mutató képi hivatk
 foxtrick.MatchTables.desc=Törli a whitespace karaktereket a közvetítésekből (ha egyszerű arculatot használsz)
 foxtrick.MatchTables.RemoveTime.desc=Törli a meccsperceket az aktuális közvetítésből
 foxtrick.YouthPromotes.desc=Megjeleníti az ifijátékosok felhúzásáig hátralévő napok számát
-foxtrick.htmsStatistics.desc=A végeredményre vonatkozó statisztikákat ad a mérkőzésekhez.
+foxtrick.HTMSPrediction.desc=A végeredményre vonatkozó statisztikákat ad a mérkőzésekhez.
 foxtrick.HighlightOwnerless.desc=Kiemeli a tulajdonos nélküli csapatokat a Csoport oldalon
 foxtrick.LastLogin.desc=Megjeleníti a legutóbbi belépés óta eltelt időt a menedzseroldalon
 foxtrick.TransferCompareSort.desc=A fejlécre kattintva – a TSI, az ár vagy a forma alapján – rendezni tudod az Árbecslésben kapott találatokat
@@ -319,13 +331,12 @@ foxtrick.ForumStripHattrickLinks.desc=Eltávolítja a szerverszámokat a hivatko
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Nem kér jóváhagyást a szerverszámok eltávolítása előtt
 foxtrick.LeagueAndMatchChat.desc=Külső chates hivatkozást ad A kupa, illetve a föderációk oldalához, illetve a csoportok, az ifibajnokságok, illetve a nagycsapat és az ificsapat mérkőzéseinek oldalához. (Ha a rendszer nem küld üdvözlő üzenetet, a szolgáltató leállt.)
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Új ablakban nyitja meg a Yaplet csevegőprogramot
-foxtrick.LeagueAndMatchChat.OpenYapletFrame.desc=A Hattrick oldalain nyitja meg a Yaplet csevegőprogramot
-foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Új ablakban nyitja meg a Gabbly csevegőprogramot
+foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Új ablakban nyitja meg a Gabbly csevegőprogramot
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Chates nicknév kiválasztása
 foxtrick.RapidId.desc=Kényelmesen használható beviteli mező a csapatok, játékosok stb. azonosító alapján történő megtekintéséhez
 foxtrick.YouthSeriesEstimation.desc=A találatok között megbecsüli az éppen szünetelő ifibajnokságok indulásának időpontját.
 foxtrick.LocalTime.desc=A helyi időt jeleníti meg a Hattrick-idő helyett. Az órára kattintva válthatsz a két lehetőség között.
-foxtrick.LocalTime.DefaultLocal.desc=A helyi idő megjelenítése alapértelmezettként
+
 foxtrick.ForumThreadAutoIgnore.desc=Automatikusan letiltja a kijelölt címkékkel ([címke] vagy {címke}) rendelkező fórumtémákat.
 foxtrick.ForumThreadAutoIgnore.Tags.desc=A címkék listája, pl.: NT (válogatott), idea (ötletek), bug (hibák). A címkéket vessző választja el, és megkülönböztetik a kis- és nagybetűket.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=A topikok engedélyezőlistája azonosítók szerint (azonosító = a pont előtti rész). Az engedélyezőlistán szereplő témák nem kerülnek letiltásra. Vesszők választják el őket egymástól.
@@ -595,6 +606,7 @@ Current_club.abbr=Klub
 Current_league=jelenlegi bajnokság
 Current_league.abbr=Bajn.
 
+#matchdetail
 foxtrick.matchdetail.midfield=Középpálya
 foxtrick.matchdetail.attack=Támadás
 foxtrick.matchdetail.defence=Védelem
@@ -630,8 +642,8 @@ foxtrick.linkscustom.help=Súgó
 foxtrick.linkscustom.helptext=Ez csak a szerkesztő mód. A szerkesztő és a normál mód között a mező fejlécére kattintva tudsz váltani. A saját hivatkozásaid csak normál módban működnek rendesen. A külső statikus hivatkozások hozzáadása egyszerű: csak írd be a teljes URL-címet (pl. http: \/\/alltid.org\/league\/427\/). Belső statikus hivatkozások hozzáadásánál hagyd ki a kiszolgálóra utaló részt (pl. \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Azonosítókra csak a ritkább dinamikus hivatkozások esetében van szükség. Az azonosítókkal a hivatkozások dinamikusan változnak, és felhasználják azt az információt is, hogy melyik oldalon vagy. Pl. a http:\/\/alltid.org\/league\/[leagueid] mindig annak a csoportnak az Alltid-oldalára visz, amelyet éppen megtekintettél a Hattrickben. Az egyes oldalakhoz felhasználható azonosítók felsorolását a legördülő menüben találod. Csak azokat tudod felhasználni, amelyek fel vannak sorolva azon az oldalon, ahová a saját hivatkozásodat szeretnéd hozzáadni. A szövegmezőben létrehozott szöveg mindössze egyszerű sablon. Azonosítót Te magad is beírhatsz (a [] felhasználásával).
 foxtrick.linkscustom.helptext2=A hivatkozásokat exportálhatod és megoszthatod. Ehhez kattints az Exportálás gombra, és a hivatkozás mentéséhez válaszd ki a fájlt. A hivatkozások az adott fájlhoz csatlakoznak, így egy fájllal több hivatkozást is menteni tudsz. A hivatkozások importálásához nyisd meg a Beállítások párbeszédpanelt, és válaszd ki „A beállítások importálása” lehetőséget. Importálni csak a kiválasztott fájlban megjelenő adatokat lehet, amelyek ebben az esetben a Te hivatkozásaid. A korábbi hivatkozásaid nem törlődnek.
 foxtrick.matches.income=Bevétel:
-foxtrick.newmailtoyou=új üzenet érkezett
-foxtrick.newforumtoyou=új fórumüzenet(ek)
+
+
 foxtrick.tweaks.Birthdays=Születésnapok
 foxtrick.tweaks.BirthdayToday=Mai születésnapok
 foxtrick.tweaks.BirthdayLastWeek=Születésnapok a múlt héten
@@ -647,7 +659,7 @@ ntpeek.title=A legutóbbi válogatott mérkőzések
 
 htLive=HT Live
 
-foxtrick.onpagepreferences=FoxTrick-beállítások az oldalon
+
 foxtrick.modules_allpages=Minden oldalon érvényes modulműködés
 HTLanguageChanged=A FoxTrick azt érzékelte, hogy módosítottad a nyelvet. A FoxTrick nyelve jelenleg a(z) %s.
 
@@ -798,10 +810,10 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non-HT föderációs chat
 
 
 #htms
-foxtrick.htmsStatistics.prediction=Becsült eredmény
-foxtrick.htmsStatistics.windrawloss=győzelem/döntetlen/vereség
-foxtrick.htmsStatistics.linkcaption=Mérkőzéselemzés HTMS segítségével
-foxtrick.htmsStatistics.changePrediction=A becslés módosítása
+HTMSPrediction.prediction=Becsült eredmény
+HTMSPrediction.windrawloss=győzelem/döntetlen/vereség
+HTMSPrediction.title=Mérkőzéselemzés HTMS segítségével
+HTMSPrediction.changePrediction=A becslés módosítása
 
 # HTMSPoints
 HTMSPoints=HTMS-pontok:
@@ -866,16 +878,17 @@ status.enabled=be van kapcsolva, de itt nem aktív: %s
 status.disabled=ki van kapcsolva
 
 prefs.screenshot=Képernyőfotó
-foxtrick.prefs.MainTab=Főmenü
-foxtrick.prefs.ShortcutsTab=Parancsikonok és kiegészítők
-foxtrick.prefs.PresentationTab=Megjelenítés és finombeállítások
-foxtrick.prefs.MatchesTab=Mérkőzések
-foxtrick.prefs.ForumTab=Fórumok
-foxtrick.prefs.LinksTab=Hivatkozások
-foxtrick.prefs.AlertTab=Figyelmeztetések
-foxtrick.prefs.AboutTab=Névjegy
-foxtrick.prefs.ChangesTab=Módosítások
-foxtrick.prefs.HelpTab=Súgó
+#tabs
+tab.main=Főmenü
+tab.shortcutsAndTweaks=Parancsikonok és kiegészítők
+tab.presentation=Megjelenítés és finombeállítások
+tab.matches=Mérkőzések
+tab.forum=Fórumok
+tab.links=Hivatkozások
+tab.alert=Figyelmeztetések
+tab.about=Névjegy
+tab.changes=Módosítások
+tab.help=Súgó
 foxtrick.prefs.basicPreferences=Alapbeállítások
 foxtrick.prefs.captionHTLanguage=Nyelv
 foxtrick.prefs.captionHTDateformat=Dátumformátum
@@ -883,6 +896,7 @@ foxtrick.prefs.captionHTCountry=Ország
 foxtrick.prefs.captionShowOnStatusBar=Állapotsáv-ikon
 foxtrick.prefs.captionCleanupBranch=Tárolt beállítások
 foxtrick.prefs.captionLoadSavePrefs=A beállítások exportálása vagy importálása
+#statusbarpref
 foxtrick.prefs.statusbarpref=A FoxTrick ikon megjelenítése az állapotsávon (újraindítást igényel)
 foxtrick.prefs.labelCleanupBranch=Az alapértelmezett beállítások visszaállítása (csak az alapbeállításokra vonatkozik, a személyes beállításokra nem).
 foxtrick.prefs.labelDisableAll=Az összes modul kikapcsolása
